令和三年度授業分更新

--- a/01.5.md
+++ b/01.5.md
@@ -1,2 +1,18 @@
 # 読書案内
 
+・この後、倫理分野の第二章から古今東西の思想を取り扱う  
+・その際、参考になる本をいくつか紹介しておく  
+・ちなみにだが、文系の学者というのは日本語がへっっっっっっったくそな人が大変多い  
+・歴史学者も酷いが、哲学者もなかなか酷いのが多い  
+・その為、最初から哲学者の書いた「哲学入門」みたいなのを読むとだいたい死ぬ  
+・という事で、少なくとも大学の教授とかやってないような人の本を中心に選んだ  
+  
+・飲茶著『史上最強の哲学入門』（河出文庫）  
+・飲茶著『史上最強の哲学入門　東洋編』（河出文庫）  
+⇒恐らくこの世で一番分かりやすい哲学入門。倫理の授業の時間使って皆でこれ読んで終わりでいいんじゃない？　ってなるぐらいよくできているし、分かりやすい。まずはここから入門するのをお勧めする。著者が『グラップラー刃牙』のファンで表紙に刃牙の作者の絵を使ってる程度にはファンキーな本なので、堅苦しいの抜きにして読める  
+  
+・出口治郎著『哲学と宗教全史』（ダイヤモンド社）  
+⇒「倫理の授業の時間使って皆でこれ読んで終わりでいいんじゃない？」シリーズその２。古今東西の思想（哲学宗教問わず）を時系列に網羅している良著。この本に書いてある知識をしっかり頭に入れておけば、文学部の哲学科に進んでも困らないだろう。文章は平易だがそれでも何の知識もなく突撃すると討死しかねないので、先に『史上最強』シリーズを読んでおくと良い  
+  
+・ポール・ジョンション著『ソクラテス　われらが時代の人』（日経BP）  
+⇒「思想史の大まかな流れについての概説書はもう読んだから、特定の哲学者にスポットを当てて詳しく解説したような本を見てみたい」という人に、最初の一冊としてお勧めしたい本。  
