--- a/01_00.md
+++ b/01_00.md
@@ -1,2 +1,5 @@
 # 倫理分野第一章　青年期の課題
 
+　~~倫理分野のつまんないところ~~  
+　倫理分野では、大学で言えば哲学とか倫理学、及び心理学と言われるような分野を主に扱う。ところで、高校の公民を学ぶのは普通、十五歳から十八歳の、いわゆる青年と呼ばれる時期である。そこで、学習者の役に立つように…と、先に挙げたような学問の中から「青年期ってどんなもんなんですかね」「青年期ってどんな事が起こるんですかね」というような話を抽出したものが、この第一章となる。  
+　勿論、全く同じ人間というのは一人として存在しない。故に百人いれば百通りの青年期がある。しかし皆同じホモ・サピエンス・サピエンスである以上、青年期にはある程度の類型が見出されるのも当然である。故に、本章の知識が役立つ事もあるだろう。本人の人生だけでなく、年下の友人との付き合いや子育ての際に役立つ可能性も、無いとは言えない。  
