--- a/01_01.md
+++ b/01_01.md
@@ -1,2 +1,190 @@
-# 人間とは
-
+# 人間とは  
+  
+・これから、青年期の話をする  
+・その青年期は、勿論、人間の青年期である  
+⇒「じゃあそもそも、その人間ってどんな存在なの？」「人間の心理ってどうなってんの？」という話  
+  
+  
+## ●人間の本質  
+  
+|                            |                                              |  
+|----------------------------|----------------------------------------------|  
+|考えた人                    |概念                                          |  
+|【アリストテレス】          |【ポリス的動物】                              |  
+|カール・フォン・【リンネ】  |【ホモ・サピエンス（叡智人、英知人）】        |  
+|アンリ・ルイ・【ベルクソン】|【ホモ・ファーベル（工作人）】                |  
+|ヨハン・【ホイジンガ】      |【ホモ・ルーデンス（遊戯人）】                |  
+|ミルチャ・エリアーデ        |［ホモ・レリギオースス（宗教人）］            |  
+|エルンスト・カッシーラー    |［ホモ・シンボリクス(アニマル・シンボリクム)］|  
+  
+  
+・当然と言えば当然だが、「人間とは何か？」というのは古代以来、学問の題材の一つである  
+・「人間の本質とは何か？」「人間と動物を分けるものは何か？」と色々考えられてきた  
+  
+・古代ギリシア哲学の巨人【アリストテレス】は、人間を【ポリス的動物】と評した  
+・ポリスとは、古代ギリシア世界に多数あった、都市国家の事である  
+⇒即ち、人間はポリス（＝都市国家）のような社会を作る動物である。言い換えれば、人間は社会的な動物である、と述べた。実際、人が複数いるところには必ずと言っていいほど、何かしらの形の社会が生まれる  
+  
+・十八世紀に生きた“分類学の父”カール・フォン・【リンネ】は、人を【ホモ・サピエンス】と呼んだ  
+※彼は、現代まで続く植物の分類を創始したスウェーデン王国の学者である。今でも植物を「●●科●●属●●種」みたいに分類するが、当時知られていたあらゆる植物に対し、初めてこの分類を行ったのがリンネ。小中高の理科で学ぶ植物の分類は、いわばこの人の成果の延長にある  
+・彼の言うホモ・サピエンスは“賢い人”、つまり叡智人を意味する  
+⇒即ち、人間とは知性を持つ者であり、この点で他の動物と異なる。言い換えれば、世界の真理を明らかにする理性こそが、人間の本質である…という考え方  
+  
+・近代哲学者のアンリ・ルイ・【ベルクソン】は、人を【ホモ・ファーベル】と呼んだ  
+・彼の言うホモ・ファーベルは“道具を作る人”、つまり“工作人”を意味する  
+⇒即ち、人間の本質とは「物を作るような創造活動」であるとした。また、ホモ・サピエンス的な知性と理性を重視した在り方というのは、その創造活動を内省、反省する中で出てくるものである、としている  
+※実際、人間は道具を作り、使うほぼ唯一の動物である。少なくとも、機械を作り車を走らせ飛行機を飛ばし、という次元で道具を作り、使うのは人間だけと言える  
+  
+  
+・歴史学の大家ヨハン・【ホイジンガ】は、人を【ホモ・ルーデンス】と呼んだ  
+・彼の言うホモ・ルーデンスは“遊ぶ人”、つまり“遊戯人”を意味する  
+⇒勿論、遊ぶという意味では他の動物も遊ぶ。例えばイルカは他の動物を嬲り殺しにして遊ぶし、チンパンジーは他の動物をレイプして遊ぶ。しかし、“遊ぶ”という行為を文化の次元へ昇華させるのは、人間だけである。即ち、遊ぶ事こそが人間の本質である、という考え方  
+※ぶっちゃけ、大学の教授の一番の仕事は“研究”という名の“遊び”である。大学教授が一番しなければならない仕事は勿論研究な訳だが、彼らは基本、自分の好きな事を研究している。だから言ってみれば、遊びである。しかしその遊びを真摯にやる事によって、学問が発展し、ひいては社会が発展する  
+例１：歴史学者は、基本、古文書を読むのが趣味である。彼らは古文書を読むという趣味を仕事にしている。そのお陰で、我々は過去に何があったかが分かり、また過去の成功や失敗から学ぶ事もできる  
+例２：蓮の葉は、雨に濡れない。雨粒が当たっても、全て水滴になって滑り落ちてしまう。ある植物学者が「不思議だなー」と思って調べた結果、蓮の葉の表面の構造が原因だと分かった。そして現代では、その蓮の葉の構造を真似して、テフロン加工のフライパンや防水スプレーが作られている。趣味で調べただけの、一見役に立たない知識が、思わぬところで役に立ったという形  
+  
+・宗教学の大家ミルチャ・エリアーデは、人を［ホモ・レリギオースス］と呼んだ  
+・彼の言うホモ・レリギオーススは“神を信仰する人間”、即ち“宗教人”を意味する  
+⇒確かに、神という（恐らくは空想上の）存在を作り出し、信仰するのは人間ぐらいなものである。「●●人の信仰を集める神」というのはいくらでも思いつくが、「牛に信仰されている神」とか「犬に信仰されている神」となるとちょっと思いつかない。即ち、信仰こそが人間の本質である、という考え方  
+  
+・近代哲学者のエルンスト・カッシーラーは、人を［ホモ・シンボリクス］と呼んだ  
+※［アニマル・シンボリクム］とも  
+・彼の言うホモ・シンボリクスは“象徴を扱う人”を意味する  
+⇒確かに、象徴というものを扱うのは人間だけである。例えば信号機の赤と青は、それぞれ「止まれ」「進め」の象徴である。それこそ文字なんかも、象徴の一種である。そういう象徴を使う動物はと言うと、ちょっと思いつかない。小便でマーキング、とかならやるが、象徴は使わない。そういう、象徴を扱う者こそ人間である、という考え方  
+  
+  
+・以上見てきたような人間の本質は、どれもこれも一定の説得力を持つ  
+⇒人の形をしたチンパンジーにならないように、時には人間の本質とは何かを考察してみるのもいいでしょう  
+  
+## ●人間の心理  
+### 〇欲求段階説  
+・当然だが、人間は様々な【欲求】を持っている  
+⇒寝たいとか、遊びたいとか、食べたいとか  
+・心理学で生まれた、欲求についての有名な学説が【マズロー】の欲求段階説である  
+  
+・この学説をざっくり言ってしまえば、以下のようになる  
+・人は、様々な欲求を持っているが、その類型というのがある程度決まっている  
+・即ち、人は最初に、睡眠欲や食欲のような欲を求める  
+・上記の欲求が満足されると、今度は身の安全を求めるようになる  
+・安全の欲求が満たされると、今度は所属と愛の欲求が発生する  
+※誰かに仲間と認められたいとか、誰かに愛されたい…という欲求  
+・所属と愛の欲求にも満足すると、今度は承認欲求が出てくる  
+※自らが価値ある存在だと他者に認められたい、という欲求  
+・承認欲求も満たされると、最後に【自己実現】という欲求が出現する  
+※「あるべき自分」「なりたい自分」になろうと積極的に努力したい、という欲求  
+  
+⇒要するに、「人は最初、原始的で【生理的】な欲求に支配される。そういう欲求が満たされると、より高尚な、【精神的】な欲求が現れる。最後には、「あるべき自分」「なりたい自分」になろうと積極的に努力する、洗練された人間になる」というようなもの  
+※生理的な欲求を［一次的欲求］と呼ぶ事もある  
+※精神的な、高尚な欲求を［二次的欲求］とか［社会的欲求］と呼ぶ事もある  
+※また、マズローの欲求段階説に於いて、自己実現以外の欲求を［欠乏欲求］と呼ぶ事もある。自己実現という精神的で高尚な欲求と違って、安全とか所属と愛というようなのは生理的で低劣なのだ  
+  
+  
+### 〇欲求不満  
+・人間は、基本的には自分の欲求を満足させながら、周囲の状況に［適応］していくものである  
+・一方で、人間の欲求とは、全て満たされるとは限らない  
+・欲求が満たされなければ当然、【欲求不満（フラストレーション）】が発生する  
+  
+・例えば、複数の並立し得ない要求が同時に発生してしまう場合がある  
+⇒これを【葛藤（コンフリクト）】と呼ぶ  
+  
+・葛藤は、大きく三つに分かれる  
+１：【接近-接近型】  
+⇒Aをしたい、けどBもしたい（漫画を読みたいし同時にゲームもしたい）  
+２：【接近-回避型】  
+⇒Aをしたい、けどBはしたくない（ゲームしたい、でも明日の試験で赤点取りたくない）  
+３：【回避-回避型】  
+⇒AはしたくないしBもしたくない（勉強したくないし、試験で赤点も取りたくない）  
+  
+・こういった欲求不満に遭遇した場合、解決する方法は三種類あると考えられる  
+１：［合理的反応］  
+⇒言葉通り、合理的に解決する  
+例：勉強したくないし、試験で赤点取りたくない⇒赤点取りたくないなら勉強するしかないよね⇒勉強しよ  
+２：［近道反応］  
+⇒衝動的、短絡的に解決しようとする  
+例：勉強したくないし、試験で赤点取りたくない⇒よし、カンニングしよう  
+３：【防衛機制】  
+⇒無意識に解決しようとする。これから詳しく解説する  
+  
+### 〇防衛機制  
+・オーストリア帝国生まれ、二重帝国育ちの心理学の大家がジークムント・【フロイト】である  
+・このフロイトはその後の心理学に大きな影響を与えた  
+・特に大きな影響として、【無意識】を大きく取り上げた、というものがある  
+  
+・現代日本人は、無意識という言葉を当たり前のように使っている  
+例：「無意識にやってた」とか「そいつ嫌いだからか、無意識に避けてた」とか  
+・しかしこの無意識、西洋思想に於いてはほぼ無視されてきた  
+⇒「私がある行動を執ったとして、これは、「意識を持つ私」が、言ってみれば「意識的に」行ったものである」という風な考え方が主流だった。「やった時は自分で決断したと思ってたけど、今思えば、無意識の内にやりたいと思ってたんだなぁ」みたいな発想はほぼ、なかった  
+  
+・フロイトは、「人間は無意識によって突き動かされる」という風に考えた人物であった  
+・これは、西洋思想に於いて一つの転換点でもあった  
+・彼は無意識や、その表出と考えられる夢の分析によって、精神分析学の祖となった人物でもある  
+※今となっては、消滅しつつある学問ではある。薬が発達してしまったので、精神医学（精神科とか心療内科とか）でもほぼ使われていない。ただ、一昔前はきちんとした学問として存在していた。例えばクトゥルフ神話TRPGは一昔前を題材にしているので、精神分析が大きな役割を持っている  
+  
+・フロイトが考えた防衛機制をざっくり言うと、以下のようになる  
+  
+・人間の意識には、意識できない領域がある  
+・意識できない領域、つまり無意識には、様々な欲望、衝動が渦巻いている  
+⇒遊びたいとか、難しいことはしたくないとか、気持ちいい事がしたいとか  
+・この無意識に渦巻く欲望が、人間の自我に干渉してくる  
+  
+・とは言え、無意識の欲望に従ってばかりいると、社会生活が送れない  
+・と言うか、まず幼児期の教育の段階で、欲望を抑えつけるように教育される  
+・なので、人は無意識の欲望を、自我で抑えつけるようになる  
+・この「無意識の欲望を抑えつける」というのは、繰り返す内に、無意識に行えるようになる  
+・つまり、「無意識の欲望を無意識に制御する」という事ができるようになる  
+  
+・これが、フロイトの考えた防衛機制のざっくりとした説明である  
+  
+・フロイトが最初に考えた防衛機制は【抑圧】だが、その後、様々な防衛機制が提唱された  
+・ざっくりと表にまとめて見てみよう  
+  
+|            |                                                                                                                                                                                                                                                                              |  
+|------------|------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|  
+|防衛機制    |説明                                                                                                                                                                                                                                                                          |  
+|【抑圧】    |不安や苦痛を生み出すような記憶や欲求を、無意識に排除する例：嫌な思いをさせられた相手との接触を、無意識の内に避けるようになる                                                                                                                                                  |  
+|【合理化】  |（負け惜しみで）それらしい理由をつけて、欲求不満を正当化する例：試験で赤点を取って「元々そのつもりだった。あんなクソ教師の試験なんか赤点でいい」                                                                                                                              |  
+|【同一視】  |欲求を満足させている人と自分を同一視して、欲求不満を解決した気分になる例：運動部でレギュラーになって大会で活躍したい、でもベンチにすら入れなかった、という高校生がいるとする。その高校生が、自分のチームのレギュラーを、自己と同一視する次元で熱烈に応援し、欲求不満を解消する|  
+|【投射】    |自らの欲求不満の責任を他者に投射、言い換えれば責任転嫁する例：試験で赤点を取って「あのクソ教師の授業が悪いんだ。俺は悪くねぇ」                                                                                                                                                |  
+|【反動形成】|欲求をなかなか満たせない不満を、実際の欲求とは逆の行為、態度によって発散する例：小学生男子にありがちな、「好きな子に意地悪する」例のアレ                                                                                                                                      |  
+|【逃避】    |目前にある困難を解決できない不満を、その困難から逃げる事で発散する例：明日は試験。試験勉強しなきゃ。でもその前に部屋の掃除をしよう（以下勉強せず掃除し続ける）                                                                                                                |  
+|【退行】    |いわゆる一つの幼児退行みたいな奴（幼児まで行かない場合もある）                                                                                                                                                                                                                |  
+|【代償】    |満足できないある欲求を、別の欲求に置き換えて解決する例：勉強ができなくて試験では点が取れない（「試験で点を取る」という欲求を満足させられない）。そこで、運動部に所属してスポーツで活躍して誤魔化す                                                                            |  
+|【昇華】    |満たされない本能的（原始的、生理的）欲求を、社会的価値の高い欲求置き換える例：「喧嘩で誰かをぶちのめしたい」という欲求を、「ボクシングやラグビーで活躍する」という欲求に置き換える                                                                                            |  
+  
+※現実には、防衛機制一つだけが働くとは限らない。前掲表で言うと合理化と投射の例なんかは、同時に発生してもおかしくない内容である  
+※倫理使って受験する人は「それぞれの防衛機制を、例を挙げて説明しろ」と言われたらできるようにしておくと吉でしょう  
+  
+  
+### 〇ところで  
+・倫理分野のあらゆる話について言っておかなければならない事がある  
+・それは、「紹介された考え方が正しいと思う必要はない」という事  
+※ぶっちゃけ倫理に限らず社会科は全部そう。何なら社会科に限らず大抵の教科に言える事でもある。ただ、特に倫理では強調しておいた方がいいのでここで改めて言っておく  
+  
+・今後も、倫理分野では様々な考え方を紹介していく  
+・しかしそれらの考え方、思想が「正しい」と思う必要はない  
+・「へー、そんな考え方もあるんだな」程度に思っておけばいい  
+・何なら「何言ってんだこいつ、お馬鹿か？」と思っても構わない  
+  
+・例えば、先に紹介した欲求段階説は、心理学そのものよりも、心理学以外で有名な学説である  
+・と言うのは、いかにも尤もらしいし「好ましい」というので、教育学や経営学で人気なのだ  
+⇒教育者からしてみれば、「人は皆、最後には自己実現を目指す洗練された人間になるんだよ」なんていうのはとても都合がいい。また経営者（会社の社長とかそういう金持ち）からしてみても、都合がいい。労働者（庶民、従業員）が「仕事を通して自己実現しよう」なんて風に考えてくれれば、経営者が何もしなくても身を粉にして働く、都合のいい社畜の出来上がりである  
+  
+・じゃあ心理学の世界ではどうなのさと言うと、少なくとも今は、真面目に相手されていない  
+・言い方を変えれば、全方位から批判されている  
+・例えば、「大学生の中でも最も健康な1%だけを研究してできた理論ってマジ？」  
+・例えば、「この理論、欧米的な社会でしか適用できないんですけど？」  
+・例えば、「地域とか文化によって、重視される欲求って全然違いますが？」  
+・…まぁ、こんな感じ  
+・また、フロイトの理論も、現代心理学の第一線では全く通用しない  
+※防衛機制という理論は今でも研究され続けているが、フロイトの理論一般はまるで通用しない  
+  
+・ただ、マズローにしろフロイトにしろ、「じゃあ紹介しない方がいいのか？」というと話は別である  
+・それこそマズローの理論は、心理学の外では、今でも第一線で使われている  
+⇒例えば、「承認欲求」というよく見る言葉に絡めてビジネス本で使われているのをよく見かける。全く何も知らない状態でそういう思想を読むより、事前知識を持っておいた方がいい  
+・フロイトにしても、心理学はフロイトの理論に対する批判によって発展してきた面は大きい  
+⇒現代の心理学全部を見ると凄い時間がかかってしまう。ならフロイトという心理学の発展の元となった人について、教養としてちょっとだけでも知っておく、というのはアリだろう  
+  
+・こうして見ると、倫理分野では特に、紹介された思想を「正しい」と思う必要はないという話になる  
+・どちらかと言うと、教養として「そういう考え方もあるんだ」と知る事が大事  
+・その上で、自分で調べてみたり、更には考察したりする事もできれば一番である  
+※最初で言ったように、社会科なら全部そうだし、大抵の教科もそう。何なら本だって新聞だってtwitterだって、「正しい」と思う必要はない。が、倫理分野は思想を扱う分特に…という事で強調しました  
