--- a/01_02.md
+++ b/01_02.md
@@ -1,2 +1,96 @@
 # 青年期とは
-
+  
+・人間は誰であっても、最初から大人ではない  
+・誰しも最初は赤ちゃんで、続いて幼稚園生のような児童期へと至る  
+・その後、過渡期を経て成人期へ至る  
+・この、言ってしまえば「子供から大人への過渡期」が【青年期】であると言える  
+※具体的に何歳から何歳まで、というのは人によって変わる。一応、一般的には十歳から二十二歳ぐらいを指して言う  
+  
+・青年期は、最早純然たる子供ではない  
+⇒例えば児童期までの子供は、基本的に男も女も声が高い。また普通、生殖もできない。しかし青年期に入ると、【第二次性徴】によって男子の声は低くなり、男女共に生殖可能になる。まるで、大人のように  
+・とは言え、完全に大人、という訳でもない  
+⇒大人とは何か、という定義の話になってしまうのであれだが…例えば、一般に、大人は仕事をして生計を立てる事が期待される。青年期の人間は、自らの仕事で生計を立てる事はあまり期待されない。学校に行って学を身に付けるとかそういう事が期待され、仕事をしているとしても修行期間のような見方をされる  
+  
+・最初に言ったように、青年期は過渡期な訳である  
+・過渡期であるが故に、青年期の人間は、子供という「常に庇護されるべき対象」とは見做されない  
+・一方で、大人という「自立した存在」とも、なかなか見做されない  
+⇒ドイツ帝国生まれの心理学者クルト・【レヴィン】は、このような過渡期にある青年を、【マージナル・マン（境界人、周辺人）】と呼んだ  
+  
+・レヴィンはまた、成年は過渡期であるが故に、心理的に不安定になりやすいとも指摘している  
+※例えば、「あなたはもう子供じゃないけど、一人前の大人としても扱いません」と言われたら「じゃあ何なんだよ。どっちかにしろ」となるのは当然の話である。その時々で「もう子供じゃないから」と言われて責任を求められ、「まだ大人じゃないから」と権限を制限されていれば、メンタルが鋼鉄でできてない限り多少なりともおかしくなる  
+  
+・勿論、青年期の人間が心理的に不安定になりやすいのは、周囲の環境だけが要因ではない  
+・この時期は、いわゆる【アイデンティティ（自己同一性）】の確立が求められる  
+⇒「アイデンティティの確立」は何か、というのをざっくり言ってしまえば、「『自分は何者か』『自分の目指す道は何か』『自分の人生の目的は何か』『自分の存在意義は何か』というような問いに対して答えられる状態」、と言えるだろう  
+  
+  
+・これが子供であれば、「××さんちの長男」とかそういうのでよい  
+・逆に大人であれば、「△△建設の職人」とか「◇◇大学の教授」といった感じで、所属を使う手がある  
+・しかし青年は、こういう手が使えない  
+・最早子供ではない以上、「××さんちの長男」的なのはもう使えない  
+⇒本人自身も、身体が成熟してきているというのもあり、この手のものはあまり望まない  
+・一方で、青年は所属を使う手も使えない  
+⇒基本的に学生であり、数年で卒業すると分かっている以上、あまり有効ではない。既に仕事をしている場合でも、修行期間的な見方をされていると、「半人前なのに？」みたいな目をされる  
+※子供にも大人にも属さないとされる、境界人的な性格がここで効いてきてしまう。要は、青年は頼りにできる集団に所属できないのである  
+  
+・大人でも所属を使って誤魔化す場合があり、ちゃんとはできていない事も多いアイデンティティの確立  
+※そうやって誤魔化してるから、仕事人間が退職してから急速にボケた、みたいな話が出てくるのである  
+・それを、所属する集団なしでやれと言う訳だから、それは心理的に不安定となって当然である  
+  
+・こういった青年期の特質を表す言葉は、色々ある  
+  
+・例えば、青年期は［自我意識］が発達する、などと言われる事がよくある  
+⇒端的に言えば、「俺は俺だ」という意識をこう言う  
+・この自我意識の発達を、【自我の目覚め】と呼ぶ場合もある  
+⇒「俺は俺だ」という意識の発達により、自らの性格や容姿を気にするようになったり、自分なりの振る舞い方、生き方を確立しようとしたりする  
+  
+・他にも、世界大戦期の心理学者リタ・ホリングワースは【心理的離乳】を提唱した  
+・即ち、赤ちゃんは物理的に離乳して児童期へ至り、いわゆる「子供」となる  
+・同様に、子供は心理的に離乳（精神的に親離れ）して、精神的に自立する  
+・この心理的離乳が青年期に行われる、という話  
+  
+・こういった青年期を表す言葉の中で特に有名なのが、【第二の誕生】である  
+・フランス革命の直前まで生きた哲学者、ジャン・ジャック・【ルソー】の言葉  
+・この言葉を理解するには、彼の書いた教育本【エミール】を見るのが早い  
+  
+  われわれは二度生まれる。一度目は生存するために、二度目は生きるために。一度目は人類の一員として、二度目は男性として、女性として。  
+  
+・一般的に、人間の誕生としては、赤ちゃんとして産まれた瞬間の話を言う  
+⇒確かに、物理的にはそう考えるのが妥当。ただ、今この資料を読んでいる人が、「当時の事を覚えているか？」「当時の自分と今の自分は、精神的に同じ存在か？」と問われた場合、また別の問題な筈  
+・では、「俺は俺だ」的な、自己の自我、人格が確立され、完成するのはいつの話か？  
+・それこそが青年期であり、そういった自我、人格の確立こそが第二の誕生である…という話  
+  
+### 〇青年期についてのあれこれ  
+・今まで話してきた「青年期とは」というのは、近現代的な西欧的な社会を元にしている  
+・もっと言えば、現代日本社会を元にしている  
+・なので、時代や地域が変われば、話も変わる  
+  
+・例えば、青年期に起こる【第二次反抗期】  
+・これ、同じ日本でも、今（令和一桁）と一昔前（昭和末期～平成初期）では全然違う  
+・勿論、小学校高学年～中学校ぐらいで起きる反抗期、という意味では一緒なのだが…  
+※ちなみに第一次は、赤ちゃんが歩けるようになった頃の、いわゆるイヤイヤ期  
+  
+・一昔前だと、尾崎豊の歌なんかが第二次反抗期の若者をよく描き、また彼らの共感も得ていた  
+⇒盗んだバイクで走り出して（窃盗＆無免許運転）、学校に侵入して（不法侵入）、学校の窓ガラスを割って（器物損壊）、大人達は俺達を分かってくれない、みたいな歌  
+※野蛮な上に甘ったれなのやばくないですか？（疑問）　やばいですね（確認）  
+・これが今の第二次反抗期の若者であれば、『うっせぇわ』で済む訳である  
+⇒歌詞を見れば分かるが、「俺らの事がわかんねぇんだったら黙ってろ」という趣旨になっている  
+※随分平和になりましたね。日本人も成熟したなぁ…  
+  
+※ちなみに、これが昭和初期とかになると、少年犯罪として「将棋で負けたからナイフ取り出して刺した」とかそういうようなのが普通に出てくる。それを考えると、人ではなく物に当たってる分、一昔前の日本人も成長してるんですね  
+※また、このような青年による大人への反抗を特徴とする文化を【若者文化（ユースカルチャー）】と呼ぶ事がある  
+  
+・同じ日本の、それも百年程度の変化であってもこれだけ違う  
+・故に、もっと昔だったり、逆に地域が違ったりすれば、青年期というものも大きく変わる  
+  
+・例えば昔は一般に、青年期は存在しなかったと言われている  
+・昔の子供は、【通過儀礼（イニシエーション）】によって、子供から大人になった…とされる  
+⇒つまり、通過儀礼をやればそれで大人。子供から大人への過渡期はなし、という事  
+※昔の日本でも、子供は「元服」という「通過儀礼」を済ませれば、それで大人と扱われた。当然、元服を済ませたばかりの十代の子が戦場で討死したり、責任を取って切腹したりもした  
+  
+・他にも、「未開社会の女性には、青年期が存在しない」と報告した学者もいる  
+※二十世紀の文化人類学者［マーガレット・ミード］の事。サモア島での調査から、『サモアの思春期』という本を著してこの件を報告した。この本は彼女の死後、大論戦の種となる  
+・また、昔の西欧社会にはそもそも、子供すら存在しなかったとさえ言われている  
+⇒昔の西欧社会の子供とは「小さな大人」であって子供ではなかった、という論  
+  
+・こういった事情から、青年期というものは時代や地域によって話が変わるものだという事が分かるだろう  
