--- a/02_00.md
+++ b/02_00.md
@@ -1,2 +1,25 @@
 # 倫理分野第二章　西洋思想：源流
 
+・高校の倫理でも、思想史は古代からやる  
+・何なら大学で哲学や倫理学に行っても、やっぱり古代からやる  
+・「俺は近代の思想が知りてぇんだよ、何でわざわざ古代の話なんかしなきゃいけねぇんだ」  
+・「俺は現代に生きてんだよ。現代の思想だけ知れば充分だろ」  
+・…まぁ、当然の疑問である  
+  
+・実は、「現代の思想を知るのに一番早い方法は、古代から勉強する事」なのである  
+・と言うのは、特に西洋思想は、積み上げ式なのである  
+  
+・例を挙げよう。まずAさんが、「あ」という思想を考えた  
+・続いてBさんが、Aさんの思想に異を唱え、「い」という思想を提唱した  
+・更にCさんが、Bさんの思想を批判し、「う」という思想を生み出した  
+・今度はDさんが、Cさんの思想を批判し、「え」という思想を世に出した  
+  
+・実際の所、西洋思想はこれの繰り返しである  
+・故に、近現代の哲学者の本を予備知識なしでいきなり読んだら、「何言ってんだこいつ」になるだろう  
+⇒それは当然で、先の例でいえばDさんの書いた「え」という思想についての本を読んだとする。しかしこの「え」という思想は、そもそも「う」という思想の批判からできているので、「う」という思想が分かってないと、「え」についての本もよく分からない。じゃあ「う」という思想について勉強しようとすると、これも実は「い」という思想についての批判から出てきたものなので…と、繰り返しになる  
+  
+・だったら最初から順番に勉強すればいいじゃねーか、という話である  
+・当然、「現代の倫理ってどんなの？」という話も、古代から勉強するのが近道  
+・と言う訳で、本章では、西洋の思想を古代から現代まで見ていく事になる  
+  
+※ちなみに、特に近現代の哲学者の本を読んで「何言ってんだこいつ」となる理由は、もう一つ考えられる。それはずばり、「翻訳が下手糞だから」。「翻訳で読んだら何言ってるか分かんなかったけど、原著で読んだらそこまで難しい事言ってなかった」は哲学あるあるである。まぁ日本の文系学者が日本語下手糞ってのは結構あるあるなので…  
