--- a/02_02.md
+++ b/02_02.md
@@ -1,2 +1,374 @@
 # 初期キリスト教
 
+  
+・前節では、西洋思想の源流として、古代ギリシアの思想を見てきた  
+・実は、西洋思想にはもう一つの柱がある。それが【キリスト教】  
+  
+・ローマ帝国末期に、古代ギリシア哲学とキリスト教の融合が試みられる  
+⇒と言っても八割方キリスト教で、ギリシア哲学はほぼ抹消されるのだが…基本的には、「キリスト教にとって都合のいいギリシア哲学」を吸収する形で、キリスト教思想が成長していく  
+・そして中世に至って、欧州は「キリスト教こそ全て」という世界になる  
+⇒「人間＝キリスト教徒」「キリスト教徒でない者は人ではない」「非キリスト教徒はむしろ狼に類するもので、殺して称賛されるもの」というような世界になっていく  
+・こうして、中世の思想はキリスト教に支配されるのである  
+  
+・そんなキリスト教がどうやって生まれたのか  
+・初期キリスト教の思想とはどんなものか  
+・そういった話をするのが本節である  
+  
+  
+## ●ユダヤ教  
+・キリスト教の元になった宗教が【ユダヤ教】である  
+⇒それこそイエス・キリストも、ある意味ユダヤ教徒だったと言えなくはない  
+  
+  
+### 〇ユダヤ教の特徴  
+・一般に、特定の民族に信仰されている宗教を［民族宗教］と呼ぶ  
+・ユダヤ教はまさにこれ  
+・ユダヤ教の場合は、【ユダヤ人】に信仰されている  
+⇒【イスラエル人】と呼ぶ場合もある。この辺の事情は後で詳しくします  
+  
+・ユダヤ教の特徴は、【一神教】だというところにある  
+・即ち、天地を創造した全知全能の［唯一神］たる【ヤハウェ】のみが神  
+⇒一神教では、他の宗教の神は一般的に、人々を惑わす悪魔と扱われる  
+※ちなみに、ギリシア神話のように、複数の神がいる場合は【多神教】と呼ぶ。今の日本人も基本的に、多神教徒だと思っていい  
+※ヤハウェは、昔はエホバと読むと思われていたので、古いキリスト教の文献だとエホバと書かれている場合も多い。新興宗教の「エホバの証人」のエホバも、要はヤハウェの事である  
+  
+・ヤハウェは人と契約を結んだり、契約違反に対して［裁き］を下したりする人間的な神である  
+・こういう、人間的な要素を持つ神の事を［人格神］と呼ぶ事もある  
+⇒即ち、ヤハウェは［唯一神］であり、［人格神］であり、［裁き（義）の神］である  
+  
+・全知全能の唯一神たるヤハウェは、ユダヤ人と契約を結んだ  
+・これが、ユダヤ教の根幹であると言ってよい  
+・契約を結んだユダヤ人は、義務を遂行せねばならない  
+⇒いわゆる【律法（トーラー）】と呼ばれるものを守らねばならない  
+・一方ヤハウェは、この世が終わる時、契約を結んだユダヤ人を救済する  
+・この［終末］思想と［選民］思想が、ユダヤ教の特徴にして根幹と言える  
+※ヤハウェとユダヤ人が結んだ契約を中心に据えた聖典が【旧約聖書】である  
+  
+・そして、終末の時、神が【救世主】を遣わす  
+・この救世主を、【メシア】とか【キリスト】とか呼ぶのである  
+⇒メシアはヘブライ語読み、キリストはギリシア語読み  
+  
+### 〇ユダヤ教の成立  
+・ユダヤ教の歴史は、古代でも相当古い時代に遡る  
+⇒それこそ、文明がようやくメソポタミアの周辺に現れた時代に遡る。即ち、ギリシアにはまだ文明が届いていない（まだ原始時代だった）頃である。前回まででローマ帝国までの流れを軽く見たが、ここで一旦、時代を遡る事になる  
+  
+・旧約聖書によると、ユダヤ人の始祖はアブラハムである  
+⇒メソポタミアの南端、シュメールの都市ウル出身であると言われている  
+・アブラハムはカナン（イスラエル）へ移住した  
+⇒現在、イスラエル国が実効支配する【パレスチナ】のあたりとされる。聖地【エルサレム】があるのも、この地域  
+※この移住が、言ってみればユダヤ教の歴史の始まりと言える。つまり、アブラハムはユダヤ教の始祖という事にもなる。故に、ユダヤ教、及びユダヤ教を受け継ぐキリスト教、イスラム教を総称して「アブラハムの宗教」などと呼ぶ事も多い  
+  
+・アブラハムの子孫は、このカナン（イスラエル）で繁栄していた  
+・彼らは［ヘブライ人］と呼ばれた  
+・ヘブライ人は、カナン（イスラエル）に於ける飢饉から逃れるべく、エジプトへ移住する  
+・ヘブライ人は当初厚遇されたが、後に迫害され、まとめて奴隷にされてしまう  
+  
+・奴隷化されたヘブライ人を率いてエジプトを脱出したのが【モーセ】である  
+・また、モーセのエジプト脱出を描いたのが、旧約聖書の【『出エジプト記』】である  
+  
+・このモーセは、ユダヤ教に於いて極めて重要な役割を持つ  
+・と言うのは、彼は旧約聖書の、いわゆるモーセ五書の著者とされているのである  
+⇒『創世記』『出エジプト記』『レビ記』『民数記』『申命記』  
+・そして、ユダヤ教の律法は、基本的にはこのモーセ五書に書いてあるのだ  
+  
+・有名どころでは、モーセの【十戒】がある  
+・これは、出エジプトの脱出行の途中、シナイ山にてヤハウェから授かったものである  
+・この十戒は、ユダヤ教の律法の典型例と言える  
+  
+・ともあれ出エジプト後、ヘブライ人はカナン（イスラエル）へ帰還する  
+・ヘブライ人が、自らをイスラエル人と自称し始めるのはこの頃からである  
+・ヘブライ語が形成されるのも、この頃の話である  
+⇒旧約聖書は本来、ヘブライ語で書かれたもの。また、現在のイスラエル国の公用語もヘブライ語である  
+  
+・イスラエル人を自称するようになった彼らは、古代イスラエル王国を建国する  
+・この国はヤハウェへの信仰を基盤にした、神権国家であった  
+・その最盛期を作ったのが、伝説の王［ダヴィデ］と［ソロモン］である  
+・ソロモンの死後、王国は南北に分裂する  
+⇒北は引き続きイスラエル王国、南はユダ王国と呼ぶ  
+・その後、イスラエル人の勢力は衰退の一途を辿る  
+・古代ギリシアで言う、ポリスの勃興期にもなると北のイスラエル王国が滅亡  
+⇒聖書に出てくるサマリア人というのは、基本的にはこの北のイスラエル王国の遺民である  
+・またタレスが生きていた時代には、南のユダ王国も滅亡する  
+  
+・ユダ王国を滅ぼしたのは新バビロニア王国であった  
+・ユダ王国の遺民は、その多くが新バビロニア王国首都バビロンへ連行された  
+・この事件が、有名な【バビロン捕囚】である  
+・また、イスラエル人は、「ユダ王国の遺民」という事でユダヤ人と呼ばれるようになった  
+  
+・以後、ユダヤ人は現代のイスラエル国を建国するまで、自分の国を持てなかった  
+・常に他の国家、民族、宗教に支配された訳である  
+・その中で、ユダヤ人は「ユダヤ教団」として生きていく道を選んだ  
+・その中で、ユダヤ教も今の形にまとまっていったのである  
+  
+※「ユダヤ教は全知全能にして世界の創造者たる唯一神を奉じる」「ユダヤ教の神はユダヤ人しか救わない」という教義を見て、「何でそんな事になったん？？？」「唯一神なら全ての人を救ったらええやん？？？」となる人は当然多い。その理由は多くの場合、「ユダヤ人は千年単位で自分の国を持てず支配され続けた人達だから、そうでもしないと耐えられなかった」と説明される事が多い  
+※ところでこの説明、要するに「弱者のルサンチマン（強者に対する嫉妬）」じゃない？　大丈夫これ？？  
+  
+・尚、旧約聖書にはしばしば、神の言葉を伝える【預言者】が現れる  
+・彼らは未来を「予言」するのではなく、神の言葉を預かり、伝える者である  
+・勿論、モーセも預言者である  
+・他には、ユダ王国後期に活動した預言者［イザヤ］、ユダ王国滅亡前後の預言者［エレミヤ］も有名  
+  
+  
+## ●イエス  
+・ここまでの時代の流れを先に復習しよう  
+  
+|              |                                  |                                                                |                                                        |  
+|--------------|----------------------------------|----------------------------------------------------------------|--------------------------------------------------------|  
+|西暦紀元      |オリエント(ギリシアより東)        |ギリシア                                                        |思想史関係                                              |  
+|前3500頃      |メソポタミアに文明が発祥          |                                                                |アブラハムの移住や、ヘブライ人のエジプト移住、出エジプト|  
+|前3000頃      |エジプト王国の誕生                |                                                                |                                                        |  
+|前2700頃      |メソポタミアに都市国家ができ始める|                                                                |                                                        |  
+|前1600頃      |メソポタミア周辺へ文明が広がる    |                                                                |                                                        |  
+|前1400頃      |                                  |                                                                |                                                        |  
+|前8世紀       |分裂後のイスラエル王国滅亡        |ポリスの勃興期                                                  |                                                        |  
+|前7\~5世紀前半|ユダ王国滅亡                      |                                                                |バビロン捕囚とユダヤ教の形成、タレスらの活動            |  
+|前5世紀後半   |                                  |                                                                |ヘラクレイトスらの活動                                  |  
+|前499\~449    |                                  |ペルシア戦争                                                    |ヘラクレイトスの晩年、ソクラテスの若い頃                |  
+|前431\~337    |                                  |ペロポネソス戦争から始まる戦乱の時代                            |ソクラテス、プラトン、アリストテレス                    |  
+|前336\~323    |アレクサンドロス大王の遠征        |アリストテレスも存命                                            |                                                        |  
+|前323\~30     |ヘレニズム期                      |エピクロス派、ストア派の活動。初期はアリストテレスもまだ生きてる|                                                        |  
+  
+  
+・ヘレニズム期は、ギリシア（及びエジプト）以東という、当時の先進国が陥った戦乱の時代である  
+・そんな中で、都市国家ローマが力を蓄え、ローマ帝国となり、地中海の覇権を握る  
+・ヘレニズム期が終わる頃には、地中海はローマ帝国の海となっていた  
+  
+・その直後。西暦元年前後に登場してくるのが、【イエス（・キリスト）】である  
+⇒人名としてはイエス。キリストは、メシアと同じく「救世主」という意味。イエス・キリストという呼称は、言ってみれば「救い主たるイエス様」みたいな感じ  
+※一応、西暦元年がイエスの誕生年という事にはなっている。ただこれは、言ってみれば、「神武天皇が即位した年を皇紀元年とする」のと同じ伝説的なものである。実際には、イエスの誕生年は西暦紀元前４年よりは前だろう、と考えられている  
+  
+・彼の登場の背景として、当時のユダヤ人が置かれていた状況を考える必要がある  
+・当時、ユダヤ人はイスラエルにいた  
+・そしてイスラエルは、ローマ帝国の支配下にあった  
+・ユダ王国の滅亡から既に五百年が経っており、ユダヤ人は支配される事に飽き飽きしていた  
+・故に、救世主の登場が待ち望まれていた  
+・先に述べたように、ユダヤ教には終末思想がある  
+・この「終末」は、現代の一般日本人が考えるものとは恐らく違う  
+⇒現代の一般日本人からすると、この終末というのは「神の力によって（神の奇跡とか魔法的な意味で）この世界が崩壊する」という感じだと思われる。また救世主も、「崩壊する世界の中で、（神の奇跡とか魔法的な意味で）人々を救う」という感じでイメージする筈  
+  
+・実際のところ、少なくとも当時のユダヤ教徒は終末を、「悪徳蔓延るこの時代の終わり」と考えていた  
+⇒「選ばれた民たるユダヤ人が劣った異民族に支配されている」「ユダヤ人の中からも、心が折れて異民族におもねる者が出てきている」みたいな状態を（物理的に）打破し、ユダヤ人による真のイスラエル王国が世界を支配するようになる、みたいなイメージ。だから神から遣わされる救世主も、優れた軍事指導者とかそういうイメージだった  
+  
+・イエス登場時のユダヤ教徒はこのような状況にあった  
+・そんなユダヤ教徒は、大まかに言うと二つの派閥に分かれていた  
+・一つは当時のエルサレム神殿の司祭を中心とした権力者グループの［サドカイ派］  
+・もう一つは、律法の厳守を求めた庶民グループの【パリサイ派】である  
+⇒パリサイ派は現代にも生き残り、ユダヤ教正統派と呼ばれている。現代でも、ユダヤ教は基本的にパリサイ派の流れを汲む。逆にサドカイ派はイエスが死んですぐの頃に壊滅してしまい、どういう教義だったのかすらよく分かっていない  
+  
+・さて、このような従来のユダヤ教を批判したのがイエスである  
+・イエスは大工のヨセフ、聖母マリアの間に産まれたユダヤ人であった  
+・［バプティスマのヨハネ］に洗礼された彼は、従来のユダヤ教に蔓延る【律法主義】を批判した  
+⇒このヨハネは、イエスの先駆者として知られる人。彼もまた、従来のユダヤ教を批判した  
+  
+・ユダヤ教の根本は、神との契約と、それに基づく終末思想と選民思想にある  
+⇒神の契約に於ける義務たる律法を守っていれば、神が救ってくださる、という事  
+・故に、イエスの時代、ユダヤ人は律法を重視していた  
+⇒「我々は神様との契約を守り、律法を守っています。だから神様、早く助けてください」みたいな  
+  
+・ところがイエスは、「律法守ってさえいりゃあいい」というユダヤ教徒の姿勢を批判したのである  
+・例えばモーセの十戒には、【安息日】が定められている  
+ 
+ > 「七日目はあなたの神、主の安息であるから、なんのわざをもしてはならない。あなたもあなたのむすこ、娘、しもべ、はしため、家畜、またあなたの門のうちにいる他国の人もそうである」  
+  「主は六日のうちに、天と地と海と、その中のすべてのものを造って、七日目に休まれたからである。それで主は安息日を祝福して聖とされた」  
+  （1955年日本聖書協会版『旧約聖書』出エジプト記第二十章十、十一節）  
+  
+・しかしイエスは、「安息日は人のためにあるもので、人が安息日のためにあるのではない」と述べた  
+※1954年日本聖書協会版『新約聖書』マルコによる福音書第二章二十七節  
+・例えば、目前で苦しんでいる者がいる時、イエスは安息日であってもその者を癒した  
+⇒これは、厳格なユダヤ教的には働いている扱いで、マズい。しかしイエスは「律法によれば安息日は働いてはいけない、それは分かる」「けどだからと言って、目の前に苦しんでる病人がいるのに、安息日だからって放っておくのはいい事か？」「人を休ませる為に安息日があるのであって、安息日の為に人が苦しんだら本末転倒だろう？」とした訳である  
+  
+  
+### 〇信仰の転換点  
+・このようなイエスの思想は、唯一神への信仰の転換点と見る事もできる  
+・即ち、従来のユダヤ教に於けるヤハウェは、厳格な裁きの神であった  
+⇒それこそ、旧約聖書を読むと「あ、俺の言いつけ破るんだー。じゃあ殺すね」みたいな勢いで人間を殺しまくっている。勿論、悪魔も人を殺してはいるのだが…悪魔なんか比較にならない次元で、自らに従わない人間を殺しまくっている。人数差を言うと、それこそ千倍とか万倍とかの世界である  
+  
+・一方、イエス（そして彼を受け継ぐキリスト教）のヤハウェは、慈愛の神である  
+・例えば神は、【アガペー】と呼ばれる無差別の愛、無償の愛を人間に与えるとされる  
+⇒よく、人間の愛であるところの【エロース】と対比される概念。プラトンはイデアを追求する人の欲求をエロースと呼んだが、元々この言葉は性愛、即ち肉体的な愛を表す言葉である。そこから、人の愛はどこかしら身勝手なところのあるエロース、神の広大無辺な慈悲による愛はアガペー、みたいに言われるようになった  
+  
+・イエスは、神の救いという喜ばしい知らせを【福音】と呼んだ  
+・この言葉は後に、イエスの生涯やそこから得られる教えを示す言葉ともなった  
+⇒故に、イエス以降新しくまとめられた聖書であるところの【新約聖書】には、【福音書】が沢山入っているのである  
+※ちなみに、新約聖書に入っている福音書は［『マタイによる福音書』］［『マルコによる福音書』］［『ルカによる福音書』］［『ヨハネによる福音書』］の四種  
+  
+・故に、イエスは愛を説く  
+・神はユダヤ人しか救わない狭量な神ではないし、形式的な律法を守らぬ者を殺す裁きの神でもない  
+・広大無辺の慈悲で人々を救う、愛深き神である  
+・汝もまた、【隣人愛】を大事にせよ、と  
+  
+  
+・彼の愛に関する表現のいくつかは、非キリスト教徒でも聞いた事があるだろう  
+・「汝の敵を愛せ」とか「右の頬を打たれたならば、左の頬を差し出しなさい」というような奴である  
+⇒より正確には…  
+>  「『隣り人を愛し、敵を憎め』と言われていたことは、あなたがたの聞いているところである。しかし、わたしはあなたがたに言う。敵を愛し、迫害する者のために祈れ」  
+  「『目には目を、歯には歯を』と言われていたことは、あなたがたの聞いているところである。しかし、わたしはあなたがたに言う。悪人に手向かうな。もし、だれかがあなたの右の頬を打つなら、ほかの頬をも向けてやりなさい」  
+  （どちらも1954年日本聖書協会版『新約聖書』マタイによる福音書）  
+  
+・こういった有名な愛についての表現は、［山上の垂訓］と呼ばれる説教で出たものである  
+・有名な「己の欲するところを人に施せ」も、この説教で出ている  
+⇒この表現を、イエスの【黄金律】と呼ぶ場合もある。ちなみに、本稿でずっと引用している1954年日本聖書協会版だと「だから、何事でも人々からしてほしいと望むことは、人々にもそのとおりにせよ。これが律法であり預言者である」とある  
+  
+  
+・イエスの思想の核心として、【二つの戒め】というものがある  
+・これは、最も大切な律法とは以下の二つであるとするものである  
+ > 「あなたは心をつくし、精神をつくし、力をつくして、あなたの神、主を愛さなければならない。」（1955年日本聖書協会版『旧約聖書』申命記第六章五節）  
+  「あなた自身のようにあなたの隣人を愛さなければならない」（1955年日本聖書協会版『旧約聖書』レビ記第十九章十八節）  
+  
+※イエスは、律法を否定した訳ではない。安息日と同じで、「律法の為に人があるのではなく、人の為に律法がある事を忘れないようにね」と言った人物である。そういう意味ではユダヤ教の延長線上にある人物だが、一方で、愛を基軸にしたのは革新的であったと言える  
+  
+## ●初期キリスト教会  
+・イエスによって、ヤハウェ信仰は万人に対するものへと変化した  
+・ここに、【キリスト教】が［世界宗教］になる素地ができたのである  
+⇒従来のユダヤ教ではユダヤ人しか救われない民族宗教だったが、イエスの教えは、神の教えを奉ずるあらゆる人が救われるという教えだった。ここに、唯一神を誰もが信仰する可能性が開かれたのである  
+  
+・ただ、このイエスの教えは、なかなか受け入れられなかった  
+・イエスの生前からして、その教えに対する反発はあった  
+⇒既に見たように、当時の一般ユダヤ教徒が求める救世主は、ユダヤ人を支配する異民族を打ち破ってくれる軍事指導者的なものだった。それに対し、イエスは「【神の国】はあなた方の心の内にある」というような事を言う。そりゃあ反発もされようというもの  
+  
+>  神の国はいつ来るのかと、パリサイ人が尋ねたので、イエスは答えて言われた、「神の国は、見られるかたちで来るものではない。また『見よ、ここにある』『あそこにある』などとも言えない。神の国は、実にあなたがたのただ中にあるのだ」  
+  （1954年日本聖書協会版『新約聖書』ルカによる福音書第十七章二十、二十一節）  
+  
+・そういう事情もあってついに、イエスは捕まって処刑されてしまう訳である  
+・その三日後、有名なイエスの【復活】が起こる  
+・そして、イエスの弟子達やその復活を信じる者達は、イエス派とでも呼ぶべきものを形成する  
+・これが初期のキリスト教であり、キリスト教会である  
+※【教会（エクレシア）】とは本来、イエスを信じる者達の集まりを意味する単語。それがやがて、建物的な意味での教会も意味するようになった  
+※最初期のキリスト教の事を原始キリスト教と呼ぶ事もある  
+  
+・但し、イエスの生前と同様、初期のキリスト教もなかなか広まらなかった  
+・積極的に危険宗教として弾圧されたと言うよりはむしろ、相手にされていなかった  
+⇒イエスの時代のローマ帝国は、アウグストゥスが初代皇帝となる頃。多少足踏みはあるものの、まさにこれから全盛期を迎える上り調子の頃。そういう国は得てして余裕があり、況して多神教の国である。新しい宗教ができようが気にしない。仮にその宗教が「神は唯一」「お前のところの宗教は全部嘘」みたいな事を言ってても、さして問題にはならない  
+※世界史とかでネロ帝による弾圧とかが話題にされやすい為、キリスト教が誕生してから一気に広がったイメージがあるのだが…実際には、ローマ帝国の調子がいい間はほぼ増えてない  
+  
+・キリスト教が広がり始めるのは、ローマ帝国にガタが来てからである  
+・全盛期（五賢帝の時代）を過ぎると、さしものローマ帝国もガタガタになってくる  
+⇒異民族の侵入、気風の退廃…アテナイの文化を受け入れたローマ人は際限なく堕落し、ローマ軍をローマ人で編成する事すら困難になっていった。「異民族の侵入を防ぐ為に異民族を雇って戦わせる」みたいな事態が常態化していく  
+  
+  
+・不安な世情の中では、宗教に救いを求める人も出てくる  
+・悪い言い方をすれば、キリスト教はローマ帝国の政情不安に乗じて急拡大した訳である  
+・急拡大中は弾圧もされたが、やがてキリスト教はローマ帝国の側からも求められるようになった  
+  
+・と言うのは、ローマ人の気風が堕落し切ってしまって、誰もまともに仕事しなくなったのである  
+⇒誰を雇っても賄賂ばっかり貰ってるし、何なら賄賂貰うだけで仕事しねぇじゃねぇかもう賄賂取ってもいいからせめて仕事しろ、みたいな。そういう次元で退廃しきってしまった  
+・そんなローマ帝国でも唯一、ストア派的な禁欲主義と勤勉さを、キリスト教徒だけが保持し続けていた  
+・こうしてキリスト教はローマ帝国の国教となり、欧州を支配する第一歩を踏み出すのである  
+  
+  
+### 〇初期キリスト教の思想と形成  
+・宗教的な真理や命題を、【教義】と呼ぶ。キリスト教にも勿論教義はある  
+※ちなみに教義や信仰について追及する学問は［神学］  
+・キリスト教の教義として現在に知られているものは多くある  
+・その教義の多くは、イエスの死後、ローマ帝国の時代に作られていったものである  
+  
+・例えば、イエスの死は人間の罪の贖いである、みたいな教義がある  
+・旧約聖書にもあるように、最初の人類［アダム］は、自らの犯した［罪］によって楽園を追放された  
+※法的には違法行為を、キリスト教的には神に背く事を［罪］と呼ぶ。この場合は、食べないようにと命じられていた知恵の木の実を食べた事  
+・アダムの罪はその子孫たるあらゆる人類に受け継がれており、それ故に人は過ちを犯す  
+・これを【原罪】と呼び、それ故に人は、神によって救われる事ができない  
+⇒「この罪を何とかするべくイエスは神によって遣わされたのだ」「即ち、全人類の原罪を背負って代わりに死す事で、【贖罪】と成したのだ」「故にイエスを救い主として受け入れる者は、救われる」…というこの教義は、キリスト教の基本である。この教義もまた、イエスの死後に生まれたものである  
+  
+・イエスの死後しばらくは、イエスの直弟子や彼らに近い弟子によって広められた  
+・このような弟子達を、［使徒］と呼ぶ  
+・有名どころで言うと、【ペテロ（ペトロ）】や【パウロ】がいる  
+・前者は、イエスの直弟子で、初期キリスト教布教の中心的な人物であった  
+・後者は、［ローマの信徒への手紙（ローマ人への手紙）］とかを書いた人  
+⇒この人は元パリサイ派ユダヤ教徒である。後に【回心】してキリスト教徒となった  
+※回心は、元はと言えば仏教用語。要は改宗する事なのだが、「神に背いていた罪を認める」とか「悔い改めて」とかそういうのを強調してキリスト教へ改宗した、と言いたい時はこの用語を使う  
+※ちなみに、神がその意志や真理を人間に示す事は［啓示］と呼ぶ。この用語も、仏教とかで使われる事もある  
+  
+・さて、使徒の時代が終わった後、次に教義的に大きな動きが起こるのはローマ帝国の末期である  
+・この時期起こった大きな変化は二つ  
+・一つは第一回ニケーア（ニカイア）公会議、もう一つは【アウグスティヌス】の登場である  
+  
+・まずは公会議から  
+・そもそも、キリスト教というのは意外と、教義がいい加減な宗教である  
+・例えば、キリスト教に於いて神はヤハウェのみである（一神教だから当たり前）  
+・ところで、誰もが知っている通り、イエスは神の子である  
+・「あれ？」「じゃあイエスも神なのでは？」「え、でもそうすると多神教にならない？？？」  
+・…こういうところが多いのである  
+  
+・これは一見すると悪い事だが、悪い話ばかりではなかった  
+・教義がいい加減だからこそ、「皆で話し合って正しい教義を考えよう」という考え方が生まれたのだ  
+※もっと言えば、教義がいい加減だったからこそ、「皆で話し合って正しい教義を考えよう」「時代に合わせて教義を変えよう」という事が出来たとも言える。例えば、新旧聖書には、奴隷制が悪い、とは書いていない。だから、中近世のキリスト教世界には奴隷制が合法的に存在し得た。しかし近代に入ると「キリスト教の博愛と平等の精神から考えたら、奴隷制って駄目では？」という話になり、奴隷制はなくなった。時代に合わせて、考え方を変えたのである  
+  
+・「皆で話し合って正しい教義を考えよう」の具体化が、公会議である  
+・ニケーア公会議ではまさに、「イエスも神なのでは？」が話し合われた  
+・ここで正統とされたのが、父なる神とイエスと聖霊は一体である、という【三位一体説】である  
+※この三位一体説、「何言ってんのか意味不明」とよく質問が出る。基本的にはこれ、「救世主だし、教祖様ポジでもあるし、できればイエスの神性は否定したくない」「でもイエスの神性を認めると多神教になる」という矛盾を「神とイエス（と聖霊）は一体！ひとつのもの！」「そういうもんだって信じろ！！」と強引に解決したもの、と考えるのが一番分かりやすい  
+※この三位一体説を認める立場を、高校世界史なんかではアタナシウス派と呼ぶ。それ以外の場面では、ニカイア派とかカルケドン派とか呼ばれる場合が多い  
+  
+・続いて、アウグスティヌス  
+・アウグスティヌスは、最大の【教父】と呼ばれた初期キリスト教きっての理論家である  
+※教父は、キリスト教の初期、正統とされる教義と信仰の確立に貢献した者を言う。特にローマ帝国期は、異教徒との論争に勝ち抜いた功績を持つ者が多い  
+  
+・アウグスティヌスの最大の功績は、仏教的に言えば他力本願的な信仰を確立したところにある  
+・実はこの頃までは、キリスト教にも「徳を積んで善人になりましょう」みたいなのがあった  
+・「善行を重ねて修行しましょう」「徳を積んで義の人になり、天国へ行きましょう」みたいな  
+・言い換えれば、「人は努力によって自ら救われる事ができる、努力せよ」みたいなのがあったのだ  
+  
+・この手の信仰は、大衆には広がらない事が多い  
+・大衆はそもそも生きるのに精一杯で、修行も糞もないからである  
+・今も昔も、節制は金持ちの贅沢なのだ  
+  
+・そういった、「努力せよ」型のキリスト教に対して「いや無理でしょ」と言った男  
+・それがアウグスティヌスである  
+・彼は元々マニ教の信者で、若い頃は堕落した生活を送っていた男でもある  
+※その辺を赤裸々に綴ったのが【『告白』（『告白録』）】  
+  
+・彼は、だからこそ、この（↓）ような事を言った  
+・「人は善行とかによって徳を高めて、それで救われるなんて事はないんだよ」  
+・「人は不完全で罪深い存在で、信仰で神にすがる事によってのみ救われるんだよ」  
+・即ち、神の【恩寵】によってのみ、人は救われるとしたのである  
+  
+・日本の仏教も、「修行せよ」型のものはやはり、広がったのは主に貴族だった  
+・大衆に広がったのはやはり、仏様にすがれば救われる、とやりだしてからである  
+⇒それこそ「南無阿弥陀仏と唱えるだけで救われる」なんていうのは典型  
+・そう考えると、アウグスティヌスの功績は極めて大きいと言えよう  
+  
+・アウグスティヌスはまた、古代ギリシア哲学とキリスト教の融合を試みた、最初期の人物でもある  
+・彼のような人が、特にプラトンの思想とキリスト教を融合させていった  
+・それを受け継いで、中世のキリスト教思想が確立していくのである  
+・古代ギリシア哲学関係で有名な彼の思想としては、徳に関するものがある  
+・彼はプラトン的な四元徳より上位の徳として、キリスト教的な徳を設置した  
+・それが【信仰、希望、愛】であり、これを【キリスト教的三元徳】と呼ぶ  
+  
+  
+### 〇中世キリスト教思想の確立  
+・三位一体説やアウグスティヌスの教説を基に、中世のキリスト教思想が確立されていく  
+  
+・例えば、中世キリスト教思想では「教会が上、国家は下」というようなものがあった  
+・即ち、キリスト教会の方が国家、王とか政府より偉い、というような思想である  
+・これは明らかに、【アウグスティヌス】の教説の影響を受けている  
+  
+・彼の後期の著作【『神の国』】には、その旨が書いてあるのである  
+・即ちこの世の、人の国というのは俗悪な［地上の国］である  
+・［地上の国］は、この世の終わりに［神の国］に取って代わられる  
+・それまでは、この地上に於いて神の国を代表するのは、教会である  
+・…というような事が、彼の本には書いてあるのである  
+  
+・但し、ここまで見たキリスト教思想の発展には、負の側面があった事は忘れてはならない  
+・以前も言ったが、中世（ローマ帝国崩壊後）の欧州はキリスト教の世界である  
+・この時代、欧州は「キリスト教こそ全て」という世界になる  
+⇒「人間＝キリスト教徒」「キリスト教徒でない者は人ではない」「非キリスト教徒はむしろ狼に類するもので、殺して称賛されるもの」というような世界になっていく  
+・この中世キリスト教世界を見て、「イエスの教えどこ行った？」という話、実際ある  
+・例えば中世盛期、十字軍の時代は「異教徒を殺す」事は疑う余地のない正義だった  
+⇒イスラム教徒と交渉し、無血で聖地エルサレムを奪取した“最初のヨーロッパ人”フリードリヒ二世は、「アンチ・キリスト」として破門されている  
+  
+・また、中世に入ってしばらく経つと、教会は農民から税を取り立てるようになる  
+・教会は貴族の農民支配に協力し、税の徴収を代行する事で収入を得るようになるのだ  
+・中世のキリスト教は、言ってみれば、支配の宗教であった  
+  
+・このようなキリスト教の在り方が、隣人愛を説いたイエスからかけ離れているのは事実である  
+・初期キリスト教によるキリスト教思想の確立が、そういう乖離の端緒である事は、否定し得ない  
+  
+・それこそ中世のローマ教会は、アウグスティヌスの影響下、イエスの思想から乖離した面がある  
+・ローマ教会を中心としたキリスト教の一派を【カトリック】と呼ぶ  
+⇒ローマ・カトリック教会とか、ローマ教会とか呼ぶ場合もある  
+・既に見たように、「神の国」思想の影響により、中世では「教会が上、国家は下」であった  
+・カトリックはこの思想に乗って、キリスト教世界の頂点に立とうと行動した  
+・ローマ教会こそがキリスト教世界の頂点であり、その頂点に立つ【教皇（法王）】こそが世界の王  
+・そうなるべく、行動した  
+・例えば他の教会を攻撃し、世俗の王に対して政治的な干渉を繰り返した  
+・中世欧州世界に於いて、教皇とは、世界の覇者を目指す有力な政治家であった…  
