--- a/02_03.md
+++ b/02_03.md
@@ -1,2 +1,341 @@
 # 中世キリスト教思想と初期～盛期ルネサンス
 
+  
+## ●スコラ学  
+### 〇中世とスコラ学概要  
+・地中海を制したローマ帝国は、古代末期、東西に分裂する  
+・東はビザンツ帝国として生き延びたが、古代末期から中世初期にかけて、西ローマ帝国は崩壊  
+・いわゆる欧州と呼ばれる地域は、混沌の時代、戦乱の時代を迎える  
+  
+・この西ローマ帝国の崩壊は、要するに、ゲルマン人という蛮族の侵入によるものだった  
+・ゲルマン人の侵入によって、ローマ帝国の高度な文明、文化は徹底的に破壊された  
+・古代ギリシア、ローマの高度な思想も、その多くが失われてしまった  
+⇒この破壊には、勿論キリスト教も関係している。基本的にギリシアの思想はキリスト教以前のものであり、キリスト教には都合の悪いものも多かった。それこそデモクリトスの「人間は所詮原子なんだから死後の世界なんか考えたって仕方ない」は、死後の世界の話で現実世界の生き方を規律せんとするキリスト教とは、最悪に近いほどの相性の悪さである  
+※特に“万学の祖”アリストテレスの成果は、ほぼ全て失われてしまった  
+  
+・無論、ゲルマン人とキリスト教が作る中世は、古代の叡智全て破壊した訳ではなかった  
+・それこそ、中世欧州の学術的な共通語はラテン語だが、これはローマ帝国の公用語である  
+⇒中世の欧州を支配したゲルマン人は、ローマ帝国の遺産を破壊しながら、ローマ帝国の遺産を受け継ぎもした、という話  
+  
+・中世西欧の学問の中心となった神学にもやはり、同じような傾向が見られる  
+・中世西欧の神学や哲学を総称して【スコラ】学などと言う  
+※哲学ならスコラ哲学、神学ならスコラ神学、みたいな感じ  
+・このスコラ学のテキストの代表例と言えば、アウグスティヌスの『告白録』や『神の国』である  
+・即ち、古代ローマ帝国の叡智をテキストにしていた訳である  
+  
+  
+### 〇十二世紀ルネサンス  
+・欧州の中世は大体、初期、盛期、後期に分けられる  
+・世界の片田舎に過ぎなかった欧州は、盛期にもなると先進国と戦えるぐらい強くなる  
+・強くなった欧州は、実際に、イスラム勢力という当時の先進国に戦いを挑むのである  
+⇒大体十二世紀初頭から起きる、いわゆる十字軍やレコンキスタと呼ばれる一連の戦争である  
+  
+・ところで。先に、古代末から中世初頭の混乱で、古代の叡智の多くが欧州から失われたと言った  
+・この古代の叡智は、実は、主にイスラム勢力によって保存されていた  
+⇒例えばシリアやエジプトはイスラム勢力の拠点となった場所だが、ここは元はと言えば古代ローマ帝国の領土である。つまりそういう事  
+  
+  
+・十字軍やレコンキスタといったイスラム勢力との戦争は、そのイスラム勢力との交流も引き起こした  
+⇒イスラム勢力も一枚岩ではなかったので、欧州キリスト教勢力と戦うばかりではなく、商売相手として付き合う勢力もいた  
+  
+・この交流によって、イスラム勢力に保存されていた古代の叡智が、欧州へ流れ込んでくる  
+・これがいわゆる、十二世紀ルネサンスである  
+  
+・十二世紀ルネサンスにより、イスラム世界から、古代ギリシア・ローマの遺産が流れ込み始めた  
+・その中でも特に大きな影響力を持ったのが、“万学の祖”アリストテレスの著作であった  
+・彼の著作はキリスト教の教義と全く矛盾するものでありながら、論破できなさそうな存在であった  
+⇒アリストテレスの哲学の特徴として、「物事を理性的に考える」というものがある。「理性的」というのを、理論的とか、理屈でとか言い換えてもいい。そして理屈で考えると、カトリックは論破されがちである。「神様なんて本当にいるのか？」「キリスト教の神様って元はユダヤ人の神様だけど、ユダヤ人がどんなに困っても助ける気配ないよね？」「まぁ仮に神様がいるとして、んで、ローマ教皇が神様の代理人だって証拠は？」とか言われると基本、勝てない訳である  
+  
+・ここに、神学を中心に置いた中世西欧の学問は、窮地に立たされた  
+・当然、その総本山たるスコラ学もである  
+・その中で、例えばラテン・アヴェロエス主義という神学の敗北も現れた  
+  
+・ラテン・アヴェロエス主義は何か。それは端的に、［二重真理］説に求められる  
+・「哲学（アリストテレス）の言う事と、神学（キリスト教）の言う事は違うかもしれない」  
+・「でも、どっちも真実」  
+・「そういう事でいいじゃないですか」  
+・これが、端的に説明した場合のラテン・アヴェロエス主義であり、二重真理説である  
+⇒要は、キリスト教神学ではアリストテレス哲学をどうやっても論破できないから、どっちも真実って事でいいじゃん、という妥協に走った。実質的な、神学の敗北宣言と言える  
+  
+・このような神学の窮地に現れたのが、ドミニコ修道会出身の神学者トマス・アクィナスだった  
+・彼は［『神学大全』］の著者としても有名な、スコラ学の大成者である  
+  
+・トマス・アクィナスは、アリストテレスの思想を異端として排斥するのではなく、受け入れた  
+⇒ただ受け入れるだけではなく「アリストテレス的な考え方をしても分からないものはある」と証明した。ここが彼の大成者たる所以である  
+  
+・現代の科学でも、「絶対に分からない」「絶対に証明できない」とされているものはいくつもある  
+・それこそ宇宙がどうやって誕生したのかというのは、仮説を出す事こそできても、絶対に証明できない  
+・そういう、「理性的に考えても分からない」事こそが、信仰の領分であり、神の領分である  
+・…そうやってスコラ学と神学を守ったのが、トマス・アクィナスなのである  
+  
+  
+・トマス・アクィナスによって大成された後も、スコラ学は続く  
+・例えばウィリアム・オブ・［オッカム］は、トマス・アクィナス後のスコラ学者である  
+  
+・しかし、スコラ学は結局、トマス・アクィナス後は力を失っていく  
+・折角トマス・アクィナスが守った神学も、弱まっていくのである  
+・特に中世後期は、十字軍の失敗やら教皇の軍事的敗北やらで、キリスト教の権威が失墜する  
+・信仰はどんどん弱まり、代わって理性の力が強くなっていった  
+  
+  
+〇ちなみに  
+・トマス・アクィナスは「理性では分からない部分を神の恩寵が補完する」みたいな事を言ってた人である  
+・山川の倫理の教科書だと、その辺を雑に「二重真理」と言ってしまっている  
+⇒そのせいで、トマス・アクィナスは二重真理説を奉じたラテン・アヴェロエス主義者だみたいな文章が載ってしまっているので、その辺注意  
+※ちなみに実際、この辺は分かりにくかったようで、トマス・アクィナスの説いた話について、「これは二重真理だ、異端だ！」みたいに言ってた人もいる  
+  
+  
+## ●ルネサンス  
+### 〇ルネサンスの一般教養  
+・【ルネサンス】とは、一言で表現すれば、「古代ギリシア・ローマの叡智の、欧州への再導入」である  
+・もしくは、「古代ローマや古代ギリシアのような、高度な文化を復活させよう」という文化運動である  
+  
+・だからこそ、十二世紀に起こったイスラム世界との交流も、十二世紀ルネサンスと称される  
+・そして十三世紀後半から十四世紀初頭にかけて、ついにルネサンス本番がイタリアで始まる  
+※一般には十四世紀とされるが、ルネサンス最初の一人が1265生まれ1321没なのでこう書いた  
+※イタリアに於けるルネサンスを、一般にイタリア・ルネサンスと呼ぶ  
+  
+・イタリア・ルネサンス最初の重要人物は、【『神曲』】を書いた【ダンテ】(1265\~1321)であろう  
+⇒彼の書いた『神曲』は、古代ローマの詩人ウェルギリウスと共に地獄、煉獄、天国を旅するという神秘的な内容の叙事詩である  
+※現代の標準イタリア語の元になった作品でもある  
+※また、現代日本のファンタジー作家やファンタジーゲーム制作者が、地獄や天国といった世界を描写する際、その典拠にする事もよく見られる  
+  
+・ダンテに続いて現れたのは、同郷の人間にしてダンテの崇拝者だった  
+・即ち、【ボッカチオ（ボッカッチョ）】(1313\~1375)である  
+⇒彼の代表作【『デカメロン』】は、彼が崇拝したダンテの『神曲』に対応して、『人曲』とも呼ばれている。あらすじとしては、〈黒死病（ペスト）〉を逃れた十人の男女が十日間、それぞれに物語るというものである  
+  
+・ボッカチオと同時期に活躍したのが、【ペトラルカ】（1304\~1374）である  
+・代表作は『抒情詩集（カンツォニエーレ）』や『アフリカ』  
+  
+・ダンテ、ボッカチオ、ペトラルカの三人は、よくイタリア・ルネサンスの三大【人文主義】者と呼ばれる  
+・人文主義とは、人本主義、人道主義などとも訳され、英語ではhumanismという  
+・ヒューマニズムとは、このルネサンス期に誕生したのである  
+⇒中世的な、教会と神を中心とした世界観に対し、人間や理性を中心とした世界観を提供したのが人文主義者である  
+  
+・人間や理性が中心と言っても、カトリックという宗教を否定した訳ではない  
+・一般に人文主義者は、穏健と寛容を旨とした  
+・故に人文主義者は、カトリックという旧来の権威を否定しない  
+⇒理性を重視し、合理主義的な考え方を推奨しながらも、「妥協のない合理主義者」ではなく「他者に寛容な合理主義者」を目指した人々、と考えるとよい  
+  
+  
+・このような中で理想とされたのは、古代ギリシアやローマの英雄のような、万能の天才であった  
+・即ち、【万能人】とか【普遍人】と呼ばれるような人である  
+⇒実際、古代ギリシア、古代ローマの英雄は万能の天才が多い。例えば偉大な哲学者ソクラテスは、同時に熟練の軍人であり、重装歩兵として複数の戦闘に参加している。古代に於いて、英雄は政治家であり、軍人であり、哲学者でもあるのが普通だった  
+  
+  
+・イタリア・ルネサンスが始まってから約二百年  
+・イタリアでは、1493年からイタリア戦争と呼ばれる大戦争が始まる  
+・イタリア戦争直前からイタリア戦争中盤にかけて、イタリア・ルネサンスは最盛期を迎える  
+・またその中で、万能を体現した天才も現れるのである  
+  
+・その代表は、【“万能の人”レオナルド・ダ・ヴィンチ】(1452\~1519)である  
+⇒レオナルド・ダ・ヴィンチは『モナ・リザ』や『最後の晩餐』といった名画で知られる為、画家のイメージがある。しかし実際には、彼は万能の人であった。彼は音楽家であり、建築家であり、数学者であり、天文学者であり、生物学者であり、物理学者であり、地理学者であり、そういった知識を生かした発明家でもあった  
+  
+・また、レオナルドのライバル【ミケランジェロ】(1475\~1564)もまた、万能の人である  
+⇒本業は彫刻家であり、『ダヴィデ』や『モーセ』の彫刻で知られる。しかし他の分野でも才能を発揮している。例えば、ローマのヴァチカン宮殿でも最高の格式を持つシスティーナ礼拝堂に、天井画『天地創造』や祭壇画『最後の審判』を描いたのは彼である  
+  
+・同時期の人物で、レオナルドとミケランジェロに並ぶ名声を誇るのが【ラファエロ】(1483\~1520)  
+※この三人を合わせて、ルネサンスの三大巨匠などと言う場合もある  
+・彼は万能の天才タイプではなく、また長生きもしていない  
+・しかし、大規模な工房を率いた画家であり、その職人を動員して絵を描けた  
+・それ故に、若くして死んだとは思えないほど多くの作品を遺している  
+  
+・ラファエロの作品としては、倫理の分野では特に、【アテネの学堂】が有名である  
+⇒アカデメイアにいた頃のアリストテレスと、その師プラトンを描いたフレスコ画。倫理の教員が授業で使いがち。何なら倫理の教科書やら参考書やらも使いがち  
+  
+・無論、三巨匠以外にも、イタリア戦争直前～イタリア戦争期のイタリアには多くの代表人物がいる  
+・例えば絵画の分野では、フィレンツッェ共和国出身の【ボッティチェリ】が有名  
+⇒代表作は『ヴィーナスの誕生』や『春（プリマヴェーラ）』。特に『春』は、「ほら、ルネサンスになると欧州の絵も見れるもんになるでしょ？」みたいな形で、世界史の授業で使われがち  
+  
+  
+### 〇ルネサンスの思想  
+・既に見たように、ルネサンスの思想の中心は人文主義である  
+・中世的な神中心の世界観ではなく、近現代的な、人間中心の世界観  
+・重視すべきは神への信仰ではなく、人間の理性  
+・ただし、だからと言って旧来の権威を完全に否定する事もない  
+・穏健で温厚な、寛容な合理主義  
+・これが人文主義である  
+  
+・そんな人文主義者の中でも、特に分かりやすく人間中心主義を採ったのが【ピコ・デラ・ミランドラ】  
+・彼は、「人間は自由意志によって、神のようにも獣のようにもなれる」とした  
+・その旨を述べた彼の演説原稿【『人間の尊厳について』】は特に有名である  
+⇒中世という神と教会と信仰の時代に於いて、人間はちっぽけな存在でしかなかった。神の慈悲にすがるしかない罪深い動物であった。それがルネサンスによって、「神のようにも獣のようにもなれる」と、人間という存在そのものが肯定されるようになったのである  
+  
+・ここまで、イタリアの人文主義者ばかり紹介してきた  
+・勿論、ルネサンスはイタリア以外でも進行したし、イタリア以外にも人文主義者はいる  
+  
+・例えば、イタリア戦争期の低地地方には、偉大な人文学者【エラスムス】(1466\~1536)が登場する  
+・彼は風刺文学の【『（痴）愚神礼賛』】を著し、当時の王侯貴族や堕落した教会を痛烈に批判した  
+  
+・実は、人文主義者には「理想の世界」を求める傾向がある  
+・人文主義者は穏健で寛容だが、同時に合理主義者である  
+・だから「カトリック教会なんてものは偽い物だ、潰せ」とかは言わない  
+・一方で「今のカトリック教会堕落してない？」「改革して、もっといいものになろうよ」とかは言う  
+・その一つの表現が、エラスムスの痴愚神礼賛だった訳である  
+  
+・同時期のイングランド王国の人文主義者【トマス・モア】の行動も、同じように説明できる  
+・即ち彼は、平等で平和で幸福な、どこにも存在しない理想社会を描いた文学作品を著した  
+・それこそが【『ユートピア』】である  
+⇒彼もまた、理想の世界を求めてこういう本を書いた訳である。ちなみに現在、理想郷のことをユートピアと呼ぶのは彼のこの本が由来である  
+  
+  
+・尚、ルネサンスの思想は人文主義だけではない  
+・例えば、イタリア戦争期には近代政治学の祖とされる【マキャヴェリ】が登場している  
+⇒どんなに公明正大な政治であっても国益を損ない国民が苦しむものは悪であり、どんなに悪逆非道な政治であっても国益を確保し国民を助けるものであれば善である…というような考え方を、中世以降の欧州では初めて提示したのが、彼である。主著は【『君主論』】  
+  
+・他にも同時期の有名人として、コペルニクスという人がいるのだが…  
+・この人は後で扱った方が、話が分かりやすい。なので、ここでは一端置いておく  
+## ●宗教改革  
+### 〇宗教改革の始動  
+・欧州中を巻き込んだ大戦争、イタリア戦争は、1492年に始まって1559年に終わる  
+・この大戦争の直前～戦争中に、ルネサンスは最盛期を迎える  
+・イタリア戦争の後半ともなると、このルネサンスの影響を受けて、大きな思想的革命が起きる  
+・それが、【宗教改革】である  
+  
+・宗教改革は、地理的には狭い意味でのドイツと呼ばれる地域を中心として起きた  
+※スイスや低地地方、ポーランドといった地域を含まない意味でのドイツ  
+  
+・まず宗教改革の前提条件を、二つほど挙げておきたい  
+  
+・一つ目は、カトリックというものが嫌われていた、という事実である  
+・それこそ、庶民からも貴族からもかなりの割合で嫌われていた  
+・但しこれは、キリスト教が嫌われていた、という話ではない  
+・神の代理人たる教会や教皇が嫌われていた、という話である  
+⇒中世後期以来、教皇の権威は失墜しっ放し、教会の腐敗も腐敗するに任せている状態。しかも教会は、農民からの税の徴収を代行して、それで稼いでいた（徴収した税の十分の一が教会の収入になった）。そりゃあ庶民から嫌われるし、貴族も税の十分の一を持っていく教会を苦々しく思っていた  
+  
+・二つ目の理由として、聖書主義の登場がある  
+・これは、ルネサンスの人文主義者の中から登場してきた考え方である  
+・要するに、聖書というキリスト教信仰の基本中の基本に立ち返ろう、というような主義である  
+  
+・ところで、聖書には、「教皇」という単語は無い  
+・何ならローマ・カトリック教会についても、全く載っていない  
+・旧約聖書や新約聖書ができた頃には、教皇もカトリックも存在しないのだから、当然である  
+・そんな聖書に戻ろう、という主義が出てきた  
+・しかも、腐敗した教会や教皇が嫌われている中で、出てきた  
+・これが、教皇やカトリックの否定に繋がって引き起こされた事件こそが、宗教改革と言えよう  
+  
+・宗教改革の直接の契機は、【免罪符（贖宥状）】の販売とマルティン・【ルター】の批判である  
+  
+・まずは、免罪符（贖宥状）について軽く解説しておこう  
+※尚、名前についてはどちらでも好きな方を使えばよい。歴史家というのは逆張りが仕事みたいなところがあるので、定着した名前があると新しい名前を作り出して「こっちが正しい！」みたいな事をやりだすものなのである。免罪符と贖宥状もまた、その一種である。本稿では以降、免罪符を用いる  
+  
+・カトリックの教会では、告解というものがある  
+・教会で神父様に秘密の部屋へ通され、自分の罪を告白する  
+・すると、神父は「分かりました。私は貴方の罪が許されるよう、神にとりなしておきます」と言う  
+・そして、「その代わり、〇〇をしなさい」と指示する  
+  
+・〇〇の内容は人によって違い、教会の掃除だったり、金持ちならば寄付だったりもする  
+⇒掃除なら掃除で、本人が教会の掃除をしている間、神父が「神様、どうかこの者を許してやってください」と神にお願いする訳である。これが現代カトリックにも残る、告解という制度であった。  
+  
+・ところで、商売人ならば領収書が欲しいのは世の常である  
+・本来、免罪符というのは、この告解に於ける領収書なのである  
+⇒つまり、「貴方は贖罪として、教会に寄進をされました。ここに証明します」という領収書、証明書というのが、免罪符の起源である。これ自体は、カトリックの教義に則った、まっとうなものと言えるだろう  
+  
+・ただイタリア戦争期になると、この免罪符がかなり商業化していた  
+⇒免罪符販売の有名な広告が、”So bald der Gülden im Becken klingt, Im huy die Seel im Himel springt”。即ち、「グルデン金貨が「チリン」と鳴れば、たちまち「スポン」と天国へ」  
+  
+・この状況に疑問を投げかけたのが、【ルター】である  
+・ルターは極めて敬虔な修道士である  
+・いつ地獄に落ちるかと怯えているような、小心でそれ故に真面目な宗教家であった  
+※実際、キリスト教というのは、「俺は十戒をきちんと守ってるぜ！」とか言ってたら傲慢の罪で地獄行き、みたいなところがある。だからこそ、小心で真面目なルターは、敬虔なキリスト教徒として信仰の道を歩んでいた  
+  
+・ルターからすれば、教皇レオ十世の免罪符販売は、いくら何でも商業主義に過ぎた  
+・と言ってもルターは最初、教皇を否定しようとか、カトリックをひっくり返そうとかは考えていない  
+⇒ヴィッテンベルク大学で最初に出した【『九十五か条の論題』】も、「免罪符ってどういう理屈で売り出されてるの？」「考えてみたけど正直分かんないから、討論会でもしませんか」程度のものだった  
+  
+・ただ、ルターが小心で真面目な気質だったというのが、話を難しくした  
+・真面目なルターはこの問題について真剣に考えた結果、こう↓考え始める  
+・「あれ？　教皇とかローマ教会とか、聖書に書いてないんじゃないか？」  
+・「あれ？　もしかして教皇とか教会って要らないのでは？」  
+  
+・そのような中で1520年、ルターは三冊の本を著す  
+・即ち、『ドイツ貴族に与える書』、『教会のバビロニア捕囚』、【『キリスト者の自由』】  
+⇒特に『キリスト者の自由』は、「キリスト者はすべてのものの上に立つ自由な主人であり、何人にも従属しない」という文言で有名  
+・これらの本によって、ルターの思想は概ね完成する  
+  
+### 〇ルターの思想  
+・ルターの思想は、概ね三つの要素で定義づけられる  
+  
+・一つ目は【信仰義認】説である。  
+・これは、「人は信仰によってのみ義とされる」というものである  
+⇒つまり、古代ローマ帝国末期の教父アウグスティヌスが唱えた、「人は善行とかによって徳を高めて、それで救われるなんて事はないんだよ」「人は不完全で罪深い存在で、信仰で神にすがる事によってのみ救われるんだよ」という考え方の再確認であると見てよいだろう。ルターもまた、キリスト教の原点は［「信仰のみ」］と言っている  
+  
+・二つ目は、【聖書（聖書中心）】主義である  
+・これは要するに、「聖書に書かれている事以外は教義として認められない」という話である  
+・故にルターは、聖書に書かれていないローマ・カトリック教会や教皇という存在を認めない  
+  
+・三つ目は、【万人司祭（万人祭司）】説である  
+・彼は、「聖書の正しい読み方は偉い聖職者が決めるものではない」と考えた  
+・即ち、「信者一人一人が聖書と向き合い、自分で決めるものだ」と考えたのである  
+  
+・このような思想に至ったルターは、この時点で既に、カトリックを否定していたと見ていいだろう  
+・故に、カトリック側がどのように働きかけてももう、事態が穏便に済むという可能性はなかった  
+⇒小心だがそれ故に真面目なルターからしてみれば、現実世界の権力によるどのような脅しよりも、死後神によって永遠の地獄に落とされる方が怖い  
+  
+・そしてまた、当時のカトリックは様々な人々から嫌われていた  
+・庶民は従来の圧政への不満を持ち、貴族も税を持っていかれて怒っていた  
+・結果、ルターが火をつけた怒りは、カトリックから分離した新しいキリスト教を、次々と誕生させる  
+⇒こうして誕生した新しいキリスト教を、まとめて【プロテスタント】と呼ぶ  
+※カトリックを旧教とし、プロテスタントを【新教】とする場合もある  
+  
+  
+### 〇カルヴァン派  
+・プロテスタントとは、宗教改革で誕生した新しいキリスト教の総称である  
+・例えばルターの思想を信奉する者達は、ルター派と呼ばれる  
+・そしてプロテスタントの二大派閥と言えば、ルター派と【カルヴァン】派である  
+  
+・カルヴァン派の祖ジャン・【カルヴァン】は、主にスイス地域で活動した宗教家である  
+・フランス王国生まれだが、祖国を追われてスイス地域に亡命、【『キリスト教綱要』】を書く  
+・この本で有名になった彼は、スイス地域のジュネーヴ共和国で神権政治を行っている  
+  
+・彼の思想の中心は、【予定説】である  
+・即ち、「誰が地獄に落ち、誰が天国に行けるかは、予め神によって決められている」という思想である  
+・ここだけ聞くと、普通の日本人は違和感を覚える  
+・「何をどうしたって救われない人がいるなんて、なんて残酷なんだ」と  
+・実際、そのように言ってカルヴァンを批判する欧州人も当時からいた  
+  
+・ただカルヴァン派の場合、この予定説をそのようには取らない  
+⇒むしろ、「全ては神によって予定されているからこそ、神によって善人になると予定された人間だと確信して毎日を過ごしなさい」という思想に至る  
+  
+・実際のところ予定説は、神が全知全能であるとするならば、「そうなってしまう」ものでしかない  
+・仮に、キリスト教の教えを守って生きている人がいるとする  
+・神が全知全能なのであれば、その人がそういう善人になるという事を、事前に知っていて当然である  
+  
+・故に、彼の説に共鳴した者は多かった  
+・特にカルヴァンは、【職業召命】観を強調した  
+※ルターにも見られる思想だが、カルヴァンだとより強調されている  
+  
+・職業召命観を、商人を例に説明しよう  
+・旧来のキリスト教では、商人のような営利事業は卑しい職業として地獄に落ちやすいとされてきた  
+・しかしカルヴァン（やルター）は、その人の職業は、神の思し召しである（［召命］である）とする  
+・特にカルヴァンは予定説を唱え、天国へ行くか地獄に落ちるかは神によって予め決まっているとする  
+・だからこそ、「俺は天国へ行ける善人だと確信して、今日も勤勉に商売するんだ」となる訳である  
+  
+・ちなみに。この職業召命観を分析した二十世紀の社会学者にマックス・ヴェーバーがいる  
+・こういった職業召命観を持つプロテスタントが広がると、人々が勤勉に働くようになる  
+・プロテスタント、特にカルヴァン派の勤勉の精神が、後の資本主義経済を作り上げた…  
+・そのような事が、彼の著書【『プロテスタンティズムの倫理と精神』】に書かれている  
+  
+・それはともかく。カルヴァンの思想はスイスを越えて広く広がっていった  
+・特に、何かしらの商売をしている場合が多い市民階級にはよく広がった  
+・だからこそ、商業で成り立つ低地地方や、ここと取引する者が多いイングランドにも広がった  
+  
+・広い地域に定着したが故に、カルヴァン派は異称が多い  
+・例えば、イングランドのカルヴァン派は［清教徒（ピューリタン）］と呼ばれる  
+⇒また、彼らの主義を「ピューリタン主義」という意味で［ピューリタニズム］とも呼ぶ  
+※同じく、カルヴァン主義という意味で［カルヴィニズム］という言葉を使う場合もある  
+  
+  
+### 〇対抗宗教改革  
+・既に見てきたように、宗教改革が深刻化したのは「カトリックが嫌われていたから」である  
+・その理由の一つとして、「カトリックがあまりにも腐敗していたから」がある  
+・その為、カトリックの側でも、「腐敗したカトリックを改革しよう」という機運が生まれていた  
+・このような動きを、対抗宗教改革（反宗教改革）と言う。  
+  
+・対抗宗教改革の最初の運動は、1534年の［イエズス会］の結成であった  
+・この修道会は、［イグナティウス・ロヨラ］やフランシスコ・ザビエルらが中心となって誕生した  
+・ただ、イエズス会は、対抗宗教改革そのものよりはむしろ欧州外への宣教で有名である  
+⇒戦国時代の日本へ宣教に来たのもイエズス会であり、何なら、イエズス会の結成に関わったザビエルも戦国の日本へ来たあのザビエルである  
+  
+・対抗宗教改革そのものは、1545年のトリエント公会議で本格化する  
+⇒この公会議はカトリックの教義の厳密化、更にはカトリック教会の自己改革が議論された。プロテスタントに対抗できる理論の構築や、プロテスタントに対抗する為の改革であった  
