--- a/03_01.md
+++ b/03_01.md
@@ -1,2 +1,66 @@
 # モラリスト
 
+  
+## ●シャルル・ド・モンテーニュ  
+・イタリア戦争後期に起きたのが宗教改革である  
+・宗教改革は、カトリックとプロテスタントによる、血で血を洗う宗教戦争をも引き起こした  
+・特にイタリア戦争後は、そういう宗教戦争が頻発する  
+・フランス王国もまた、ユグノー戦争と呼ばれる宗教内戦に陥り、混乱の時代を迎える  
+  
+・この混乱の時代に、官僚としても活躍した思想家がミシェル・ド・【モンテーニュ】である  
+・当時、フランス王国はカトリックとプロテスタントで真っ二つに割れていた  
+・特にカトリック強硬派は、プロテスタント絶滅こそ神の意志として暴れまわっていた  
+・彼ら強硬派にとって、プロテスタントを殺す事は、絶対の正義であった  
+  
+・このような中で、モンテーニュは穏健派だった  
+・他宗派への［寛容］を掲げた彼は、カトリックとプロテスタントの融和に努めた  
+  
+・彼の主著【『随想録（エセー）』】には、彼の寛容の精神があますところなく書かれている  
+・モンテーニュはまた、絶対の正義というものに［懐疑］の目を向けた  
+※思想史や哲学の分野で［懐疑論］とか言えば、普通は、「絶対の真理なんて、そんなものあるのか」というものである。モンテーニュの懐疑は、あくまで「絶対の正義」に向けられているので注意  
+  
+・「異端殺しは正義」「プロテスタント殺しは絶対の正義」  
+・カトリック強硬派は、本当にそう思っていた  
+⇒「人生で唯一笑ったのは、プロテスタント虐殺の報を聞いた時」という逸話のある王までいる時代である  
+・そんな時代に対し、「そんな訳あるか」と叫んだのがモンテーニュである  
+・彼は独断を批判し、自らにもまた【「私は何を知っているか（ク・セ・ジュ）」】と問いかけた人物である  
+  
+・穏健と寛容を旨とし、人間観察と内省によって人間の生き方を追求した者を【モラリスト】と呼ぶ  
+・モンテーニュはまさに、最初のモラリストであった  
+  
+## ●ブレーズ・パスカル  
+・モンテーニュの死後に現れたフランスの天才が、ブレーズ・【パスカル】である  
+・彼は基本的にはモラリストとされ、高校倫理ではモンテーニュの後継者として紹介される  
+・勿論それは一面の事実なのだが、一方で彼は短命の天才であり、様々な分野に業績を残している  
+⇒特に数学分野では、それこそ「パスカルの定理」なんてものも存在する  
+  
+・短命の天才故か、最も有名な著書は遺稿集の【『瞑想録（パンセ）』】である  
+・実際、有名なだけあって彼の思想については、この本を読むのが一番よい  
+  
+・瞑想録で彼は、人間を【葦】に喩え、極めてか弱い、悲惨な存在であるとした  
+・勿論、パスカルは人間を単に、か弱く悲惨なだけの存在だとした訳ではない  
+・物理的に、また肉体的に弱くとも、人間には思考がある。精神がある  
+・この思考、精神こそが尊いのだと彼は述べている  
+  
+  人間はひとくきの葦にすぎない。自然のなかで最も弱いものである。だが、それは考える葦である。彼をおしつぶすために、宇宙全体が武装するには及ばない。蒸気や一滴の水でも彼を殺すのに十分である。だが、たとい宇宙が彼をおしつぶしても、人間は彼を殺すものより尊いだろう。なぜなら、彼は自分が死ねることと、宇宙の自分に対する優勢とを知っているからである。宇宙は何も知らない。  
+  
+・時間や空間、物理的な意味では人間は弱いが、精神という面で見れば人間は強い  
+・このような、弱さと強さ、悲惨さと偉大さが同居する人間の在り方を、彼は【中間者】と呼んだ  
+  
+・そして彼は、精神的な意味での人間の偉大さを賛美した  
+・人間は確かに、か弱い葦である。しかし、ただの葦であってはならない  
+・人間は【考える葦】でなければならない。そこに人間の偉大さがある。尊厳がある  
+・人間はか弱く、長くても百年もすれば死ぬ  
+・しかしその有限性から目を逸らさず、思考し続ける精神性にこそ、人間の偉大さと尊厳があるのだ  
+※勿論、そういう事ができる人ばかりではない。人間の有限性から目を逸らし、日常に逃げ込んで何も考えない「ただの葦」になってしまう人もいる。そういう人々を、パスカルは［気晴らし］をしていると評した  
+  
+・パスカルは、言ってみれば、物理的な肉体よりも精神が偉大だと、精神を賛美した訳である  
+・そして彼は、愛はもっと偉大だ、と考えた人物でもある  
+・彼は、人間の精神を【幾何学的精神】と【繊細の精神】に分けた  
+⇒いわゆる理性と呼ばれる、推論したり理論的に考えたりする精神が、幾何学的精神。逆に、直感や感性による、文学や芸術、愛に関係する精神が繊細の精神  
+  
+・当然彼は、繊細の精神を重視した  
+・神の愛に従い、愛の秩序に従って生きてこそ安らぎが得られると、彼は考えたのである  
+・ちなみに、後期～ポストルネサンスの時代、一般に重視されていくのは理性である  
+・しかしパスカルは、理性たる幾何学的精神ではなく、愛たる繊細の精神を重視した  
+・ここに、彼のモラリストたる所以があると言えよう  
