--- a/03_02.md
+++ b/03_02.md
@@ -1,2 +1,95 @@
 # 科学革命
 
+  
+・改めて言うが、古代の科学は、かなり進んでいた  
+⇒物理学を「あとは顕微鏡開発して原子を確認するだけ」にしたデモクリトスは言うに及ばず。古代ローマ帝国にはコンクリートがあり、マンションが立ち並び、上下水道が完備され、便所も水洗式だった。原始的な蒸気機関すらあった  
+  
+・しかし、既に見たように古代末期から中世初期にかけて、古代の叡智の殆どは消し飛んだ  
+・結果、欧州は迷信の時代に突入する  
+⇒それこそ、錬金術すら、現代西洋科学に繋がる重要な要素となっている。錬金術という魔術的なものがそうなれるぐらい、中世は迷信の時代だった  
+  
+・この迷信の時代が終わり、近現代的な科学の時代がやってくる、その最大の転換点  
+・それはやはり、古代の叡智を復活させんとする、ルネサンスであった  
+・そして、近代科学の時代、その最初の一歩を記したのが、ニコラウス・【コペルニクス】であった  
+⇒以前、マキャヴェリとかエラスムスみたいな盛期ルネサンスの思想を色々紹介した時に、「この人も同時代の有名人なんだけど、後で説明した方が分かりやすいから…」と言って説明しなかった人。大体、ミケランジェロと同世代  
+  
+・コペルニクスが唱えた【地動説】が、全ての発端と言っても過言ではない  
+・この辺の話を軸に、近代科学思想の萌芽となった【科学革命】を見ていこう  
+  
+  
+## ●地動説と天動説  
+・古来、欧州人は天空を神聖視してきた  
+・林檎は木から落ちるが、天空に輝く星々は落ちてこない  
+・その理由を、欧州人は解明できなかった。宇宙を神秘として見ていた  
+※よく「ニュートンは林檎の木の実が落ちるところを見て万有引力を発見した」とか言われるが、実際のところ、引力自体は中世の時点で既に知られていた。と言うか、だからこそ、「じゃあ何で星々は落ちてこないんだ」となり、「落ちてくる筈のものが落ちてこない。神秘だなぁ」となっていた訳である。「地球は神が創造した世界の中でも特別な地位にあるから、落ちてこないんだ」と言う者もいた  
+  
+・さて、中世以来、ローマ・カトリック教会は【天動説】を支持していた  
+・神が創造した世界の中でも、特別な地位にある地球。この地球は、動く事はない  
+・太陽を含む星々が、地球の周囲を回っているのである…そんな感じの説である  
+・迷信と言えばそれまでだが、実はこの説、万学の祖たるアリストテレスも支持していたものでもある  
+※そういう意味では中世のキリスト教徒を責めてばかりもいられない  
+  
+・しかし実際のところ、地動説は古代ギリシアの時代には既に提出されているものである  
+・ルネサンスが進行すれば出てきてしまうのは、当然であった  
+・イタリア戦争終盤、コペルニクスが、『天球回転論（天球の回転について）』を著した  
+・これは、欧州への地動説の再導入であった  
+  
+・コペルニクスの地動説は欧州中に広がった  
+・やがてイタリアにも伝わり、哲学者ジョルダーノ・［ブルーノ］もこれを支持した  
+・しかし時期が悪かった  
+・イタリア戦争後半に始まった宗教改革を受けて、カトリック側も対抗宗教改革を進めていた  
+・この時期のローマ・カトリック教会は、腐敗の根絶と権威復活に必死であった  
+・権威復活を目指す教会と教皇にとって、教会の公式見解を否定する者は、許されざる異端であった  
+・況してや、教皇のお膝元であるイタリアで活動するなど、許されなかった  
+・1600年、ジョルダーノ・ブルーノは異端として火刑に処された  
+  
+・望遠鏡による観察で地動説の正しさを確信したガリレオ・【ガリレイ】もまた、イタリアの人物である  
+・地動説の正しさを証明するべく彼が書いた本が、【『天文対話』】である  
+・彼はまた、自然の真理を探究するには数学が必要だと主張した人物でもある  
+⇒彼は【「自然の書物は数学の言葉で書かれている」】と言っている  
+※実際これは慧眼で、現代でも、大学で物理学に進んだ人は高校で言う数学ばっかりやっている  
+  
+・そんなガリレイもまた、1633年には宗教裁判にかけられてしまう  
+・彼も、カトリックに逆らう異端と見做されたのである  
+・最早、イタリアで理性的な、合理主義的な文化活動を行う事に身の危険を伴う事は、明らかであった  
+・イタリア・ルネサンスはここに終わるのである  
+  
+・ちなみに、実はガリレイと同時代に、もう一人、地動説の研究を進めた男がいた  
+・それが、ドイツ地域に住んでいたヨハネス・【ケプラー】である  
+・彼の功績は、天体が楕円運動をしている事を解明した点にある  
+・と言うのは、地球やら火星やらといった惑星は、太陽の周囲を回っている訳だが…  
+・実は、太陽の周囲を回る時、楕円を描いて回っているのである  
+  
+・地動説にせよ天動説にせよ、ケプラー以前は、皆天体は真円を描くものだと思っていた  
+・そして真円を描いているとすると、実は、地動説は数学的に証明できないのである  
+・言ってみれば、ケプラーは、地動説という仕事を完成させた男であった  
+  
+## ●天空という神秘の終わり  
+・こうして、地動説は証明されていった  
+・地動説によって、天空の神秘性は剥がれ始めていた  
+・「地球は神が作った特別な星だから…」というような説明も通用しなくなり始めていた  
+・そして、最終的に天空の神秘を暴いた男  
+・地球上の現象も宇宙の現象も、物理的な法則で動いていると証明して見せた男  
+・それこそが、アイザック・【ニュートン】である  
+  
+・彼は、ニュートン力学と呼ばれる物理学の体系を作り上げた  
+⇒ニュートン力学について書いた本が【『自然哲学の数学的原理（プリンキピア）』】  
+  
+・これは、「林檎の木の実が地面に落ちる」「天空の星々が地面に落ちてこない」を同時に説明していた  
+・即ち、現在ではよく知られている事だが…  
+  
+・月が地球に落ちてこないのは、適切な距離で適切な速度を持っているからである  
+⇒言い換えれば、「月が何処かへ吹っ飛んでいこう」とする力と、「地球と月が引っ張り合う」力が丁度釣り合っているから、月は地球の周りをぐるぐる回っているのである  
+・人工衛星が地球に落ちてこないのも、同じ理屈である  
+・例え林檎の木の実であろうとも、適切な高度で適切な速度を与えれば、地球の周囲を回る衛星になる  
+  
+・ニュートンはこれを、数学的に証明した  
+・即ち、天空の星々が地面に落ちてこないのは、それが神秘だからではない  
+・「林檎の木の実が地面に落ちる」のを証明する時に使うものと同じ法則で、落ちてこないだけなのだ  
+・天空は決して、神秘などではない  
+・観察と実験、そして理性による推論で、宇宙の秘密を暴き立てる事すらできる  
+・ニュートンは、これを証明して見せたのである  
+  
+・この瞬間、近代科学が始まったと言っていい  
+・この世の全てを科学によって説明しようという近現代の科学  
+・それは、宇宙の神秘を暴き立てた男、ニュートンから始まったのである  
