--- a/03_03.md
+++ b/03_03.md
@@ -1,2 +1,139 @@
 # 大陸合理論
 
+  
+・ここまで紹介した後期～ポストルネサンス思想は、哲学思想の主流にはならなかった  
+・モラリストは哲学思想と言うよりは仏文学の分野の一つになっていった  
+・科学革命は、そのまま近現代科学に繋がってしまい、やはり哲学的な主流には成り得なかった  
+・では、哲学思想の主流になっていったものは何か？  
+・それは、これから紹介する大陸【合理論】と、この後紹介するイギリス【経験論】である  
+  
+・イギリス経験論は、その名の通り、イギリスで発展した  
+・対する大陸合理論も、その名の通り、大陸側の各国で発展している  
+⇒代表者はフランス王国のルネ・【デカルト】、ネーデルラント連邦共和国のバールーフ・デ・［スピノザ］、ドイツ地域で活動したザクセン公国生まれのゴットフリート・ヴィルヘルム・［ライプニッツ］。全て、ブリテン島やアイルランド島といった島ではなく、欧州大陸に生まれ育った人々である  
+  
+・また、合理論と言うだけあって、大陸合理論は理性を重視する  
+・合理論では、人間は、生まれながらに理性を持っているとされる  
+・この理性こそが、人間の知識や認識の源泉である、とする  
+・そして理性に従い、合理的に物事を考える事を重視する。これが大陸合理論である  
+⇒非常にアリストテレス的なやり方。アリストテレス自身、理性を重視し、合理的に物事を考える事を旨としていた。合理的に物事を考えた彼が、三段論法を考え出したのは、理由のない話ではない  
+よくある三段論法の例：「あらゆる人間はやがて死ぬ」＋「ソクラテスは人間である」⇒「ソクラテスはやがて死ぬ」  
+  
+・アリストテレスの三段論法のような思考法を【演繹法】と呼ぶ  
+⇒多少詳しく定義すれば、「ある前提を用意して、その前提から推論によって結論を出すやり方」である  
+・大陸合理論は、この演繹法を使って発展していく、いわばアリストテレスの後継者達であった  
+  
+  
+  
+## ●ルネ・デカルト  
+・大陸合理論の祖にしてアリストテレスの正統後継者。それがルネ・【デカルト】である  
+・彼が偉かったのは、「万人に通じる哲学思想を作ろう！」とした事と言えよう  
+  
+・哲学とか思想というものは一般に、「結局は人それぞれ」になりがちである  
+・ところでデカルトは数学者でもあるが、数学は「人それぞれ」にはならない  
+・ある前提を与えれば、誰でも必ず同じ答えを導く事になる  
+⇒極端な話を言えば、「１＋１」という前提を与えれば、誰でも「２」という答えを導く訳である  
+  
+・デカルトは、この数学的なやり方を哲学へ導入しようとした  
+・「誰であっても肯定せざるを得ない、確実な前提」を発見し、そこから哲学を始めようとした  
+⇒この辺、理性を重視する大陸合理論の特徴が表れている。既に見たように、「ある前提を用意して、その前提から推論によって結論を出す」やり方を【演繹法】と呼ぶが、理性とは「論理的に推論する能力」である。デカルトは要するに、「確実な前提」を使って演繹法をやろうとした訳である。  
+※ちなみにデカルトは、「人は理性によって［情念］（憎しみ、妬み、驚愕等の感情的なもの）を制御する、気高い［高邁の精神］を持つべきだ」と説いてもいる。この辺もやはり、理性を重視する大陸合理論の祖っぽいところ  
+※またデカルトは、理性と同じ意味の単語として［良識（ボン・サンス）］という言葉を使ってもいる  
+  
+・さて、この「確実な前提」を見付ける為に彼が採ったのが、【方法的懐疑】と呼ばれるものである  
+・デカルトは、世の中のあらゆるものを、疑って疑って疑った  
+・「この世の全ては、悪霊が見せている夢かもしれない」という次元で疑った  
+・そうやって何もかもを疑って、それでも疑えないものが見つかったとしたら…  
+・それが、「誰であっても肯定せざるを得ない、確実な前提」だと考えた訳である  
+  
+・最終的にデカルトは、以下のような思考へ辿り着いた  
+  
+>  たとえすべてが夢（虚偽）であっても、その夢を見て、夢じゃないかと疑っている自分が存在することそれ自体は、決して疑えないのである。幻影を見せる悪霊だって、そもそも「幻影を見るもの」が存在しなければ、幻影を見せようがないだろう。結局、どんな懐疑にも耐えられるもの、それは、まさに「疑っている自分自身」だったのである！  
+    
+>  （飲茶著『史上最強の哲学入門』河出文庫）  
+  
+・デカルトは、これを哲学の第一原理…即ち「誰であっても肯定せざるを得ない、確実な前提」とした  
+・そして、第一原理を表して、こう言ったのである  
+  
+>  【我思う、故に我在り（コギト・エルゴ・スム）】  
+  
+・これは、極めて重要な画期であった  
+・彼の発見した第一原理は、「己は何者か」というところに、神を介在させていない  
+・「自分」とは「自分を自分と認識するもの」であるという、極めて現代的なものである  
+・デカルトによって発見されたこのような自我を【近代的自我】と呼ぶ  
+⇒近代的自我に於いて、「自分」とは、神の恩寵によって生まれるものではない。「自分」とは、「自分を自分と認識する」事によってのみ生まれる。ここに、人間という「自分」を中心に世界を見る考え方が準備された。ルネサンスは神中心の世界観から人間中心の世界観への移行を促したが、その完成形がデカルトな訳である。だからこそ彼は、近代という人間中心の時代の、哲学の祖とされるのである  
+  
+～ちょっと雑談～  
+　もしあなたが、異次元からの使者（当然文化も何もかもが全く違う相手）と話して、「お前は何者か」と問われたとしよう。普通は、自分の名前を答えるだろう。しかしそこで、「いやそうじゃない。お前が何と呼ばれているか、と聞いてるんじゃない」「お前の本質は何なのか、って聞いてるんだ」と言われた場合。どう答えるだろうか？  
+　明快に答えるのは難しいだろう。本質と言われたって…名前や社会的地位は本質ではないし、腕や脚だって本質ではない。改名したって自分は自分だし、事故に遭って両脚が切断されたって自分は自分だ。じゃあ脳が本質なのかと言えば、死んだ後も「俺は俺だ」という意識を保つ幽霊みたいな存在になれる可能性を考えれば、やっぱり脳も本質ではなさそうである。  
+　結局、「俺は俺だ」としか言いようがない。もう少し詳しく言えば、「「自分」とは「自分を自分と認識するもの」だ」としか言いようがない。実はこの考え方は、東洋思想では古代に発見されているものだが、西洋思想では近代哲学になるまで分からなかった。  
+～雑談終わり～  
+  
+・また、デカルトは科学という観点からも重要な存在である  
+・この頃までの欧州では、目的論的自然観が主流であった  
+・これは、自然にあるものは全て、何かしらの目的を持つというものである  
+・例えば人間の身体は「霊魂のため」という目的がある、とか  
+・例えば動物は「人間が食べる」という目的のために神がお作りになられた、とか  
+  
+・これに対し、自然に目的はないとしたのが、デカルトの【機械論的自然観】である  
+・人間の身体も、動物も、何なら宇宙も、何か目的を持って存在している訳ではない  
+・法則があって、その法則に従って、機械的に動いているに過ぎない…とした訳である  
+・これは、極めて現代的な見方、と言うか、科学的な見方である  
+⇒科学革命で紹介したニュートンは、デカルトの本を熱心に読んでいたという。デカルトの機械論的自然観がニュートンに影響を与え、ニュートンは宇宙から神秘のヴェールを剥ぎ取ったのである  
+  
+## ●デカルトの限界と大陸合理論の発展  
+・このようにデカルトは、大陸合理論の祖となった偉大な人物である  
+・特に、彼の導き出した第一原理は今でもそのまま通じるほどのものである  
+・しかしながら、デカルトは第一原理を出した後がよくなかった  
+  
+・デカルトの第一原理とは、要は「誰であっても肯定せざるを得ない、確実な前提」である  
+・ここから話を始めれば、万人に通じる哲学体系が作れるに違いない  
+・「１＋１」という前提を与えれば万人が「２」と言うような哲学が作れるに違いない  
+・そう考えた末の第一原理、「我思う、故に我在り」だったのである  
+・にも拘らず、第一原理を出した後のデカルトの哲学体系は、なかなかにガバガバなのだ  
+  
+・例えばデカルトは、人は神や善悪といったものを［生得（本有）観念］として持つ、と言っている  
+・要するに、人は生まれつき、神や善悪を知っている、と言っている  
+・この世は悪霊が見せている夢かもしれない、と言っていた彼はどこへ行ったのか…  
+  
+・他にもデカルトは、物体と精神はそれぞれ独立して存在する［実体］だと言っている  
+・即ち、物体にせよ精神にせよ、他の何物もの必要とせず、単独で成立し得ると言っている  
+・そして、この二つの実体から世界は成り立っている、と、【物心二元論（心身二元論）】を唱えた  
+  
+・おいおい迷信の時代か、と思った人、当然いるだろう  
+・実際、第一原理や機械論的自然観は別として、デカルトの思想は基本、批判の対象である  
+⇒実際彼の著書も、第一原理を語った【『方法序説』】は日本の高校の定期試験でも出る率が高い。一方で、神の存在証明やら物心二元論やらを語った［『省察』］や情念を語った［『情念論』］は出る率が低い。つまりそういう事である  
+・大陸合理論の後継者達もまた、デカルトの思想を、批判的に継承していくのである  
+  
+・特に批判の対象となったのは、物心二元論であった  
+・バールーフ・デ・［スピノザ］も、ゴットフリート・［ライプニッツ］も、物心二元論を批判している  
+⇒スピノザの主著は［『エチカ』］、ライプニッツの主著は［『単子論（モナドロジー）』］である  
+  
+・スピノザの場合、世界は物と心の二つに分かれている訳ではない、とした  
+・この世界に於ける唯一の実体とは、神である  
+・ところで、動植物だけを意味せず、人間や宇宙を含めた全て、という意味での自然は明らかに実体である  
+・即ち、自然とは神であり、神とは自然そのものである  
+・…スピノザは、このような、一種の汎神論を唱えた  
+  
+  
+・一方ライプニッツもやはり、世界は物と心からできているというデカルトを批判した  
+・彼の場合は、世界を極限まで分割していくと単子（モナド）というものになる、とした  
+・世界は、この単子が組み合わさる事によってできている  
+・こう書くとデモクリトスの原子論っぽいが、デモクリトスは原子を単一の存在としていた  
+・一方ライプニッツは、単子には色々な種類がある、としている  
+⇒現代物理学に於ける原子は、確かに色々な種類がある。そういう意味ではライプニッツは正しい。一方で、様々な種類のある原子も、更に細かく見れば、単一の原子核（とその周囲を回る電子）でできている。そういう意味では、「この世を成り立たせる物質をどこまでも細かく分割していけば、単一の存在に辿り着く」「世の中の物質がそれぞれ違うのは、その単一の存在の組み合わせの違いによる」というデモクリトスの考え方も正しい  
+  
+  
+### 〇大陸合理論と後世  
+・デカルトの心身二元論にせよ、スピノザの汎神論にせよ、迷信に見える  
+・ただこの両者も、現代に影響を与えていない訳ではない  
+・例えば心身二元論を「心」と「身体」の対立、と捉えれば、これは現代に通じる考え方である  
+⇒どの学校でも、中高になると校長先生のありがたいお話で「身体だけが成長して大人になっても、心が成長しなければいけません」みたいな話が出る筈である。このような「身体」と「心」を分ける考え方は、西洋思想に於いてはデカルトに始まると言えるのである  
+  
+・またスピノザの汎神論も、現代人が好む唯物論に通じるものがある  
+⇒「この世に存在するものだけが現実であり、実体。魂だの神だのなんてものは妄想に過ぎない」というのが唯物論。スピノザも「この世に存在するものが実体」と言っているという意味では一緒である。現代人が好むこの唯物論もまた、大陸合理論から始まったのである  
+  
+・ライプニッツもまた、予定調和を説いた  
+・この世界が破綻せずに確かに存在しているのは、最初に神が設計したからだというものである  
+・この考え方も、実は現代に通じる考え方である  
+⇒人間ひとつとっても、極めて複雑な構造をしている。世界に至ってはもっと複雑。故に現代の科学者にも、「こんなに複雑なんだから、誰かがこうなるように設計したに違いない」と考える者と、「こんなに複雑なものを設計できる筈がない。進化する内に勝手にこうなったんだ」と考える者がいる。ライプニッツの考え方は、前者の先駆と言えよう  
+  
