--- a/05_01.md
+++ b/05_01.md
@@ -1,2 +1,250 @@
 # 資本主義と功利主義
 
+  
+|                                                                                                                                                            |  
+|------------------------------------------------------------------------------------------------------------------------------------------------------------|  
+|本節で扱う思想家一覧                                                                                                                                        |  
+|アダム・スミス（1723年6月5日 - 1790年7月17日）<br>ジェレミー・ベンサム（1748年2月15日 - 1832年6月6日）<br>ジョン・ステュアート・ミル（1806年5月20日 - 1873年5月8日）|  
+  
+  
+・ここで、時計の針を絶対主義の時代へ戻そう  
+・三十年戦争以後、フランス革命以前の時代  
+・王権神授説で見たような、王の命令が隅々にまで行き渡る、中央集権的な国  
+・そういう国が次々と登場する時代  
+・そして、理性の光が迷信を払い、庶民の蒙を啓かんと各国王が活動した時代である  
+  
+・この時代は、経済的には「国が民間の経済活動へ積極的に介入する」という時代であった  
+・まだ、工場はあっても「工場に職人を集めて、皆で手作りする」という時代である  
+・この時代、国は民間企業を保護し、より強い企業になるよう育成する…という手法を採った  
+  
+・これが絶対主義の時代末期になると、各国の商人達は国の保護を嫌うようになった  
+・国のお陰で強くなった商人達は、反抗期を起こしたのである  
+・「もう俺達は充分に強くなった」「国による保護、規制、そういうのは邪魔なだけだ」  
+・「俺達にもっと自由に金儲けさせろ」  
+・各国市民のこの意識は、革命の時代に於ける市民革命の原動力ともなった  
+  
+・この意識は、1760年代からイギリスで起きた【産業革命】によっても強まった  
+⇒大体1760年代から1830年代にかけてゆっくり起こった。この年代は大体、絶対主義の時代末期から革命の時代が終わった直後ぐらいまで。思想史的には、カントの後半生からヘーゲルの晩年ぐらいまでである  
+  
+・産業革命とは要するに、機械の登場である  
+・工場で商品を生産する「機械」の発明と実用化は、現代的な、商品の大量生産を可能とした  
+・機械の登場によって、経済は否応なく現代的なものへと変化した  
+・その中で、「俺達にもっと自由に金儲けさせろ」と思う者も激増していったのである  
+  
+・このような時代背景の中で、いよいよ、経済学が登場してくるのである  
+  
+  
+## ●資本主義の成立  
+・経済学の祖にして古典経済学の祖とされる超有名人が、イギリスの【アダム・スミス】である  
+⇒【アダム・スミス】と言えば【（神の）見えざる手】、そして著書の【『国富論（諸国民の富）』】。この三点セットは最早「社会科の知識」と言うよりは、人として身に付けておくべき一般教養である。それぐらいの有名人であり、現代社会にも大きな影響を及ぼしている  
+  
+・彼の思想の最大の特徴は、人の利己心を肯定したところにある  
+  
+・かつて、古代から中世にかけて欧州を支配したキリスト教、カトリックは人の利己心を否定した  
+・自分の利己心に基づいて金儲けに走る商人など、この世で最も卑しい人種である  
+・利己心に溢れた金持ちが天国へ行くのは、ほぼ不可能。それがカトリックの考え方であった  
+  
+  「富んでいる者が神の国にはいるよりは、らくだが針の穴を通る方が、もっとやさしい」  
+  （1954年日本聖書協会版『新約聖書』マタイによる福音書十章二十五節）  
+  
+・このような考え方が、かつての欧州では支配的であった  
+・これを大きく変えたのが、プロテスタントの職業召命観である  
+・即ち、仮にあなたが商人となったのであれば、それは神の思し召し（召命）である  
+・であるからして、「利己心は卑しい」として商人としての仕事を放棄してはならない  
+・商人として勤勉に働き、蓄財に勤めるのは、神の栄光を称える行為である…  
+  
+・このようにして、プロテスタントは金儲けを肯定した  
+・だが、人間の利己心まで肯定した訳ではなかった  
+・あくまで、全知全能の神の「こいつ商人にしたろ」を肯定したのである  
+・そして絶対主義の時代から革命の時代、ついにアダム・スミスが登場する  
+  
+・アダム・スミスに始まる古典経済学の基本は、「人々は自由に、自己の利益を求めよ」である  
+・利己心がどうたらこうたらとか、考える必要は基本的には無いのだ  
+・人々は自由に、利己的に行動してよい  
+・自己の利益を最大化するように行動してよい。好きなように金儲けをすればよい  
+・そして政府はそれを傍観すればいい。【自由放任（レッセ＝フェール）】でよい  
+・政府が何もせず、市場の人々が自由に競争すれば、【「神の見えざる手に導かれて」】経済は発展する  
+・これが、アダム・スミスに始まる古典経済学の骨子である  
+※尚、神の見えざる手という言葉は、アダム・スミス本人は投資についての比喩で使っただけである。しかし彼の思想、そして彼に続く古典経済学の基本的な考え方を説明するのにあまりにも使いやすい為、現代ではこのような形で紹介される  
+  
+・いかにもプロテスタントらしい考え方であった  
+⇒プロテスタントはしばしば、「皆が最善の努力をすれば、世界は最善の状態になる」という考え方をする。この場合なら、「皆が自己の利益を最大化しようと最善の努力をすれば、結果的に、経済は最善の状態になる」、という形で適用されている  
+  
+・アダム・スミスに始まるこの考え方はまた、現代に繋がる資本主義を理論化したものでもあった  
+  
+・資本主義は、突き詰めて言えば、自由な売買、商売を認める経済体制である  
+・例えば金持ちは、土地、工場、機械といった、商品を生み出すモノを持っている  
+・これらを使って商品を作り、売れば儲かる。だから作って売ればいい  
+・とは言っても、金持ち一人では、工場の機械を全部動かす、というのはできない  
+・言い換えれば、工場の機械を動かすには、金持ち一人ではとても、労働力が足りない  
+・だったら、買えばいい。世の中には、土地も工場も機械も持たない庶民がごまんといる  
+・彼らを労働者、社員として雇う。言い換えれば、彼らの労働力を買って、工場で働かせる  
+  
+・これが、革命の時代前後に成立していった、資本主義の根本的な部分である  
+・金持ちは、更に自分が金持ちになる為に、庶民を「買う」  
+・自分の身体しか売るものがない庶民は、自分を、金持ちの金儲けの手段として「売る」  
+  
+・人身売買的であり、奴隷制的でもあるこの機構を、しかし、資本主義とアダム・スミスは肯定する  
+・だってこれは、「皆が自己の利益を最大化しようと最善の努力をしている」状態ではないか  
+・利益を得るには、何かを売るしかない  
+・商品を生み出す土地、工場、機械といったものを持っている金持ちは、商品を作って売ればいい  
+・商品を生み出すモノを持っていない庶民も、自分が売れるではないか  
+・自分を労働力として、売ればよい  
+・こうして皆が自己の利益を最大化しようと最善の努力をすれば、神の見えざる手に導かれる筈なのだ  
+  
+※ちなみに。土地、工場、機械といった「商品を生み出すモノ」を、【生産手段】と呼ぶ。そして、ある人が持つ生産手段を「資本」と呼ぶ。政経や現代社会では、資本主義の定義は「生産手段の私有を認める制度」と習う事になる。そして生産手段（資本）を持たない人々は、【労働力】を売る労働者になる訳である  
+  
+・ところで。アダム・スミスは本来、倫理の本を出して有名になった人である  
+・それが［『道徳感情論』］であり、これを読むと、彼が全面的に利己心を肯定した人間ではないと分かる  
+・勿論、人は己の利己心を肯定し、自己の利益を最大化するべく、金儲けに走ってもよいのだが…  
+・一方で、［公平な観察者］の［共感（同感）］を得られるようにしなければならない、とも説いたのだ  
+  
+・と言うのは、世の中には秩序（法とか道徳とか）があり、人々はその秩序を守って暮らしている  
+・では何故、人々は秩序を守ろうとするのか？  
+・その理由をアダム・スミスは、共感に求めた  
+  
+・人には共感する能力があり、他者の行為に共感してそれを肯定したり、逆に否定したりする  
+・人は普通、自己の利益が欲しい一方で、他者から肯定もされたいものである  
+・という事は、自己の利益を追求する一方で、他者から共感もして貰わねばならない  
+・即ち、公平な観察者からも、「あなたの行為は公正だ」と共感して貰わねば、肯定されないのである  
+  
+・アダム・スミスは人の利己心を肯定した  
+・したが、「傍から見て公正と共感されるように」という枷が、きちんとはめられていたのである  
+## ●功利主義  
+### ○ベンサムの功利主義  
+・アダム・スミスは、人の利己心を「傍から見て共感される」範囲内で肯定した、と言える  
+・言ってみれば、利己心に一定の枷をはめた訳である  
+・彼の同時代人で、同じく人の利己心を肯定し、しかし別の枷をはめた人物がいる  
+・ジェレミー・【ベンサム】。【功利主義】の祖である  
+⇒ロンドン生まれのイギリス人。代表作は【『道徳および立法の諸原理序論』】  
+  
+・ベンサムの思想を簡単に言えば、「幸福はいい事だ！」「皆で幸せになろうよ！」である  
+  
+・例えば、美味しいものを食べるのは幸福である  
+・一方で世の中には、そんな幸福を許せない偏屈な人間もいる  
+⇒「人間の悪しき欲望は、抑圧されなければならない」「欲望に従って美味しいものを作り、食べるなんてとんでもない」「粗食で我慢しなさい」…そんな人達だって、いる  
+  
+・ベンサムはそういう時、こう言う訳である  
+・「食べてる本人は幸福なんだからいいじゃないか！」「誰かに迷惑かけてる訳じゃないし！」  
+  
+・ベンサムは、幸福、快楽、そういうものを肯定した  
+・肯定するどころか、計算した  
+⇒いわゆる【快楽計算（幸福計算）】。「幸福の増大とは、快楽の増大、もしくは苦痛の減少である」として（この原理を［功利の原理］と呼ぶ）、［強さ、持続性、確実性、遠近性、多産性、純粋性、範囲］という、七つの基準で、「この行為はこれぐらい幸せ」「この人は今、これぐらい幸福」というのを計算する  
+  
+・世の全ての人に対して、幸福計算を行う  
+・そして、全ての人の幸福度を合算して出てきた数値  
+・この数値を増やす事こそが正義である。彼はそう主張した  
+・即ち、【最大多数の最大幸福】を目指す事こそ正義である  
+・これが、功利主義である  
+  
+・だから功利主義は、いわゆる「道徳的」かどうか、という事を気にしない  
+・例えば当時、イギリスでは同性愛は犯罪であった  
+※と言うか、キリスト教圏では長い事犯罪だった。何なら今でも、同性愛者カミングアウトは命の危険と隣り合わせな部分がある。欧米では同性愛者の権利擁護運動が盛んだが、何でかってそれぐらい弾圧が激しいからである。逆に日本で権利擁護運動が盛んではないのは、まぁそういう事である  
+  
+・キリスト教では、同性愛は罪であり、道徳的ではない  
+・だから当時のイギリスでも、犯罪だった  
+・しかしベンサムは功利主義に基づいて、同性愛を擁護した  
+⇒「本人達は幸せになってる（快楽が増進している）んだからいいじゃないか！」「しかも、誰かが不幸になる（苦痛が増進する）訳でもない！」「同性愛を公式に認めた方が、幸福の総量は増えるよ！」という事  
+  
+・今でも、売春、堕胎、ポルノの作成・販売・利用といったものを罪にしている国は多い  
+⇒いわゆる「被害者なき犯罪」という奴。被害者がいる訳ではないが、何せ「道徳的ではない」。令和三年現在、日本も売春とポルノの販売は犯罪である  
+・功利主義は基本的に、こういう「道徳的」な規制に反対する  
+  
+・幸福の総量を減らすものなど、「道徳的」とは言えない  
+・本当に道徳的と言えるのは、皆の幸福を増進する事なのだ、と  
+・人の利己心も、「皆の幸福を増進する」という基準に見合うものであれば、肯定されるのである  
+  
+・ベンサムが偉いのは、功利の原理を完全に守っているところである  
+※功利の原理：「幸福の増大とは、快楽の増大、もしくは苦痛の減少である」  
+  
+・例えばベンサム的な考え方では、暴飲暴食は否定される  
+・これは別に、「道徳的」に判断したからではない  
+⇒「美味しいものを食べるのは幸福だけど、やり過ぎはよくないよね」みたいな感じで判断した訳ではない  
+  
+・確かに暴飲暴食は快楽の行為であり、幸福を増進させる  
+・しかし暴飲暴食を続ければ、肥満、痛風等の疾病を、即ち苦痛を誘発する  
+・そう考えると、暴飲暴食は差し引きマイナスで、苦痛の増大に繋がる。だから駄目、という事なのだ  
+  
+・暴飲暴食の例のように、快楽の筈の行為が苦痛を増大させる現象を、ベンサムは［制裁（サンクション）］と呼ぶ  
+・人は、制裁（サンクション）という枠組みの中で、快楽や苦痛を得る。ベンサムはそう考えたのである  
+・ベンサムはを、制裁（サンクション）四種類に分けた。以下の通りである  
+  
+|              |                                                                  |  
+|--------------|------------------------------------------------------------------|  
+|制裁          |例と説明                                                          |  
+|［自然的制裁］|暴飲暴食を続けたら苦痛を誘発し得る、等の自然に起こる類のもの      |  
+|［道徳的制裁］|「道徳的」とされる行為をしなかったが故に叱責された、という類のもの|  
+|［政治的制裁］|法に触れたが故に処罰された、という類のもの                        |  
+|［宗教的制裁］|宗教で禁じられた行為をしたが故に神罰を恐れる、という類のもの      |  
+  
+  
+・尚、ベンサムの「量」に注目した功利主義は、しばしば［量的功利主義］と呼ばれる  
+・そしてまた、ベンサムの量的な功利主義では、少数者が抑圧される可能性があると、よく指摘される  
+・即ち、少数者の抑圧が多数者にとっての幸福であった場合、少数者の弾圧は正当化されてしまう  
+  
+・これについては、一応、ベンサムの弁護はしておくべきだろう  
+・即ち、ベンサムにとって人間は、制裁という枠組みの中で快楽や苦痛を得る  
+・そしてベンサムは、この枠組みは、誰もが快楽（幸福）追求できるものでなければならない、とした  
+⇒即ち、多数者も少数者も、快楽（幸福）を追求できる制裁が要請される。例えば、多数者が少数者を弾圧すると処罰される法を作る。つまり、多数者が少数者を弾圧すると、かえって多数者の苦痛が増加する政治的制裁を作る…そういう事をすべきだと、ベンサムは言っているのだ。まぁ当然と言えば当然で、多数者による少数者の弾圧は、その時はよくても後々、その多数者に罪の意識を与える（苦痛を増加させる）場合が多い  
+### ○ジョン・ステュアート・ミルの功利主義  
+・ジェレミー・ベンサムの友人にして、自身も重要な功利主義者という人に、ジェームズ・ミルがいる  
+・その彼の息子こそ、古典経済学の最後の大物にして、ベンサムに並ぶ功利主義の大物  
+・即ち、ジョン・ステュアート・ミル。【J.S.ミル】と通称される男である  
+⇒代表作は【『功利主義』】【『自由論』】  
+  
+・彼は自由主義者であり、功利主義者であるが、ベンサムと全く同じ形の功利主義者ではない  
+・即ち、ベンサムが量的功利主義者である一方、彼の功利主義は【質的功利主義】とされる  
+・彼の有名な言葉が、その性質を何より雄弁に語っている  
+  
+  【満足した豚であるよりも、不満を持つ人間の方がよい。満足した愚か者よりも、不満を持つソクラテスの方がよい。】豚や愚か者はそうは思わないかもしれないが、それは、彼らが自分自身の問題についてしか考えていないからである。  
+  （ジョン・ステュアート・ミル『功利主義』　拙訳）  
+  
+・ここは、ベンサムと明確に違う点である  
+・ベンサムであれば、ソクラテス一人が不満でも、アテナイの全市民が幸福ならそれでいいとするだろう  
+・しかし、J.S.ミルの場合はそうではない  
+・ソクラテスのような質の高さを求める者がいるから、社会はより高度に発展するのである  
+・だからこそ、功利主義の幸福計算に於いて、量だけでなく質の概念を導入すべきだとするのである  
+  
+・故にこそ、J.S.ミルの功利主義は制裁（サンクション）ついて、内的なものをも重視する  
+・既に見たように、ベンサムの功利主義は、枠組み（制裁）としては外的なものを重視していた  
+・J.S.ミルの場合、何せ彼は、「質の高い快楽」「質の高い幸福」を重視する  
+・それは、場合によっては自己犠牲のような形になる場合もある  
+・一見すると苦痛の増進であり、普通なら幸福にはならない行為ですら、「質の高い幸福」になり得る  
+・では、そんな「質の高い快楽」へ人を突き動かすものは何か  
+・それは、［良心］である。彼はそう見抜いたのだった  
+⇒例えば、飛び降り自殺しようとする人を助けようとする行動。これは明らかに「質の高い快楽」を導く行為である一方、一歩間違えれば自分も巻き添えになる可能性があり、本来、苦痛を増大させ得る行為でもある。では何故、助けようとするのか？　見殺しにした時、良心の呵責に苛まれるからである。このように良心は、「質の高い快楽」「質の高い幸福」を導くのである  
+  
+・このように質を重視したJ.S.ミルは、功利主義は最終的に、キリスト教の教えに行き着くとした  
+・即ち、イエスの【黄金律】、「己の欲するところを人に施せ」  
+・これこそ、功利主義が最終的に求める「質の高い幸福」を実現する法則である、とするのである  
+  
+・尚、別にJ.S.ミルはベンサムを批判してこうなった訳ではない  
+・むしろ彼は、ベンサムの擁護者だった  
+・ベンサムの言う「最大多数の最大幸福」を構成する理論の方向性が違う、というだけの事である  
+  
+・また、J.S.ミルによって、功利主義の問題が全て解決した訳でもない  
+・ベンサムの理論が、「多数者による少数者の弾圧はどうするんだ」と誤解されやすいように…  
+・彼の理論もまた、「多数者の幸福の方が質的に上、ってなったらどうするんだ」という話になり得るのだ  
+  
+・また、彼は功利主義の擁護者であると同時に、自由の擁護者でもあり、この両者は不可分であった  
+・と言うのは…人間の精神は筋肉と同じであり、使わなければ衰えてしまうものである  
+・例えば、どんな時でも親や国が「ああしろ」「こうしろ」と言い、それに従うだけの人がいるとする  
+・この人の精神は、何も自分では判断できない、悪い意味でのロボットのようなものにすらなり得る  
+  
+・だから、人間の精神には自由が必要である  
+・自由な環境で、自分で考え、判断するという経験を積んで、精神を鍛えねばならない  
+・そうしなければ、「質の高い幸福」も得られない  
+・故に、人間には自由が不可欠である  
+・他者に危害を加えない、という範囲内であれば、原則、人間は自由であるべきだ  
+・これが、彼の有名な［他者危害の原則］である  
+  
+～ここから雑談～  
+　この他者危害の原則から導き出されるのが、有名な「愚行権」である。即ち、人は本来自由であり、他者に危害を加えない限りに於いて自由な行為が許される。仮にそれが、他者から見て非理性的な「愚行」であっても、である。  
+　一見すると奇妙な考え方だが、実際には、極めて重要なものである。  
+　冷静に考えてみてほしい。例えば中高生の多くは部活に所属し、大学生も多くはサークルに所属し、活動しているだろう。その活動を楽しみ、また熱心に打ち込んでいるだろう。だが、その部活やサークルという行為は、「役に立つ」ものだろうか？　サッカー部とか野球部とかに所属しているとして、そこからプロの選手になれるのならいいだろう。しかし多くの場合、そうではない。即ち、部活動やサークル活動は、多くの場合「非理性的」で「役に立たない」「愚行」なのである。その時間をもっと「役に立つ」ものに使え、というのは理性的な助言である。  
+　漫画、アニメ、ゲーム、映画、ドラマといった娯楽も同様である。それで生きていけるという事は普通、ない。これらの娯楽は「役に立たない」ものであり、そんなものに時間を費やすのは「愚行」である。成人の多くが仕事の後に楽しむ酒も、基本的には「愚行」である。  
+　だがそうやって、「役に立たない」「愚行」を排除していった先に、何があるのか？　極めてつまらない、無味乾燥な人生である（そういう人結構いるけど）（仕事以外だと、せいぜいワイドショーで見た悪口の復唱、後はセックスぐらいしか喋れないおっさんって世の中に一杯いますよ）（だから定年後すぐボケる）  
+　だからこそ、愚行を認める事が必要なのである。無論、愚行によって起きる不利益は全て、自分の責任で被る必要はある。あるが、しかし、だからと言って親や政治家、会社や国が「理性的」で「役に立つ」「善行」のみを個人に強制する社会というのは、圧政の二文字で表現できる存在でしかないのである。  
+　ちなみにだが、圧政というのは「理性的」で「役に立つ」「善行」の推奨、もしくは「非理性的」で「非道徳的」な「愚行」の撲滅、という形でよく起こる。「漫画、アニメ、ゲームは非道徳的で青少年の成長に有害。だから潰そう」というのは現在でも進められている政治運動だが、その先にあるのは、誰かが決めた「理性的」で「役に立つ」「善行」しか認められない社会である。  
+　この愚行権の考え方はまた、「世の全てが、役に立つものである必要はない」という考え方にも通じる。部活も、漫画も、ゲームも、酒も、「役に立つ」必要はないのだ。個人が楽しむ「愚行」でいいのである。  
+～ここまで雑談～  
