--- a/06_02.md
+++ b/06_02.md
@@ -1,2 +1,118 @@
 # 社会民主主義
 
+  
+|                                                                                                                                                                                                                                                                                     |  
+|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|  
+|本節で扱う思想家一覧                                                                                                                                                                                                                                                                 |  
+|パスフィールド男爵シドニー・ウェッブ（1859年7月13日 - 1947年10月13日）<br>パスフィールド男爵夫人マーサ・ベアトリス・ウェッブ（1858年1月22日– 1943年4月30日）<br>エドゥアルト・ベルンシュタイン（1850年1月6日 - 1932年12月18日）<br>ジョージ・バーナード・ショー（1856年7月26日 - 1950年11月2日）|  
+  
+  
+・社会主義は結局、悪夢を世界中に撒き散らしてしまった  
+・とは言え社会主義は元々、理想と共に出てきたという点は忘れてはならない  
+・即ち、資本主義的な社会では、どうしても金持ち（資本家）による庶民（労働者）の搾取が起こる  
+・これを解決し、人間が人間らしく生きていける社会を作ろう、というのが社会主義の元だったのである  
+・結果的に悪夢を生み出してしまっただけで、最初にやろうとしていた事は真っ当だったのだ  
+  
+・実際、ソ連だって一切、先進的な部分がなかった訳ではない  
+  
+・例えば1929年末から始まる世界的な大不況（いわゆる世界恐慌）の中、ソ連だけは不況と無縁だった  
+※「同時期に裏でウクライナ人が餓死しまくってるんですけど、ウクライナ人犠牲にしてブーストかけただけでは？」という批判はこの際見なかったものとする  
+  
+・他にも、ソ連は最も早い時期から男女同権を推し進めた国であった  
+⇒ロシア地域ではソ連時代から、男だけでなく女も職場に働きに出る事が奨励された。そしてこの男女同権推進は、欧米文化圏の中では最も早く行われたものであった、と言ってよいだろう  
+※これもかなり功罪のある政策ではあるが、早くから男女同権を進めようとした事は評価されてよい  
+  
+・この世の邪悪みたいな騒ぎを起こしたソ連ですら、いいところがあるのだ  
+・結局、社会主義はそのままでは人類を滅ぼす劇毒だが、ところどころいいところもある訳である  
+・この毒を何とか薄めて、社会の役に立てる事はできないだろうか？  
+  
+・これには、二つのやり方が考えられる  
+・一つ目は、社会主義の中に資本主義や民主主義のやり方を取り入れて、穏健化する方法である  
+・二つ目は、資本主義や民主主義の方に、社会主義のいいところだけを取り入れる方法である  
+  
+・この内一つ目のやり方を、［修正主義］［修正マルクス主義］【社会民主主義】等と呼ぶ  
+・今回は社会民主主義で統一しよう  
+  
+## ●ドイツの社会民主主義  
+・社会民主主義を掲げる政党は今の世の中沢山ある  
+⇒それこそ現代日本の社会民主党（社民党）もそうである  
+  
+・しかし社会民主主義で何か一つ実例を挙げよとなれば、やはり【ドイツ社会民主党(SPD)】だろう  
+・この政党は、ドイツ帝国建国直前にプロイセン王国で作られた政党に起源を持つ  
+・そして現在では、ドイツ地域に於いて、ドイツキリスト教民主同盟(CDU)と並ぶ二大政党である  
+  
+・この政党、元はと言えば、「ドイツ共産党」「ドイツ社会党」と言うべき存在であった  
+・そして、この政党に大きな変化を起こしたのがエドゥアルト・【ベルンシュタイン】である  
+・彼は、「最早革命は不要である」「民主主義の枠内で福祉を充実させ、労働者を助けよう」と呼びかけた  
+  
+・そう、彼は社会主義の政党に所属していながら、「革命なんて必要ない」と言ったのだ  
+・結局、社会主義の本来の目的は、労働者にいい暮らしをさせる事である  
+・その為に必要なのは革命という暴力と流血ではなく、民主主義だと言ったのだ  
+・民主主義の枠内で、労働者を守る法律を作っていこう…彼はそう言ったのである  
+・社会主義体制の実現もまた、革命ではなく、民主主義の枠内で達成されるべきものだ、と  
+  
+・彼の思想は当然、SPD内で大激論を巻き起こした  
+・初期は、彼のような考え方は完全に異端であり、否定派の方が圧倒的に多かった  
+・しかし、特に世界大戦期になると、SPDからは過激派が次々と分離していった  
+・それもあって、SPDは社会民主主義の政党になっていくのである  
+  
+  
+  
+## ●イギリスの社会民主主義  
+・一方、イギリスでも一種の社会民主主義が誕生していた  
+  
+・イギリスは現代でも王室と貴族を持ち、伝統を大事にする国である  
+・一方で、「漸進的な改革」を旨とする国風でもある  
+⇒何だかんだ言って、中世以降の欧州で最初に民主主義をやり始めたのはこの国である。一般にイギリスは伝統の国と思われがちだが、そういう意味では、この国は改革の国でもあるのだ  
+  
+・改革の国でもあるから、当然、マルクス＝エンゲルスの社会主義に惹かれる知識人は多かった  
+・しかしイギリス人が好むのは、「漸進的」な改革である  
+・イギリス人は、国家体制や文化を一発で引っ繰り返す、というようなやり方を好まないのだ  
+・よりよい方向に、少しずつ、少しずつ変えていこうというのがイギリス人の好みなのである  
+  
+・それを体現しているのが、［フェビアン社会主義］とか［フェビアン主義］と呼ばれるものである  
+・この名前は、1880年代に創設された【フェビアン協会】に由来する  
+・この協会は、社会改革に興味を持つ知識人の交流団体として創設された  
+  
+・このフェビアン協会には、創設期から多くの有名人が参加した  
+・例えば【ウェッブ】夫妻やジョージ・【バーナード・ショー】である  
+⇒パスフィールド男爵シドニー・【ウェッブ】と、パスフィールド男爵夫人マーサ・ベアトリス・【ウェッブ】の二人を合わせて、一般に【ウェッブ】夫妻と呼んでしまう  
+※他にも、『宇宙戦争』『タイムマシン』等でSFの父として知られるH・G・ウェルズなんかもいた  
+  
+・フェビアン協会に集まった人々は、社会主義に惹かれてはいたが、暴力革命については反対であった  
+・ベルンシュタインと同様、革命は否定し、労働者を守る法律を作っていこうと呼びかけた訳である  
+  
+・また、ウェッブ夫妻の功績として、ナショナル・ミニマム論は取り上げておきたい  
+  
+・これは、「国（政府）は国民に対し、文化的で健康的な最低限度の生活を保障してやれ」というものである  
+・即ち、国は最低賃金や労働時間の上限を定め、国民を保護するとか  
+・他には、義務教育によって「貧乏人の家に生まれたから読み書きできない」をなくす、とか  
+・そういう、「国が一般庶民を保護すべきだ」という事を求めたのがナショナル・ミニマム論である  
+⇒現代日本でも、日本国憲法や労働基準法等で、このような一般庶民の保護が定められている  
+  
+・そしてウェッブ夫妻が偉いのは、人道主義的な観点から論じた訳ではない点である  
+・即ち、この二人は、「貧乏な人達が可哀想だから助けてあげましょう」と言った訳ではない  
+・勿論そういう面もなくはないが、ナショナル・ミニマムは、経済発展の助けにもなると言っているのだ  
+  
+・と言うのは、現代的な資本主義社会では、大抵の国民は何処かの会社の社員である  
+・そしてまた、現代的な社会では、社長は何とか従業員の給料を減らそうとする  
+・では、あらゆる企業の社長が、社員の給料を減らしたらどうなるのか？  
+  
+・「大抵の国民は何処かの会社の社員」とはつまり、「商品を買う人は大抵、何処かの会社の社員」である  
+・どの企業も、自分のところで作った商品が売れてくれなければ、儲からない  
+・そこで、あらゆる企業で社員の給料が減らされると、「商品を買う人」の給料が減らされる訳で…  
+・どの企業も、商品が売れなくなって、業績不振になるのである  
+⇒そしてこういう現象が、ウェッブ夫妻が生きていた時代には起きていた。と言うか…実を言えばこの現象、1980年代以降再び発生し、現代に至っても世界中で起きているものでもある  
+  
+・企業の社長にとって、「社員の給料を減らす」は合理的な判断である  
+・そうすれば商品製造にかかる費用が浮いて、利益が増える  
+・利益が増えれば、会社も儲かるのだ  
+・しかし、全ての企業が同じ事をすれば、結果的に儲からなくなってしまう  
+・こういう、「皆が合理的な行動をとった結果、逆に自分達の首を絞めた」は、経済の世界ではよく起こる  
+  
+・だからこそ、国が介入してやらねばならない  
+・国が介入して、労働者を守ってやらねばならない  
+・労働者を守る事は、結果的に、企業の業績を守る事にも、資本家の稼ぎを守る事にも繋がるのだ…  
+・フェビアン主義者達は、早くも1897年には、現代でも起きている事態への対処法を示していたのである  
+  
+  
