--- a/06_03.md
+++ b/06_03.md
@@ -1,2 +1,247 @@
 # 福祉国家の思想
 
+  
+|                                                                                                   |  
+|---------------------------------------------------------------------------------------------------|  
+|本節で扱う思想家一覧                                                                               |  
+|ジョン・ボードリー・ロールズ（1921年2月21日 - 2002年11月24日）<br>アマルティア・セン（1933年11月3日 -）|  
+  
+  
+  
+  
+## ●福祉国家  
+・資本主義や民主主義に社会主義を取り入れようが、その逆をしようが、結果は似たようなものである  
+・どちらも、人権で言うところの社会権を重視しようとする  
+  
+・資本主義や民主主義が出てきたばかりの頃、重視された人権は自由権であった  
+・と言うのは、時代区分で言えば革命の時代となるこの時期、社会を主導したのは資本家（金持ち）だった  
+・資本家の求める事は「もっと自由に経済活動させろ」「もっと自由に金を儲けさせろ」  
+・だからこそ、この時期に最も重視された人民の権利は自由権だったのである  
+・自由の中でも特に、経済活動の自由である  
+  
+・市民革命によって実現したこの時期の国家は、自由を尊重する自由主義国家であった  
+・そしてこの時期に理想とされた国家を、夜警国家と呼ぶ  
+⇒国防・治安・最低限の立法や公共事業等々、必要最小限の役割だけを担う国家をこう言う。いわゆる小さな政府路線である  
+  
+・しかし、その自由とは結局、「資本家（金持ち）が労働者（庶民）を虐める自由」であった  
+⇒資本家は「労働者の給料を極限まで減らす自由」や「労働者を一日十四時間も働かせる自由」、「労働者の参政権を認めない事で労働者の意見を封殺する自由」等々、多くの自由を行使した。その結果が、既に「資本主義というレビヤタン」で見た惨状であった  
+  
+・こういう状況に対する反発として出てきたのが、社会主義だった訳である  
+・そして社会主義の理想は、自由主義や民主主義を掲げる国々に取り入れられた  
+・こうして、自由権を多少制限し、代わりに社会権を重視しよう、という潮流が生まれるのである  
+⇒社会権をざっくり言うと、「困窮する国民が、国家によって救済される権利」。健康保険制度を導入したり、貧困で食うにも困る国民に生活保護を与えたり、不況で仕事がない国民に公共事業で仕事を与えたりするのは、社会権の実現である  
+  
+・そして、社会権を重視する福祉国家が、世界の主流となった  
+・要するに、社会保障や、公共事業による雇用の創出などを重視する国家が主流になる  
+  
+例１：労働者が失業した時、一定期間は国がお金をあげよう。更に再就職先を世話したり、職業訓練を受けさせたりしてあげよう  
+⇒いわゆる社会保障の一種。現代日本にも失業保険やハローワークといった制度がある  
+  
+例２：人々が病気になった時の為に、国が運営する安い保険を作ろう  
+⇒こちらも社会保障の一種。現代日本では、病院で保険証さえ出せば安く治療を受けられる。これは、国が安い保険を作って、皆その保険に入っているから（中高生の皆さんは大抵、親が国の保険に入れてくれてます）  
+  
+例３：今は不況だ。企業は稼げなくて社員をクビにする上、お陰で失業者も多い。だから、国が「ダム作りまーす」とか「高速道路作りまーす」とか言って、企業にカネを渡してモノを作らせよう  
+⇒いわゆる公共事業。企業はカネを貰えるから社員をクビにせず済むし、何ならダムなり高速道路を作るなりする為に新しく社員を雇う。こうして失業者は減り、企業もカネを稼げる。企業が稼げば、景気もまた、回復していく  
+  
+・このような、いわゆる大きな政府路線を採る国家が主流となっていくのである  
+・そういう国家を、一般に福祉国家と呼ぶ  
+・このような「優しい」国家は、明らかに社会主義の影響を受けて生まれたものであった  
+・悪魔を生み出した社会主義は、しかし、福祉国家という遺産をも生み出したのである  
+  
+・世界大戦期に登場した福祉国家は、特に第二次世界大戦に前後して、広がっていった  
+・第二次世界大戦後、世界は西側（米国）陣営と東側（ソ連）陣営に分かれるが…  
+・西側陣営の国々、例えば日本や西欧諸国は、福祉国家を目指すようになるのである  
+  
+  
+  
+  
+## ●ジョン・ボードリー・ロールズ  
+・こうして誕生した福祉国家は、しかし、国によって濃淡があった  
+・例えば米国は、あまり福祉国家路線は進まなかった  
+・と言うのは、よく「自由の国」と言われるように、米国は自由を重視する伝統があるのだ  
+  
+・そもそも福祉国家とは、革命の時代以降の国家が自由を重視し過ぎた反省として出てきたものである  
+・だから自由をある程度制限して、困っている人を助けよう…これが福祉国家である  
+・自由を重視する米国の伝統と相性が悪いのは、当然と言えば当然である  
+⇒例えば、福祉国家が重視するものの一つとして社会保障があるが、米国は現代でもこの社会保障が死ぬほど貧弱である。特に健康保険は本当にボロボロで、虫歯に十万、出産に百五十万、盲腸の手術に二百万、とか普通にかかる。なので貧乏人どころか普通の人でも、ちょっとでかい病気にかかっただけで人生が終わる。金持ちなら大丈夫だけど…  
+  
+・ところで。自由主義国家は金持ちに優しく庶民に厳しい。それは既に、今まで見てきた通りである  
+・では福祉国家は？　と言うと、実は、金持ちに厳しく庶民に優しい  
+・例えば福祉国家では、累進課税というのをやる  
+  
+・この累進課税では、金持ちからはガッツリ税金を取り、貧乏人からは殆ど税金を取らない  
+⇒現代日本の場合は所得税がこれ。大体、年収200万円以下の人は5%を、年収4000万円以上の人は45%を税として支払う事になっている  
+  
+・このような制度を採用するが故に、福祉国家は金持ちに厳しい  
+・故に金持ちは、一般に、自由の尊重を主張する  
+・それは間違いなく、合理的な判断である  
+・自分で稼いだカネなんだから、自由に使わせろ…これは、金持ちにとって合理的な意見である  
+  
+・しかしこの判断は、十全に合理的だとは、正義だとは言えない  
+・冷戦も後半戦に入った1970年代、アメリカ社会に彗星の如く現れた男は、そう主張した  
+・その名はジョン・ボードリー・【ロールズ】。【『正義論』】を著した男である  
+  
+・ロールズは、功利主義ではなく社会契約説を援用して正義を論じた  
+・即ち、ロールズは、社会契約説の論者と同様、まず自然状態を想定する  
+⇒彼の場合、「原初状態」という言葉を使うが、まぁ要するに自然状態の事だと考えてよい  
+  
+・ロールズはこの想定に於いて、「人々が、互いに互いの事を全く知らない」というものを想定した  
+⇒これを、ロールズは［無知のヴェール］と呼んだ  
+  
+・そしてこの状態に於いて、人は自由主義国家と福祉国家、どちらを「よい」とするだろうか？  
+・それは当然、福祉国家である筈である  
+  
+・そもそも、金持ちが自由主義国家を肯定するのは何故か？  
+⇒自分で自分が金持ちだという自覚があり、庶民と自分を比較して「まぁ俺なら、あんな事にはならないな。俺はずっと金持ちのままだ」という見通しが立てられるからである  
+・また、若者も比較的、自由主義国家（的な、実力主義の世界）を肯定するが、それは何故か？  
+⇒まだ若く力と未来への希望に溢れており、「俺は他の奴より有能だ」「俺ならもっとうまくやれる」と漠然と思っているからである  
+  
+・しかしそういう推測ができない状況であれば、自分が金持ちになるか庶民になるかは分からない  
+・だから、無知のヴェールに包まれた状態の人は、自由主義国家ではなく福祉国家を選択するのである  
+・合理的な個人は、公正な状態に置かれていれば、福祉国家を選択するのだ  
+⇒人が自由主義国家を選択するのは、利己的な理由による。自分が金持ちか貧乏人かが分かっているから、自分が有能か無能か分かっているから、自分に有利になる自由主義国家を選択する。そういう利己的な選択ができない、無知のヴェールに包まれた公正な状態であれば、人は福祉国家を選ぶのである  
+  
+・ここからロールズは、福祉国家的な国家こそ、正義であるとする  
+・自由や富を公平に分配する社会こそが、正義である  
+・これを、［公平としての正義］と呼ぶ  
+  
+・人は平等に、自由でなければならない（［平等な自由の原理］）  
+・競争や社会参加も、平等でなければならない（［機会均等の原理］）  
+・しかし、不利な立場にいる人を助ける際には、不平等も許される（［格差原理］）  
+  
+・ロールズは、このように述べたのである  
+・ロールズの理論は、ナショナル・ミニマム論と同様、福祉国家の本質を慈善事業とはしない  
+・貧困に陥った時、救済されるという制度は、何より、自分自身の為に作るものだと  
+・自分が「この先どうなるか分からない」という状況であれば、誰もがそういう制度を作るのだと  
+・福祉国家的な制度は、金持ちにとっても、自分の為のものだと言うのである  
+⇒じゃあ実際のところはどうなの、と言うと、どんな金持ちでも駄目な時は駄目で、貧困層に落ちる事はある。いつ車に轢かれて、半身不随になるか分からない。いつ突然の大不況が来て、自分の会社が潰れるか分からない。もっと言えば、「貧乏人が貧乏で死ぬのは自己責任」と言って放置しておくと、真面目に働くのが馬鹿らしくなって犯罪に走る人間が増える。金持ちとて、犯罪の犠牲になり得る。…そのように考えてみても、やはり、福祉国家的な制度というのは、金持ちの為のものでもあると言えよう  
+  
+  
+## ●アマルティア・セン  
+・もう一人、福祉国家的な考え方をする現代の思想家を紹介しておこう  
+・【アマルティア・セン】は、1933年、インドで産まれた経済学者である  
+⇒令和三年現在、八十七歳で存命  
+  
+・彼は経済学者だが、インド出身で、また幼少時にベンガル【飢饉】に遭遇している  
+⇒1943年にインドのベンガル地方で起きた大飢饉。餓死者は二百万とか三百万とか言われている  
+・この飢饉の経験から、彼は飢饉や貧困を重点的に研究した  
+  
+・例えば飢饉。何故飢饉が起きて、人が餓死するのか？  
+・彼以前の経済学では、素朴に生産の問題だと考えられていた  
+・要するに、そこに住む人全員が食べられるだけの食糧がないから、飢饉が起こって餓死者が出るのだと  
+  
+・まぁ勿論、これ自体も大きな間違いではない  
+・食糧がそもそも足りないというのもまた、主要な要因ではあろう  
+・しかし、それだけではないのだと、アマルティア・センの研究は明らかにした  
+  
+・と言うのは、貧困という問題を指摘したのである  
+・即ち、「食糧が足りない」というのだけが問題なのではない  
+・「食糧が買えない」という問題もあるのだ  
+  
+・1943年のベンガル飢饉で見てみよう  
+・1943年と言えば、まさに第二次世界大戦の真っただ中である  
+・ベンガル地方のすぐ東にあるビルマ地方にも大日本帝国が攻め込み、激戦となっていた  
+・戦場のすぐ傍にあるベンガル地方には、食糧を輸入するフネがやってこなくなった  
+・これに合わせて、食糧の価格が高騰する  
+⇒経済学の基本として、「皆がいらないと思うもの・その割に沢山売っているもの」は値段が下がる。逆に「皆が買いたいと思うもの・その割にあまり売っていないもの」は値段が上がる。この時のベンガル地方に於ける食糧はまさに、後者だった  
+  
+・ところで。当時、イギリス支配下にあったベンガル地方の農村は、ザ・貧困みたいな状況にあった  
+・そのまま、食糧の価格が高騰した  
+・となれば、どうなるか？  
+・貧乏な農村の人々は、食糧を買えなくなる。結果、飢饉が起きた…  
+  
+・アマルティア・センは、ざっくり言えばこのように説明したのである  
+・食糧の不足は確かに、飢饉の主要な要因でもあるかもしれない  
+・しかし、じゃあどんな人が餓死するのかと言えば、貧乏に窮している人々なのである  
+⇒勿論これはざっくりした説明。ベンガル飢饉で言えば他にも、イギリスの時の内閣総理大臣チャーチルが、「植民地のインド人の救援～～～？？？」みたいな顔をしてわざと何もしなかった、とか色々ある  
+  
+・アマルティア・センは、このように、新たな切り口で経済学を研究した男である  
+・そんな彼の研究は、主に厚生経済学と呼ばれる分野に属している  
+・ざっくり言ってしまえば、一般的な経済学は「現実の経済はどういうものか」を研究する  
+・一方、厚生経済学では「経済はどうあるべきか」、また「どうすれば理想的になるか」を研究する  
+  
+・厚生経済学は、そういう名前がつく遥か以前、古代から続いてきた学問だと言える  
+・それこそジェレミー・ベンサムの功利主義などは、まさに厚生経済学と言える  
+・そして、この手の学問の最大の問題は、計算方法である  
+・功利主義がまさにそうだったが、「その人がどれぐらい幸福か」を計算せねばならない  
+・そんな漠然としたものを、どう計算するかという問題である  
+  
+・アマルティア・センは、「機能(functions)」でこれを測るべきだ、とした  
+・これは即ち「～できる」（もしくは「～できない」）、というものである  
+⇒例えば「飲料水を手に入れられる」「車を運転できる」等々…  
+  
+・勿論、一つの機能だけで測っても仕方ない  
+⇒極端な話、「車が運転できる」金持ちと、「車が運転できる」ホームレス。どちらも同じ機能は持っているが、幸福度は全然違う筈である  
+  
+・故に、複数の機能を想定して、「この人はどれぐらい幸福か」を測る必要がある  
+・アマルティア・センは、この複数の機能の集合体を【潜在能力】と呼んだ  
+  
+・この潜在能力の考え方が国連に採用されてできたのが、人間開発指数である  
+・この指数は、その国の平均寿命、識字率、就学率、一人当たりGDPを使って算出する  
+・そしてこの数字をランキングにして、国連は毎年発表しているのである  
+  
+・また、アマルティア・センは、［人間の安全保障］委員会での共同議長も務めていた  
+⇒［人間の安全保障］は、日本の人道外交の基本にもなっているもの。各国の人々が、十分な生活水準を保持できるように支援していこう、という考え方である。彼は、人間の安全保障を達成するにはどうしたらいいか、というのを考える国連の委員会の共同議長を務めていたのである。ちなみにもう一人の共同議長は日本人  
+  
+  
+## ●雑談～ポスト福祉国家の時代  
+・福祉国家が台頭してくるのは、世界大戦期である  
+・その次の冷戦期になると、世界は西側（アメリカ）陣営と東側（ソ連）陣営に分かれ対立する  
+・遅くともこの冷戦期には、西側陣営の国家に於いて、福祉国家が主流となっていく  
+  
+・しかし1980年代になると、いわゆる新自由主義が台頭してくる  
+・これは、「福祉国家をやめて、もう一度、自由を重視した社会を作ろう」というものである  
+  
+・ここでもう一度、ここまでの流れを振り返ってみよう  
+・「資本主義というレビヤタン」で見たような、労働者（会社の社員とか、一般庶民）の極めて酷い待遇  
+・あれは「自由を重視した社会」だからできたものであった  
+⇒資本家（金持ち、会社の社長とか）は、「労働者を十四時間も十六時間も働かせる自由」「小学生ぐらいの子供であろうとも十四時間も働かせる自由」「労働者の選挙権を認めず、労働者の声を封殺する自由」といった自由を行使した  
+  
+・「自由を重視した社会」でなければ、こんな自由は行使できなかった  
+・勿論、労働者だって自由を行使できるのだが、労働者と資本家なら資本家の方が強い  
+⇒極端な話、労働者が「俺達の給料を上げろと要求する自由」を行使しても、資本家が「面倒な労働者はクビにする自由」を行使したらそれでおしまいである。結局、「自由を重視した社会」は金持ちに優しく、労働者に厳しいのだ  
+  
+・だからこそ、「多少自由を制限してでも、困っている人を助けましょう」という思想が現れたのである  
+・最初その思想は社会主義の形を採り世界中に悪夢を撒き散らしてしまった  
+・しかし、やがて社会民主主義等も現れ、世の主流は福祉国家になっていったのである  
+  
+・それが、1980年代から再び、「自由を重視した社会」をもう一度、という思想が現れた  
+・これが、現代を特色づける新自由主義と呼ばれるものである  
+・この新自由主義を、金持ちは勿論歓迎した  
+・福祉国家では封じられていた様々な自由を、行使できるようになるからである  
+  
+・そしてまた、一般庶民もこれを歓迎した  
+・人間は皆、「自分は平均よりは上だ」「俺は仕事ができる」と思うものであり…  
+・自由に稼げる実力主義の社会が到来すれば、自分の給料も増えると思ったのである  
+  
+・そしてまた、新しい自由主義は、「グローバリズム」という形を採用した  
+・国境をなくし、ヒト、モノ、カネの移動を自由にしようとした  
+・国境がなくなり、世界は一つになり、世界は平和になるかに思えた  
+  
+・では、どうなったか？  
+  
+  
+・どの先進国でも、上位1%の超大金持ちだけが更に儲けた  
+・そしてどの先進国でも、労働者の給料は減り続けている  
+  
+・ただ給料を減らすだけではない。企業が、自国の人間を雇う事すらしなくなっていった  
+⇒現代では、「高い給料を要求する自国人を雇う必要なんてないじゃん（笑）」「安い外国人雇って奴隷労働させればめっちゃ儲かるじゃん（笑）」みたいなのが発生している。結果、先進国の労働者はどんどん待遇を悪くされ、没落し、逆に先進国の金持ちは儲ける。こうして、貧富の格差が拡大する  
+  
+・エリート達はこの状況を放置し、一般庶民とエリートの分断は激しくなっていった  
+⇒例えば自国人の労働者が、外国人労働者との競争に晒されて次々と待遇を悪くされる中、金持ちエリートは「見てるか我が国の労働者諸君（笑）」「こうやって安い給料でも勤勉に働くのが真の労働者だぞ（笑）」とやってる訳である。日本でも「上級国民」という言葉が生まれ、富裕層が敵視される状況が生まれているが、EU諸国や米国での状況はもっと酷い  
+  
+・現代日本でも、労働者の待遇悪化は深刻である  
+・現代の企業は徹底的に、労働者（社員）を「カットすべきコスト」と認識している  
+・「またまたー」と思うかもしれないので、例を挙げよう  
+  
+例：労働契約法の改正で、有期雇用契約の非正規雇用労働者は、五年以上同じ企業に勤務している場合、無期契約へと契約変更を要請できるという話になった  
+※有期雇用契約：「あなたを一年、うちで雇います」「来年？　知らん」「もしかしたら契約更新でもう一年働いて貰うかもね」みたいな契約。クビにしたい時は「来年の契約？　更新しませんよ。一年契約っつったじゃん」でいいので、特にクビを切りやすい。非正規雇用と言ったらほぼ全てこれ  
+※無期雇用契約：非正規雇用は非正規雇用だが、「いつまで」という期限がない。この社員をクビにする場合、契約期間中のクビとなるので、正社員に準じたクビにしなければならない。そして日本の正社員は法律でガチガチに守られているので、大抵の解雇は裁判に訴えれば勝てる。つまり、滅茶苦茶クビにしづらい。なのでほとんど存在しない  
+結果：五年目以降、企業が契約を切るようになった  
+  
+・本当に、現代の日本企業にとっての社員は「カットすべきコスト」なのである  
+・勿論、このような社会は一般庶民にとっては地獄でも、金持ちにとっては天国である  
+・それを是とするか否とするかは、個人の自由と言える  
+  
+・ともあれ、現代では再び自由を重視するようになった結果、かつてと同様の問題が起きている…  
+・その事実については、認識しておくべきであろう  
