--- a/07_02.md
+++ b/07_02.md
@@ -1,2 +1,508 @@
 # 前期実存主義
 
+  
+|                                                                                                                                                                                                        |  
+|--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|  
+|本節で扱う思想家一覧                                                                                                                                                                                    |  
+|アルトゥール・ショーペンハウアー（1788年2月22日 - 1860年9月21日）<br>セーレン・オービエ・キルケゴール（1813年5月5日 - 1855年11月11日）<br>フリードリヒ・ヴィルヘルム・ニーチェ（1844年10月15日 - 1900年8月25日）|  
+  
+※一般に、ここで扱う三人は実存主義の先駆者とされ、次章で紹介する哲学者が実存主義の本番的な扱いを受ける。ここでは分かりやすくする為に、前期実存主義、という名前で紹介する…が、本来この呼び名は存在しない。便宜上のものである  
+  
+  
+  
+## ●神が死んだ世界で  
+・いつの時代どの地域にも、光と闇はつきものである  
+・絶対主義の時代から革命の時代、資本の時代、そして帝国の時代…この時代の光とは、理性である  
+・人類社会は理性を用い、理想郷へ向けて進化を続けている  
+・その進化の最先端こそ、欧米社会である  
+  
+・理性の光を賛美する思想の典型がドイツ観念論、例えばヘーゲルの弁証法であろう  
+・また、ダーウィン（を誤解して）受け継いだスペンサーの社会進化論もそうである  
+・アダム・スミスの資本主義論もそうだし、功利主義も理性の光を賛美するものだと言っていい  
+  
+・しかし。では絶対主義の時代から帝国の時代にかけて…この時代は、本当に光だけであったか？  
+・そんな事はなかった。本稿でも「資本主義というレビヤタン」で見た通りである  
+  
+・また社会主義も、この時代の闇を痛烈に批判した思想である  
+・とは言っても社会主義は、闇を批判した上で新たな光として、社会主義国家の建設を提唱している  
+・だから、社会主義は闇を批判した思想ではあっても、闇の哲学そのものではない  
+  
+・そして、これから紹介する哲学こそ、この時代の闇が生み出した闇の哲学  
+・「永遠普遍の真理」「人類が到達すべき理想郷」を追い求める光の哲学とは、真逆の哲学  
+・そのようなキラキラした光の哲学など、取るに足らぬと断じた哲学  
+・即ち、【実存主義（実存哲学）】である  
+  
+  
+  
+  
+## ●死に至る病―セーレン・オービエ・キルケゴール  
+## ○あれか、これか―実存  
+・デンマーク王国生まれのセーレン・オービエ・【キルケゴール】こそ、実存主義の祖、先駆者である  
+⇒主著は【『あれか、これか』】【『死に至る病』】［『不安の概念』］  
+  
+・時期的には、ナポレオン戦争が終わる直前に産まれた人物である  
+・つまり、フランス革命から始まった欧州の戦乱がようやく落ち着く頃に産まれた男である  
+・そしてまた、この時期はヘーゲルの最晩年にあたる  
+  
+・そういう時期に産まれたものだから、彼が育った頃のデンマーク王国は、ヘーゲル哲学が支配していた  
+・世界は弁証法的に進歩しており、人類はやがて理想郷へと辿り着く  
+・人類は弁証法的な進歩の末に、やがて真理を手に入れる  
+・そういう思想が、支配的だった訳である  
+  
+・そのような思想に何の価値があるんだ、というのがキルケゴールである  
+・キルケゴールは、大事なのは「現実存在」だと言った  
+・重要なのは、今ここに「現実」として「存在」している人々ではないのか、と  
+  
+・そして「現実存在」たる我々にとって、やがて未来の人が辿り着く理想郷がどうだと言うのか？  
+・今ここに「現実」として「存在」する我々にとって、未来の人類が手に入れる真理が何だと言うのか？  
+・我々には、何も関係のない話ではないか！  
+・キルケゴールは、このようにヘーゲル哲学を批判した訳である  
+  
+・弁証法的に人類が進歩するという理想論は、なるほど美しいかもしれない  
+・だがそれは、人類の歴史を俯瞰できるような、神のような存在にとって美しいのだ  
+・ヘーゲルの弁証法的進歩史観は、「現実存在」たる我々を無視した、非人間的な思想である…と  
+⇒ヘーゲルの場合は、「我々も理想社会を作っていく、真理を見つける歴史の一員なのだ。だから一緒に頑張ろう」となる。キルケゴールの場合は「俺達が生きてる内に実現されない理想社会、俺達が死んでから見つかる真理なんて、俺達に関係ねぇよ」。見事なまでに光の哲学と闇の哲学である  
+  
+・ところで、ここまで「現実存在」と言ってきた  
+・キルケゴール自身はラテン語でExistentsと言っていたこの単語、元は「現実存在」と訳されていた  
+・九鬼周造という哲学者が、この「現実存在」を短縮してカッコよくした（婉曲表現）  
+・それが【実存】という単語である  
+  
+・つまり【実存主義（実存哲学）】とは、「今ここに現実として存在する自分」を重視する哲学と言える  
+・だからこそキルケゴールは、ヘーゲルの弁証法的な理想論を否定したし…  
+・一方で、当時の社会に住む人々をも批判した  
+  
+  
+・彼が生きた革命の時代後期から資本の時代にかけて、現代的な資本主義社会が形成されていった  
+・人々は会社に所属し、毎日会社で仕事をし、また新聞や本を読んで情報を得ていた  
+・そのような現代的な社会では、人々は様々な情報媒体（メディア）の影響を受け、流されやすい  
+⇒例えば新聞、テレビ、SNS、本…他にも色々ある  
+  
+・キルケゴールが生きた時代、既に一般庶民も情報媒体へ触れるようになっていた  
+・そして現代人と同様、情報媒体に流され、皆が同じような行動をとるようになっていっていた  
+・キルケゴールは、これを【画一化（平均化、均一化）】と呼んで批判した  
+  
+・キルケゴールは実存を、今ここに「現実」として「存在」する自分を重視する訳である  
+・そんな実存が、情報媒体に流され、画一化されていく  
+・なんとなく、で流されるままに、同じような事ばかりしている  
+・そういう状況を、実存を重視するキルケゴールが許せる筈はなかった  
+  
+・故にキルケゴールは、実存たる人間に【主体性】を求める  
+・今ここに「現実」として「存在」する人間一人一人が、自分自身の頭で考え、行動する  
+・即ち、主体的に考え、行動する  
+・自分の頭で、主体的に【あれか、これか】を選択する  
+・そういう事を、キルケゴールは主張するのである  
+⇒この【『あれか、これか』】は、彼の初期の大作の題名である。この本の中で、キルケゴールは実存たる人間が、主体的に選択する事の重要性を訴えている  
+  
+  
+  
+  
+  
+  
+  
+## ○大地震―宗教  
+・キルケゴールの思想の特徴を著者が挙げるとしたら、二つある  
+・一つは、既に見たような実存を大事にする、という部分である  
+・そしてもう一つ。キルケゴールは、宗教を重視している思想家なのである  
+  
+・これは、キルケゴールの出生が影響している  
+・元々彼の父は貧乏で、神を呪っていた  
+※キリスト教だと神は全知全能なので、誰かが貧乏ならまぁ、神のせいと言っていい  
+  
+・しかしその後、金持ちになれた  
+・セーレン・オービエ・キルケゴールの父は、金持ちになれた事を、神の罰だと思っていた  
+⇒いい思いさせておいて、後で地獄に落として落差で苦しませてやろうという神の計画だと思った  
+  
+・故に父は、罰があると思っていた  
+・例えば自分の子供は、イエスが死んだ三十四歳までに死ぬと思い込んでいた  
+・実際、長男は生き延びたのだが、次男以降六男までは皆、早死にした  
+  
+・また、末っ子のセーレン・オービエも、二十二歳の時、父の犯した罪を知ったと言われている  
+・その時彼は大きな衝撃を受けたとされており、自分自身で［大地震］と呼んでいる  
+・その罪の大きさを知った彼自身、自分が三十四歳までに死ぬだろうと思っていた  
+⇒三十四歳の誕生日を迎えた時、自分でも信じられなかったぐらいである  
+  
+・キルケゴールは、そんな宗教的な生い立ちを持っている  
+・故にこそ、キルケゴールは宗教を、キリスト教を大事にした  
+・これが、キルケゴールのもう一つの特徴である  
+  
+  
+## ○私にとって―キルケゴールの思想  
+・では、実存と宗教を重視するキルケゴールの思想とは、いかなるものか？  
+  
+・繰り返しになるが、キルケゴールにとってヘーゲル的な真理とは、取るに足らないものである  
+・誰かがいつか見つける永遠普遍の真理などというものは、実存としての人間にとっては無価値である  
+・即ち、今ここに「現実」として「存在」する人間にとっては、どうでもいいものである  
+  
+・では、キルケゴールにとっての真理とはいかなるものか？  
+・それは、彼の日記に残っている  
+・即ち、【私にとって真理であるような真理】という言葉である  
+  
+・私という実存にとって、真理と感じられるもの  
+・私という実存が命を懸けていいと、そのように感じられるもの  
+・そういうものこそ、真理である。キルケゴールは、そう言ったのだった  
+・【主体的真理】という言葉で知られる概念である  
+  
+・では、そのような真理には、どのように到達するのか？  
+・ここでキルケゴールは、教科書等では一般に【実存の三段階】と呼ばれるものを提示する  
+⇒【美的実存】、【倫理的実存】、【宗教的実存】の三種  
+  
+・この実存の三段階、教科書や参考書の説明を見るととても分かりづらい  
+・例えば、こんな説明をされる  
+  
+  人生を欲望のままに享楽的に送ろうとする段階を何というか。美的実存  
+  （中略）人間としての善き生き方を求めるようになる段階を何というか。倫理的実存  
+  （中略）信仰への飛躍を決意する段階を何というか。宗教的実存  
+    
+  倫理擁護問題研究会編『山川　一問一答　倫理』山川出版社  
+  
+・まぁ、何を言ってるかよく分からない  
+・その理由は明白で、実存という単語が悪いのである  
+・既に見たように、実存はかつて現実存在と訳された語で、ラテン語のExistentsである  
+・この単語、英語で言えばexistである。じゃあ、existとはどんな意味だったか？  
+・「存在」とか「生きる」というような意味だった訳である  
+・だからこう（↓）してやればいい訳だ  
+  
+  人生を欲望のままに享楽的に送ろうとする段階を何というか。美的な生き方  
+  人間としての善き生き方を求めるようになる段階を何というか。倫理的な生き方  
+  信仰への飛躍を決意する段階を何というか。宗教的な生き方  
+  
+・これですっきり、分かりやすくなる  
+・宗教を重視したキルケゴールらしく、最終的には信仰によって、人は真理を得るとしたのである  
+  
+・ところで、実存の三段階について、「教科書では一般に」と歯に何か挟まった言い方をした  
+・と言うのは、実存の三段階という言い方をすると、一直線に発展していくように見える  
+・美的⇒倫理的⇒宗教的…と直線的によりよい生き方へ変化していくように見えるのだ  
+  
+・どうも、キルケゴールが本当に言いたかったのはそういう事ではないようである  
+・彼は、ヘーゲルとその弁証法的進歩史観を批判した  
+・そのヘーゲルと同じ弁証法を使う事で、キルケゴールは全く逆の結論を導き出そうとしたのである  
+⇒ヘーゲルの歴史観は「かつて信仰という名の迷信の闇に沈んでいた人間は、やがて理性の力で進歩し、理想社会へと進んでいく」という感じ。キルケゴールは、ヘーゲルと同じ弁証法を使って、「人間は理性の力で進歩しているように見えてそういう訳ではなく、最終的に信仰の世界へ立ち返る」と論じようとしたのである  
+  
+・人は一方で、欲望のままに人生を過ごしたい、と思う（美的実存）  
+・しかしもう一方で人は、人として善い生き方をしたい、と思う（倫理的実存）  
+  
+・では、やれるのか？  
+・欲望のままに人生を過ごしたいと思って、そもそもやれなかったり、できても空しかったりする  
+・また人として善い生き方というのも、なかなかできるものではない  
+・仮にどちらかができたとして、人間はいつか死に、その生き方は終わってしまうのである  
+・人間は、欲望のままにも善くも生きられず、【絶望】してしまうのだ  
+⇒キルケゴールは「絶望は死に至る病」と言っている。「人間とは、死ぬまで絶望という病に苦しめられる存在である」「何せ最後には死に敗北すると分かっているのだから」…というような話である  
+  
+・では、どうすればいいのか？  
+・美的実存でも倫理的実存でもない、第三の道はないものか？  
+・実際にやれる生き方で、しかも善い生き方で空しくなく、死をも超越し得るものは、ないものか？  
+  
+・キルケゴールは、それこそ宗教的実存だ、信仰の生き方だ、と言うのである  
+・人間は己の限界、罪深さ、無力を認めて、自ら主体的に、神へ向かうべきだ  
+・誰かに言われたからではなく、実存としての主体性に基づく決断によって神へ向かうべきだ  
+・キルケゴールは、そう言った訳である  
+・そしてキルケゴールは、そうやって神に自ら向かう者を、【単独者】と呼んだのである  
+  
+  
+  
+## ●超人思想―フリードリヒ・ヴィルヘルム・ニーチェ  
+## ○神の死を宣した男  
+・キルケゴールは理性の光を否定したが、その後神への信仰に進んだ  
+・彼自身はこれを欠点とは思わないだろうが、しかし、時代を考えれば欠点となる  
+・と言うのは…絶対主義の時代から帝国の時代にかけて、キリスト教的な価値観が力を失っていった  
+・特にキルケゴールが死んだ後、資本の時代や帝国の時代はこれが顕著である  
+  
+・この時代、科学技術が急速に発展し、鉄道、飛行機、電化製品、電話と様々な近現代的製品が現れた  
+・ダーウィンの進化論もこの時期であり、これは科学技術の発展と無関係ではない  
+⇒研究の進歩で「人間を含む世界を神が、それも六日間で作った訳ではないらしい」と分かった、って話な訳で…  
+  
+・このような時代の変化は、キリスト教的な価値観を根本から揺るがした  
+・当然と言えば当然である  
+・今まで欧州人は、神が作った世界に住み、この世の終わりでは神が救ってくれると信じていた  
+・それが「どうも聖書に書いてある世界創造は嘘らしい」となったら、それだけで一大事である  
+  
+・こうして、技術の発展はキリスト教的な価値観を崩し、結果的に、欧州の伝統的な価値観を崩した  
+・何せ欧州の伝統的な文化風俗は、キリスト教に根差していたのである  
+・中世以来の欧州人にとって、キリスト教こそ世界であり、キリスト教徒でない人間など考えられなかった  
+・それほどまでの絶対性を持つキリスト教が崩れれば、欧州の価値観が崩れるのも当然であった  
+⇒故にこの時代、［デカダンス］という文化潮流も生まれた。キリスト教的な価値観を疑い、芸術に至高の価値を置く、退廃的な文化である。もっと言えばプラグマティズムなんかも、「ダーウィンの進化論を信じながら、キリスト教徒でいられるか」というところから出てきた部分がある  
+  
+・キルケゴールは、そんな時代に「これからはまた、キリスト教だ！」と言った訳である  
+・それは当然、欠点となり得る  
+・しかしだからと言って、キルケゴールが指摘した近現代社会の問題が消える訳ではない  
+⇒近現代社会の人々は情報媒体に影響され、流され、ただ「何となく」で皆と同じような行動を採るだけになってしまう。画一化されてしまう、というアレ  
+  
+・このような状況下、宗教すら消えてしまえば、人は【虚無主義（ニヒリズム）】に陥ってしまいかねない  
+・実際、キルケゴールより二十五年早く生まれ、五年遅く死んだ哲学者の思想に、その気はあった  
+・その名はアルトゥール・［ショーペンハウアー］  
+・彼はこの世に生きる事を苦痛と断じ、人生とは、その苦痛をいかにいなすかだ…というような事を語った  
+・そういう、一種の【厭世主義（ペシミズム）】で有名な哲学者である  
+  
+・残念ながらキルケゴールやショーペンハウアーの思想は、万人に対する明快な解答にはならない  
+・では、誰かいないのか？  
+・伝統的な価値観が崩壊する中、この時代の闇を残らず掘り出し、そして処方箋を与える者は？  
+・その男は、1844年、ドイツ帝国建国直前のプロイセン王国に産まれた  
+・フリードリヒ・ヴィルヘルム・【ニーチェ】。神の死を宣した男である  
+## ○背後世界、奴隷道徳、そして神の死  
+・ニーチェはほぼ、資本の時代と帝国の時代を生きた哲学者である  
+・彼の功績は大きく二つ。一つは、この時代の闇を余す事なく抉り出した事である  
+・そしてもう一つが、そんな時代の中でどうやって生きていくか、明確な処方箋を出した事である  
+・まずは、彼が抉り出したこの時代の闇、ひいては現代まで続く社会の闇から見ていこう  
+  
+・話は変わるようだが、人は皆、「これがいい事だ」という概念を持って生きている筈である  
+例：痩せているのはいい事だ  
+例：可愛いのはいい事だ、かっこいいのはいい事だ  
+例：一流企業に入って、安定した生活を送るのはいい事だ  
+  
+・人は皆、そういう概念を持っている  
+・だからこそ、人は「痩せたい」と思い、ダイエットしようとする  
+・だからこそ、人は化粧をするし、お洒落をする  
+・だからこそ、人は安定した生活を求めて受験戦争や就活戦争に参加する  
+  
+・そして失敗した時、「自分は駄目な奴だ」と絶望するのである  
+⇒ダイエットに失敗した時、可愛く、かっこよくなれなかった時、受験や就活に失敗した時…人は「いい事」ができなかったが故に、自分に失望してしまうのである  
+  
+・さて。ニーチェはキルケゴールと同様、実存主義の哲学者である  
+・今ここに「現実」として「存在」しているモノを重視する哲学者である  
+・では、先程挙げたような「これがいい事だ」という概念は、実存であろうか？  
+・そんな筈はない。現実には存在しない、架空のモノである  
+  
+・故にニーチェは、「これがいい事だ」というような概念は全て思い込みに過ぎない、と否定した  
+・そのような架空の存在に、現実に存在する人間が振り回される事自体が不幸だ、と  
+・人間は架空のモノに縛られ、余計な不幸を背負い込んでしまっている、と  
+⇒この架空のモノを、ニーチェは「背後世界」と呼んでいる  
+  
+・しかし、ここで疑問が出てくる。道徳はどうだろうか？　と  
+・一人一人の人間は間違いなく実存である  
+・現実に存在する人間の良心から生み出されたもの…そう考えれば、道徳は実存の延長だと言えないか？  
+・言えない、というのがニーチェである。道徳だの何だの、そういうモノは全てまやかしだと断ずる  
+  
+・例えば。一般に、人は弱い者をより善であるとする  
+⇒強く自信に満ち溢れた筋骨隆々の人間と、弱々しくはあるが優しく柔和な人間であれば、後者が善とされる。他人には優しくしましょう。何かあっても怒らず、優しく対応しましょう…こういう道徳は現代日本にもあるが、中世以降の欧州でも支配的であった  
+  
+・だが、ニーチェは言う。「よい」という意味の単語を調べていくと、昔は「強い」ものを指していたと  
+・単純に強く、雄々しくあるものが「よい」ものだったのだ、と  
+  
+・確かにそれはそうであろう  
+・（中世もそうだが特に）古代は、弱肉強食の世界である  
+・強くなければ生き残れない。だから強い者が称賛され、人々は強い者に庇護されようとする  
+・「強い」が「よい」というのは、当然の話、自然な話なのである  
+  
+・それがいつの間にか、「弱い」ものを「よい」とする、価値観の転倒が起きてしまった  
+・当然でも自然でもない価値観が登場し、人々を支配するようになったのである  
+  
+・では何故、このような価値観の転倒が起きてしまったのか？  
+・ニーチェは、弱者の【ルサンチマン（嫉妬、怨恨）】が元凶だ、と説明する  
+・その為に彼は、誕生してすぐの頃のキリスト教を例に挙げる  
+  
+・キリスト教が誕生したのは、古代ローマが共和国から帝国へ切り替わる時期にあたる  
+・要は、古代ローマがこれから黄金時代を迎えるという時期である  
+・この時期にキリスト教が誕生したのだが…既に見たように、全く広がらなかった  
+  
+～ここから復習～  
+・但し、イエスの生前と同様、初期のキリスト教もなかなか広まらなかった  
+・積極的に危険宗教として弾圧されたと言うよりはむしろ、相手にされていなかった  
+⇒イエスの時代のローマ帝国は、アウグストゥスが初代皇帝となる頃。多少足踏みはあるものの、まさにこれから全盛期を迎える上り調子の頃。そういう国は得てして余裕があり、況して多神教の国である。新しい宗教ができようが気にしない。仮にその宗教が「神は唯一」「お前のところの宗教は全部嘘」みたいな事を言ってても、さして問題にはならない  
+※世界史とかでネロ帝による弾圧とかが話題にされやすい為、キリスト教が誕生してから一気に広がったイメージがあるのだが…実際には、ローマ帝国の調子がいい間はほぼ増えてない  
+～ここまで復習～  
+  
+・言ってみれば、ローマ帝国の調子が良かった頃のキリスト教は、弱かったのである  
+・ローマ人は多神教を信仰しており、自分の好きな神を信仰していた  
+・そのような神は偽物だ、我らキリスト教の神のみが唯一の存在だという声は、概ね無視されていた  
+・つまり、キリスト教徒は弱く、ローマ人は強かった訳である  
+・「強い」を「善」とする古代の価値観で言えば、キリスト教徒は悪であり、ローマ人は善だったのだ  
+  
+・そして、ニーチェは言う。キリスト教徒は、価値観を転倒させる事で、自分を慰めたのだと  
+・彼らは弱い自分を認め、自分達も強くなろうとはしなかった  
+・代わりに、「弱い」を「善」とし「強い」を「悪」とする価値観を生み出した  
+・「弱い」が「善」ならば、キリスト教徒は善となり、その逆のローマ人は「悪」となる  
+・そうする事で、自分達を慰めたのだと、そう指摘するのである  
+  
+  
+・キリスト教の神は、その教義上天地を創造した全知全能の神である  
+・だからその神を信仰するキリスト教徒が、「弱い」「悪」という現実を、認めたくない  
+・本当ならそこで、「なら俺達も強くなろう」というのが自然である  
+・しかしキリスト教徒は、自分達が「弱い」「悪」という現実に負けてしまった  
+・代わりに、「本当は俺達の方こそ善なんだぞ！」と、負け惜しみを言い出した  
+⇒「弱い方が善だ」「だから強いローマ人は悪なんだ」「ローマ人も可哀想にね、現世で生きてる内はいいけど、死んだら神様の裁きが待ってるのに…」「それに比べて俺達キリスト教徒は、弱くても善人だもんな。死んだら神様が救ってくださるよ」…という感じ  
+  
+・このような在り方が健全か？  
+・自分達が「弱い」「悪」だと言うのであれば、「強い」「善」になろうとすればいいだけなのに…  
+・「強い」「善」になろうという努力を放棄して、負け惜しみを言って傷を舐め合う  
+・そんな姿は健全なのか？　自然なのか？　人間本来の生き方なのか？  
+  
+・そんな訳がない  
+・このような【奴隷道徳】は、人間本来の活力を殺してしまうのだ  
+  
+・勿論ニーチェは奴隷道徳に限らず、架空のモノに振り回されて不幸になる事全てを否定している  
+・背後世界に踊らされて不幸になるのなど、あってはならない事だと  
+・その説明の一つとして、弱者のルサンチマンや奴隷道徳があるのである  
+  
+・そういう説明の中でも特に、止めと言える有名な台詞が【神は死んだ】である  
+・ニーチェは神の死について何度も言及しているが、ここでは最も有名なものを引こう  
+  
+  Gott ist todt! Gott bleibt todt! Und wir haben ihn getödtet! Wie trösten wir uns, die Mörder aller Mörder?  
+  神は死んだ！　神は死んだままだ！　我々が殺したのだ！　殺人鬼の中の殺人鬼とでも言うべき我々を、どう慰めればよい？  
+  ※拙訳  
+    
+  （フリードリヒ・ヴィルヘルム・ニーチェ『悦ばしき知識（原題：Die fröhliche Wissenschaft）』）  
+  
+・いかに絶対的なように見え、永遠普遍に見えるものであっても、いつかは崩れて消える  
+・神でさえもそうだ。中世欧州を隅々まで支配したキリスト教の神でさえ、最早絶対者ではない  
+・科学が神秘のヴェールを剥ぎ取り、聖書に書いてある神の奇跡を否定した  
+・最早「唯一絶対の真の存在」という意味での神は死んだ  
+・しかも神にはよくありそうな復活もなく、死んだままだ  
+・他でもない、神と宗教を生み出した人間自身が、神を殺したのだ  
+・神だけではない。この世のあらゆる価値観はいつか、崩壊する  
+・人生に意味を与えてくれる、しかし架空のモノはいつか崩れ去る  
+  
+・ニーチェは、そう言っているのである  
+  
+## ○永劫回帰の超越者  
+・実存主義者のニーチェは、「架空のモノに振り回されるのはやめよう」と主張した  
+・その説明が背後世界や奴隷道徳、神の死だった訳である  
+・しかし、「架空のモノに振り回される」のをやめるだけでは、人は【虚無主義（ニヒリズム）】に陥ってしまう  
+・背後世界という「架空のモノ」を全て取り払うというのは、それほど残酷なものなのである  
+  
+・「架空のモノ」を全て取り払うというのは、「私の存在に意味なんてない」と認めるのと同義である  
+・考えてみてほしい。「私の存在に意味がある」は、実存か？  
+・「私の人生には意味がある」は、現実に存在するのか？  
+・そんな事はない。人が頭の中で考えただけ、架空のモノである。背後世界である  
+  
+・そう、人は特に意味もなく、「ただそこに在るだけ」のものである  
+・道端に転がる石と同じように、人間の存在や人の人生にも、特別な意味はない  
+・あるように感じるとすればそれは、背後世界の話である  
+・本当に何も、ないのだ。人間は、何か意味があって存在してはいないのである  
+  
+・ちなみにだが、ここで↓こんな風に考えたとしたら、ニーチェの言う事を正しく理解していない  
+・「この世界に存在する意味はない。最早死しかない。死だけがこの無意味な世界から救済してくれる」  
+・よくよく考えてほしい。死にそんな特別な意味があるだろうか？  
+  
+・人間の生に意味がないように、人間の死にも、特に意味はないのだ  
+・そこにはただ、「人間が死んだ」という事実があるだけである  
+・そこには何の意味もない  
+・人間は何の意味もなく産まれ、何の意味もなく生き、何の意味もなく死ぬのである  
+  
+・その事実を前にした人間に、生きる活力というようなものが宿るだろうか？  
+・むしろ虚無主義（ニヒリズム）に陥る方が、健全である  
+・ただ「何となく」で毎日をやり過ごし死んでいくだけの、抜け殻のような人間  
+・そうなってしまって、当然なのである  
+  
+・そしてニーチェは、近い将来、社会はそういう人間で溢れると予言していた  
+・彼が生きていた時代はまだ、古くから続くキリスト教的世界観の残滓がまだ、力を持っていたが…  
+・やがてそういうものは時代と科学技術に押し流され、消えてしまうだろうと考えていた  
+・「いい人とはこんな人だ」「こうすれば幸せになれる」…そんな規範の欺瞞が、万人に悟られてしまう  
+・そして人々は、抜け殻のような人間になり果ててしまう  
+・ニーチェはそのような人々を、末人と呼んだ  
+⇒現代日本社会を見ても、末人は沢山いる。「何となく」で毎日をやり過ごしているだけの人。「将来の夢は？」と聞かれても特に何も思いつかず、書けと言われて無理矢理書いた夢が「幸せに生きる」みたいな人。特に熱中するものがある訳でもなく、真剣に取り組む何かがある訳でもない人。そういう末人だらけの世界がやってくると、ニーチェは予言していたのである  
+  
+  
+・問題は、末人達がどうやって生きていくか、である  
+・勿論それは、末人達がどんな世界で生きているかによる  
+  
+・末人は、「旧来の価値観が崩壊した世界で、抜け殻のように生きていく人達」である  
+・そして「旧来の価値観が崩壊した世界」は、一様ではない  
+・それは、キリスト教的な価値観が崩壊した、近現代の欧州の話かもしれない  
+・それは、一生懸命会社で働けば幸せになれる、という神話が崩壊した現代の日本かもしれない  
+・時代や地域によって、色々考えられる訳である  
+・そういった無数にある世界一つ一つに処方箋を出していっても、きりがない  
+  
+・そこでニーチェは、デカルトと同じような手法を採用した  
+・考えられ得る限り最悪の世界を想定し、そこで生きる末人ですら活力を得られる生き方  
+・そのようなものが見つかるのであれば、どんな末人にも通じる生き方となる  
+  
+・では、ニーチェの考える最悪の世界とは何か？  
+・それが【永劫回帰】である  
+・これは何かと言うと、要するに「繰り返される世界」である  
+  
+・一般に、時間は過去から未来へ流れる川のようなものだと考えられている  
+・過去から未来に時間が流れる事は無い。未来の事件が過去に影響を与える事も無い  
+・そういう時間概念が、少なくとも欧州では一般的である  
+  
+・だがもし、そうではなかったら？　世界は繰り返すとしたら？  
+・ニーチェという人間が産まれてきて、数十年生きて死ぬ。それがまた、繰り返されるとしたら？  
+・一兆年後、一京年後、一垓年後…同じように産まれ、同じように死ぬとしたら？  
+  
+・これまでの人生を、何度も何度も、無限に繰り返さねばならない世界  
+・その反復には何一つ新しいものはなく、あらゆるものが完璧に繰り返される、そういう世界  
+・定期試験の赤点も、受験の失敗も、就活の失敗も、仕事の失敗も、全てが完全に繰り返される世界  
+・「一度きりの人生だし頑張ろう」と思っても、全く同じものが繰り返されると最初から判明している世界  
+・この永劫回帰の世界こそ、究極の絶望の世界ではないか？  
+  
+・では、このような永劫回帰で、どう生きれば人は末人にならずに済むのか？  
+・どうすれば生きる活力を持って、前向きに生きていけるのか？  
+  
+・ニーチェは、自分の意志で、今この瞬間を肯定して生きていけ、と言っている。即ち…  
+  
+１：今ここに現実として存在する自分の意志で  
+２：今ここに現実として存在する世界を  
+３：「よい」ものだと肯定して生きていく  
+  
+・これができる人間を、ニーチェは【超人】と呼んでいる  
+  
+・実際のところ、これは簡単なように見えて難しい  
+・人間どうしても、過去の事や未来の事ばかり考えてしまいがちである  
+・「あの時こうしていれば」「十年後には年収一億だ」…そんな事ばかり考えがちである  
+  
+・しかし、過去とは実存であろうか？  
+・過去は既に過ぎ去ったものであり、今ここに「現実」として「存在」するものではない  
+・同様に未来もまた、未だ来たらぬ世界であり、今ここに「現実」として「存在」はしない  
+  
+・実存とは、一瞬一瞬に過ぎ去る「今」なのである  
+・一瞬毎に過ぎ去ってしまう儚い「今」こそが、ここに「現実」として「存在」するのだ  
+・だからこそ、唯一の実存たる「今」を、「今」存在する世界を、自分を肯定して生きる  
+・ニーチェは、その「今」を肯定して生きる者こそ超人である、と言っているのだ  
+  
+・幸運、不運、快楽、苦痛…人生で起こる全てを、その瞬間、肯定する  
+・「なるほど、不運とはこういうものか！」「苦痛とはこういうものか！」と肯定する  
+・そして死の瞬間、「そうか、人生とはこういうものであったか！」と肯定する  
+・「ならば人生よ、さらば！」「もう一度、また会おう！」そう肯定して、死ねる者  
+・それこそが、超人である  
+⇒もっと言うと、このような超人の態度を【運命愛】と呼ぶ。実存としての自分に関わる全ての実存を、それが快楽であれ苦痛であれ、肯定し、愛する超人の態度である。だからこそ、超人は死する時「もう一度、また会おう！」と笑うのである  
+  
+・…と、ここまで永劫回帰とその超越者、超人の話をしてきた  
+・実際のところ、そんな事はできるのだろうか？  
+・ニーチェはできる、と言う  
+・その理由の一つとして挙げられるのは、【力への意志】である  
+  
+・力への意志は、「人間が本来、自然に持っている意志」と説明しても問題なかろう  
+・人は誰しも、自然に「もっとよいものになりたい」「もっとよいものを作りたい」と思っている  
+・それが肉体的な方面に向かえば、物理的な意味で「もっと強くなりたい」になるし…  
+・それが芸術的な方面に向かうのであれば、「もっと素晴らしい芸術作品を作りたい」になる  
+  
+・人間誰しも、力への意志を持っている  
+・誰だって何か大きな事を成したいし、何か面白い事を成し遂げたい筈なのである  
+⇒誰だって子供の頃は、「ビッグになりたい」という夢を持っていた筈である。超一流のスポーツ選手になって喝采を浴びたい、世界一の大金持ちになりたい、世界征服して世界の王になりたい…等々。力への意志というのは、究極、そういうものなのだ  
+  
+・逆に言えば、背後世界に振り回されてしまう人間は、人間本来が持つ力への意志を弱めてしまう  
+・例えばキリスト教的な奴隷道徳は、間違いなくそういう意志を弱める  
+・だからこそニーチェは背後世界、奴隷道徳、神の死といった言葉を使った訳である  
+  
+・ここで指摘しておくべき事がある  
+・実は、ニーチェはあらゆる意味付け、あらゆる価値観を否定した訳ではない、という事である  
+・ニーチェが言っているのは、「誰かが作った架空のモノのせいで不幸になるのはやめよう」である  
+  
+・子供の頃からの夢が世界征服だったのなら、やればいいのだ  
+・人間本来の、生の活力に溢れた自身の力への意志を、妨げる必要などないのだ  
+・しかし人間は一般に、成長すると背後世界を取り込んでいく  
+・その中で様々な価値観を取り入れ、力への意志を弱めていく  
+⇒「俺なんて、超一流どころかプロの選手になる事すら無理だ」「お金持ちになりたいだなんて悪い事だ、カネでは買えないものもあるんだ」みたいに、力への意志を弱めてしまう  
+  
+・勿論、背後世界は一面に於いて、人に生きる意味を与えてくれるものでもある  
+・「こうして生きる事が幸せだよ」と教えてくれるものなのだから  
+  
+・超人は、そんな背後世界に頼りはしない。そしてまた、背後世界の消滅によって絶望もしない  
+・人間本来の力の意志に基づいて、「自分でやりたいと思った事を、自分でやる」のである  
+・そこに失敗があったとしても、人は絶望しない  
+  
+・自分のやりたい事がうまくいかなかったとして、普通、人は試行錯誤して、何とか成功しようと努力する  
+・どうしてもうまくいかないのであれば、素直に別の事をする  
+・「自分でやりたいと思った事を、自分でやる」のであれば、それが普通である  
+・そういう普通の、本来自然な事をやる力というのは、人間に備わっている  
+  
+・だから大丈夫だ。君も超人となれ  
+・一瞬一瞬の「今」を肯定し、力への意志を十全に発揮して、好きなように生きればよい  
+・それで成功しようが失敗しようが、それが人生だと肯定して生きるのだ  
+・そして最期には、笑顔で言うのだ  
+  
+　「人生よ、さらば！」  
+  
+　「もう一度、また会おう！」  
+  
+  
