--- a/01_03.md
+++ b/01_03.md
@@ -1,2 +1,156 @@
 # 青年期の人格形成
 
+## ●人格とは  
+・青年期を通して、人はアイデンティティの【確立】を要求される  
+・言い換えるとこれは、【人格（パーソナリティ）】の形成を要求される、という話でもある  
+  
+・一般に、人格は三つの要素から成るとされる  
+１：［能力］（知能や技能）  
+２：［気質］（感情的なもの。涙もろい等）  
+３：［性格］（その人が意志を持って、こういう事をしやすい…というもの）  
+  
+・こういう人格や性格については、心理学や社会学といった複数の学問で研究されている  
+※心理学に至っては、人格心理学という、まさにそのものみたいな名前の分野もある  
+  
+・例えば、先に出たフロイトの弟子カール・グスタフ・［ユング］  
+・彼は、その人の心が外に向かうか内に向かうかで、人の性格を分類した  
+・いわゆる、［内向性］、［外向性］という奴である  
+※社交的で話好きなのが外向的の性格、内向的な性格はその逆  
+※今では一般に使われているこの単語が、実際に大衆化されたのはユング以降である  
+  
+・エドゥアルト・［シュプランガー］も性格の分類を行った学者である  
+※ドイツ帝国生まれの教育学者、哲学者であり、心理学者でもあった  
+・彼の場合は、その人が追求する価値によって、性格を分類した  
+⇒理論に重きを置くなら理論型、「カネこそ世の全て」みたいな人なら経済型、信仰に生きる人なら宗教型…というような感じ  
+  
+・アメリカ合衆国の二十世紀の社会学者デイビッド・【リースマン】もやはり、性格の分類をしている  
+・彼の場合、個々人の性格と言うよりは、特定の社会集団によって規定される人の性格を論じた  
+例１：近代以前の人間は、伝統志向型に分類される。権威への服従や、与えられた現実を（どんなに辛かろうとも諦めて）受け入れる、といった傾向がある  
+例２：近代以前の時代から近代へと移り変わる激動の時代の人間は、内部指向型に分類される。権威者や保護者によって刷り込まれた道徳によって自己を律する傾向にある。即ち、道徳を破る事を罪と考え、その罪を犯さないようにする、という傾向がある  
+例３：現代人は、【他人指向型】に分類される。他人が何をしているか、他人がどう動いているかに興味を持ち、それに合わせようとする。他人と同じでないと不安、他人と同じようにしていないと爪弾きにされないか不安、というような不安によって、こういう傾向が生まれる  
+  
+  
+## ●理想（とされる）人格  
+  
+・現代日本は近現代の欧米的な文化を色濃く受け継いでいる  
+・故に、近現代の欧米で理想とされたような人格が、望ましい人格とされやすい  
+  
+・この点でよく挙げられるのが、ゴードン・ワイアード・［オルポート］が考えたもの  
+⇒二十世紀のアメリカ合衆国の心理学者。フロイトを否定する形で心理学を発展させた学者の一人  
+・オルポートは六つの基準を挙げて、現代的で穏やかな人格こそ成熟した人格だと論じた  
+例１：自分だけでなく他者にも関心を持つ  
+例２：情緒が安定しているとか  
+例３：他者を理解し尊重しまた他者と協調できる  
+  
+・また、以前挙げたマズローの欲求段階的な考え方も、望ましいものとされやすい  
+・つまり、人は最終的に自己実現に向かうという考え方は、是とされやすい訳である  
+・言ってみれば、肯定的な【生き甲斐】とか【生きる意味】を持つ者こそ是とされやすい  
+  
+・生き甲斐について、倫理分野でよく挙げられるのは［神谷美恵子］  
+⇒大正生まれで昭和の末に死去した、日本の精神科医。ハンセン病患者の療養所で活動した  
+・生きる意味について、倫理分野でよく挙げられるのはヴィクトール・【フランクル】  
+⇒第二次世界大戦では強制収容所に入れられた、ユダヤ系の心理学者  
+  
+・特にフランクルは、その著書［『夜と霧』］と合わせて紹介される事が多い  
+・彼は強制収容所にいるような一見不幸な人間でも、生きる意味があれば幸福を感じられると説いた  
+⇒人は誰しも、自分の人生を意味あるものにしたいという【意味への意志】を持っている。これを健全に働かせて、生きる意味をしっかり保持していれば、どんな悲劇に直面していても人は幸せを感じられるのだ…というような感じ  
+  
+  
+  
+  
+## ●人格形成  
+### 〇人格形成の困難  
+・一般に教育現場や保護者は、「青年が、理想とされる人格を形成する」事を期待する  
+・結局は本人次第なのだが、青年期に人格を形成した方がいいというのは間違いない  
+⇒人格を形成しない、つまりアイデンティティを確立しないという事は、幼稚園生みたいなメンタルでずっと生きるという事なので…大抵の人にとってそれは嫌な筈なので、まぁやった方がよい  
+  
+・とは言え、人格を形成する、アイデンティティを確立する、と言っても簡単な話ではない  
+・簡単じゃないから、「私は××社の企業戦士！」とか誤魔化してる成年も多いのである  
+・青年期の場合、二次性徴によって身体が変化しているので余計である  
+⇒ただでさえ身体が変化しているのに、自分らしい特性を身に付ける【個性化】や、社会に適応する為の知識や技能を身に付ける【社会化】までしなければいけない。そりゃあ大変に決まっている  
+・しかも、所属集団という裏技の使用も禁じられている  
+  
+・そういった事情は置いておいても、人格の形成には、様々な変化と困難が伴う  
+  
+・例えば、【友情】や【愛情】といったものも大きく変化する  
+⇒幼稚園とか小学校の頃（つまり完全な子供の頃）の友人と言うと、大人になってからも付き合いが続いている事は少ない。一方、青年期以降の友人は、一生の付き合いになる事もそれなりにある。これはつまり、青年期の人格形成によって、友情とか愛情というものが深まったのである  
+※今思えば「あの頃の俺何考えてたんだろう」みたいな子供の頃の友人と、自分というものがある程度確立された青年期以降の友人、どっちが長続きしやすいかという話である。愛情だって、幼稚園生の頃の恋と高校生の恋では全然違う  
+  
+・一方で、深まったから何でもいい訳ではなく、［ヤマアラシのジレンマ］という困難も発生し得る  
+⇒「あ、この人いい人じゃん。もっと仲良くしたい。もっと深く知り合いたい」と、距離感を近付けていったら、互いの嫌なところが見えてきてしまった…みたいな奴。青年期に特有のものではないが、まともな人格を得たばかりで深い友情、深い愛情の経験が少ない（言い方を変えれば他人との距離感を調節した経験が少ない）青年からしてみると、困難には違いない  
+  
+・また、青年期には【劣等感】も強くなりがちである  
+・これは、青年期になって人格の形成が行われた結果、自他の境界が強くなって起こる  
+⇒根本的に、児童期の完全な子供というのは、自他の境界が曖昧である。例えば、幼稚園や小学校低学年の教室で、一人が泣いたら次々と他の子も泣き始める…という事がよくある。これは、子供にとって自他の境界が曖昧なので、他人が悲しいと自分まで悲しくなって泣いてしまうのである。このように子供は、自分と他人の区別をつけるのが下手なので、他人が優秀で自分が負けているとなっても、劣等感を感じづらい  
+⇒青年期になると人格の形成が進み、自分と他人を区別できるようになる。他人が悲しくても自分は関係ないと思えるようになる。しかし一方で、自分と他人を区別できるようになった結果、自分より優秀な他人を見た時の劣等感というものも、きちんと感じられるようになってしまう  
+  
+※要は、青年期に劣等感が強くなるというのは、「今までまともに感じていなかった劣等感という感情を、この歳になってはっきり認識できるようになった」という話。そして、新しい感情を投げつけられれば戸惑うのは人の理である  
+### 〇人格形成の研究  
+・このように、青年期は変化の時期であり、人格の形成には困難も伴う  
+・当然、このような困難を学問が研究していない訳がない  
+・この手の研究で第一に挙げられるのは、やはりエリク・ホンブルガー・【エリクソン】であろう  
+⇒ドイツ帝国生まれの二十世紀の心理学者。アイデンティティという概念を考えたのもこの人である。そしてこの人もまた、フロイトの影響を受けた人物である  
+  
+・エリクソンは、［ライフサイクル（人生周期）論］で有名である  
+・彼は自らのライフサイクル論で、人間の人生を八つの発達段階に分けた  
+・そしてそれぞれの段階に、解決すべき課題、即ち【発達課題】があるとした  
+  
+・例えば彼は、四十～六十五歳を壮年期、六十五歳以上を老年期としている  
+・老年期なら、「この人生でよかったか」という質問に「よかった」と答えられるようにするのが課題  
+・壮年期なら、後輩や自分の子供を含む、次世代を世話する事が課題  
+⇒ここで「俺さえよけりゃあいいんだ」とやって課題をすっぽかしてると、周囲には誰もいなくなって、老年期が寂しくなるよ。そうなると「この人生でよかったか」という質問に「よかった」と答えるのは難しくなるよね…と、こういう感じ  
+  
+・彼は、自らの設定した発達段階に於いて、十二歳～十八歳を青年期とした  
+・そしてこの青年期の発達課題こそ、【アイデンティティの確立】であるとした訳である  
+  
+・ちなみに発達課題という意味では、ロバート・ジェームズ・【ハヴィガースト】もよく挙げられる  
+⇒二十世紀、アメリカ合衆国の教育学者  
+・彼の青年期の発達課題は、結構詳しい。例えば…  
+  
+・同年代の男女と、より成熟した新しい関係を築くことができる  
+・両親やその他の親族から精神的に自立する  
+・行動の指針となる価値観や論理体系を身につけ、イデオロギーを持つ  
+・社会的責任を果たすやり方を身につける  
+  
+・こんな（↑）感じ  
+・「人格の形成」「アイデンティティの確立」といった大方針は一緒だが、より具体化されている  
+  
+・同じく発達課題を論じた人間として有名な人物として、ジャン・［ピアジェ］がいる  
+⇒二十世紀、スイス誓約者同盟の心理学者  
+・彼は児童心理学者なので、彼の設定した発達段階も児童期までである  
+・ただ「子供から大人への過渡期」という意味では青年期と関係するのでここで紹介する  
+  
+  
+・ピアジェは、子供の特徴として自己中心性を挙げる  
+⇒我儘、という意味ではない。要は、「相手の立場でものを考えられない」という話。自分が楽しいと思うものは他者も楽しいと思う。かくれんぼする幼稚園児が目隠しして「隠れた！」と言ってるのは、まさに、「相手の立場でものを考えられない」自己中心性による  
+  
+・そして彼は、子供が成長して青年や大人に向かっていく上で大事なものとして、［脱中心化］を挙げた  
+・脱中心化とはつまり、「相手の立場でものを考えられない」を脱する事である  
+・「相手の立場でものを考えられる」というのが、脱子供の重要な要素であるとした訳である  
+  
+  
+### 〇その他人格形成あれこれ  
+・ともあれ、青年期に人格を形成し、アイデンティティを確立するのは必要である  
+・いわば、自己を確立する事は必要である  
+  
+・一方で、これが困難な仕事である事も間違いはない  
+・時には、アイデンティティの【拡散（危機）】と呼ばれる困難に直面する事もある  
+⇒「アイデンティティの拡散」とは要するに、アイデンティティの確立が上手くいかない状況の総称。「もう駄目だ」と思い詰めてしまうとか、本来やるべき事から逃げて全然関係ない事に没頭するとか  
+※ここで実例を一つ。私の同窓で、大学で繰り返し留年し、「今年留年したら退学」となっても大学に行かなかった人がいました。じゃあ何してたかと言うと、公務員試験の勉強して、大学は退学になりましたが公務員試験に受かって地方公務員になりました。「本来やるべき事から逃げて全然関係ない事に没頭する」ですね。彼はその後しばらくして、メンタル壊して音信不通になりました  
+  
+・青年がこのような危機に直面するのは、分かり切っている  
+・分かり切っているが故に、通常、社会は成年に対し、自らの発達課題を解決する猶予を与える  
+・これがいわゆる【モラトリアム】というものである  
+・現代日本で言えば、高校や大学はモラトリアムの一種と言えるだろう  
+  
+・前から何度も言っているが、青年はなかなかに無茶振りをされている  
+・「社会集団の所属もなしに宙ぶらりんの状態で自己を確立しろ」と言われているのである  
+・だから、モラトリアムも当然のものと言える  
+  
+・このモラトリアムは、当然だが、社会的責任を負わなくていい、いわば「ラク」な期間である  
+・しかも現代日本の労働条件は地獄みたいになっており、普通はそんな地獄に飛び込みたいと思わない  
+⇒この辺は経済分野でどうぞ  
+  
+・そうなってくると、「いつまでもモラトリアムでいたい」になるのは当然である  
+・精神科医小此木啓吾は、そのような精神の人間を［モラトリアム人間］と呼んだ  
+・いわゆる引きこもりや［ニート］の増加も、この文脈で捉えられる事がある  
