--- a/03_04.md
+++ b/03_04.md
@@ -1,2 +1,163 @@
 # イギリス経験論
 
+  
+・“万学の祖”アリストテレスの演繹法を受け継ぎ、発展させた正統後継者、大陸合理論  
+・一方、アリストテレス的な演繹法を批判した者達も、後期～ポストルネサンス期に出現する  
+・それが、イギリス経験論と呼ばれる哲学者達である  
+・大陸合理論の祖はデカルトだったが、イギリス経験論の祖はフランシス・【ベーコン】である  
+  
+  
+  
+## ●フランシス・ベーコン  
+・イギリス経験論の先駆者がベーコンである  
+・イングランド王国に生まれ育ち、“平和王”ジェームズ一世に仕えた  
+・ルネ・デカルトよりは三十五歳若いが、同じく後期ルネサンスの人間である  
+⇒ベーコンはルネサンスが終わる三十年戦争期に死ぬが、デカルトは三十年戦争が終わってもしばらく生きているので、「ベーコンは後期ルネサンスの人」、デカルトは「末期ルネサンス～ポストルネサンス最初期の人」という感じとも言える  
+※そういう訳で、ベーコンは「ルネサンスの人文主義者」的な要素もある。それこそトマス・モアと同じようにユートピア文学も書いている。それが【『ニュー・アトランティス』】である  
+  
+・ベーコンは経験論の先駆者だが、一方で近代科学の扉を開いたとも言われる人物である  
+・彼がこのように言われるのは、実験と観察を極めて重視した人物だったからである  
+・様々な実験を行い、その結果を観察する  
+・その実験と観察がやがて、普遍的な法則や真理へ辿り着く  
+・一般に【帰納法】と呼ばれるやり方だが、ベーコンはこれを重視した  
+⇒既に見たように、デカルトに始まる大陸合理論で重視されたのは【演繹法】。ある前提を設置して、その前提から理性的に、合理的に推論を行い、答えを得る  
+  
+・演繹法だと結局、前提がなければ何の話もできない  
+・つまり、「今手元にある前提」に話が限定されてしまう  
+・今までの常識にはなかったような、新しい物事を知りたいという場合、演繹法は適切でない  
+⇒極端な話、「１＋１」という前提を与えたら「２」、というのが演繹法である。言ってみれば「よく考えてみれば当たり前の事だった」みたいな知識を得るのが演繹法なのであって、新しい物事を知るには適さない  
+・今までになかった新しい知識とは、基本、実験と観察によって得られる  
+・ベーコンは、そういう新しい知識が得られる帰納法というやり方を重視したのである  
+  
+・但し、帰納法にも問題はある  
+・演繹法は、結果を間違えるという事があまりない  
+⇒「１＋１」という前提なら皆「２」と答える。もし答えが「３」になるなら、前提が間違っている（実は前提が「１＋２」だった）、結果に至るまでの理屈に間違いがある（計算を間違えた）のどちらか。この二つさえ起きなければ、演繹法で間違った結果が出るという事はない  
+  
+・一方、実験と観察によって結論を導く帰納法は、間違った結論を導きやすい  
+・それこそ、実験のやり方が間違っているかもしれない  
+・観察したはいいが、先入観バリバリで見てしまっていて、誤った見方をするかもしれない  
+・ベーコンが偉大だったのは、五百年以上前に生まれた人間ながら、その点を認識していた点である  
+  
+・彼は、帰納法を誤らせる偏見、先入観といったものをまとめて【イドラ】と呼んだ  
+⇒本来は偶像という意味を持つラテン語である  
+・ベーコンは、イドラを四種類挙げ、こういった偏見による誤謬を避けねばならぬと指摘している  
+  
+|                |                                                                                          |  
+|----------------|------------------------------------------------------------------------------------------|  
+|イドラの種類    |説明                                                                                      |  
+|【種族】のイドラ|人間特有のもの。夜、風に揺れるカーテンを幽霊と見間違える…等                              |  
+|【洞窟】のイドラ|狭い洞窟から世界を見ているような、自分の狭い経験、教育、習慣等による偏見、先入観によるもの|  
+|【市場】のイドラ|伝聞による偏見。噂で悪い人らしいと聞いた人と、そういう先入観を持って付き合ってしまう…等  |  
+|【劇場】のイドラ|権威による先入観。権威ある学説を無批判に信じ込んでしまう事で発生する偏見、先入観          |  
+  
+  
+・このように、ベーコンは実験、観察によって新しい知識を得る事を追求した  
+・実験、観察という「経験」によって、帰納法で、新しい知識を得ようとした  
+・これが、イギリス経験論の始まりである  
+  
+・ちなみに、ベーコンは、経験の重視と帰納法によって何をしようとしたかと言うと…  
+・実は、自然を征服しようとしていた  
+・ベーコンは、自然を征服し、服従させ、操作する事によって、人類を幸福にしたいと考えていた  
+⇒実際、現在人類が快適に暮らしているのは、自然を征服し、服従させ、操作しているからである。例えば、クッソ暑い夏であっても室内が涼しいのは、「室内の温度」や「室内の湿度」といった自然を、エアコンが操作しているからと言えよう  
+  
+・これを表した彼の言葉が【「知は力なり」】である  
+※正確には、一字一句この通りの事を言った訳ではないらしい。だがそういう意味の言葉を、【『新機関（ノヴム・オルガヌム）』】という本に書いている。ちなみにこの本には、実験と観察による経験の重視や、イドラについて書かれている  
+  
+  
+  
+## ●イギリス経験論の発展  
+### 〇ジョン・ロック  
+・イギリス経験論の祖にあたる先駆者がフランシス・ベーコンである  
+・ところで、デカルトは「大陸合理論の祖にして、近代哲学の祖」とされる事がある  
+・実際のところ、ベーコン以後のイギリス経験論は、デカルトに対する批判をしながら発展している  
+⇒イギリス経験論は、ベーコンの考え方を受け継ぎつつ、デカルトに対する批判を行いながら発展していった思想潮流、と言えるだろう  
+  
+・そんな中で、イギリス経験論の父と呼ばれる事もある大物が、ジョン・【ロック】である  
+・イギリス経験論の中でも特に重要な概念、［タブラ・ラサ］を指摘したのはロックである  
+・これは要するに、「人が生まれつき知っているものなんてない」というものである  
+  
+・実際、人は生まれたばかりの時は、何も知らない  
+・赤ちゃんは何もできない。強いて言えば泣くぐらいで、本当に何もできない  
+・人は生きていく中で、知識を獲得していくのである  
+・つまり、人が人らしくなるのは、そうなるよう人に育てられているからである  
+・逆に言えば、そういう教育を受けなかった場合、人らしくはならない  
+・実例として、幼児が犬に育てられたら、犬のようになったという話もある  
+⇒両親に育児放棄されたウクライナの少女が、三歳頃から犬と共に暮らし始めた。以後犬の群れの中で生きるようになった彼女は犬のように四つ足で歩き、吠え、口だけでものを食べ…と犬のように育ってしまった、という話がある。オクサナ・マラヤというまだ存命の人物の話である  
+  
+・こういうところから、ロックは「生まれたばかりの赤ちゃんの精神は白紙（タブラ・ラサ）のようなものだ」と言う  
+・白紙の精神に、人としての振舞い方を書き込んだり、知識を書き込んだりする  
+・そうやって人は人間らしくなんていくんだと、ロックはそう主張した  
+  
+・この経験の重視志向は明らかにベーコンを受け継いだものである  
+・一方で、タブラ・ラサという考え方は、デカルトへの反発でもある  
+  
+～ここから引用～  
+・例えばデカルトは、人は神や善悪といったものを［生得（本有）観念］として持つ、と言っている  
+・要するに、人は生まれつき、神や善悪を知っている、と言っている  
+・この世は悪霊が見せている夢かもしれない、と言っていた彼はどこへ行ったのか…  
+～ここまで引用～  
+  
+・「人は生まれながらに観念を持つ」という考え方に、イギリス経験論の父は異を唱えたのである  
+  
+・ちなみにジョン・ロックは、社会契約説という分野で非常に重要な役割を果たした思想家でもある  
+・社会契約説については、別の項目を設けてそこで解説する  
+  
+  
+### 〇デイビッド・ヒューム  
+・経験の重視、タブラ・ラサという概念  
+・この二つを受け継いだ、イギリス経験論のエースが二人いる  
+・この二人のうち、経験論の完成者と呼ばれるのが、デイビッド・［ヒューム］である  
+  
+・ヒュームは、経験の重視とタブラ・ラサという概念から、デカルトの第一原理を考えた  
+・確かに、「我思う、故に我あり」は間違いない話だろう  
+・何もかもを疑って、今目の前に見えている現実すら、夢かもしれないと疑っても…  
+・それでも、「夢かもしれない」と疑っている「私」が存在する事そのものは、否定し得ない  
+・だがその「私」とは、一体どのようなものか？  
+  
+・人間の精神は生まれた時には白紙（タブラ・ラサ）なのだから、最初から確固とした「私」がある訳ではない  
+・「暑い」「寒い」「美味しい」「不味い」といった、知覚という経験の積み重ねが「私」を作る  
+・言い換えれば、デカルトの言う「私」とは、そういった知覚の集合体、［知覚の束］に過ぎない…  
+・ヒュームは、そう考えたのである  
+  
+・ヒュームはこのように、経験の重視による懐疑を徹底した人物である  
+・徹底した懐疑により、彼は、デカルトの第一原理の意味を、ぎりぎりまで限定してみせた  
+  
+・彼の懐疑はあらゆる分野に及んだ  
+・例えば彼は、科学や神にも懐疑の目を向けた  
+・科学は所詮、実験という経験の積み重ねである  
+・その積み重ねで、「AによってBが起こる」と言うのが科学である  
+・しかし、ではそれが真理なのか？　と言われるとそうとは限らない  
+⇒科学によって明らかになった「事実」とは、言ってみれば、百回同じ実験して同じ結果が出たから事実、というようなものである。百一回目の実験で違う結果が出たら、「事実」ではなかった…という程度のものでしかないのだ  
+  
+・神だって、生まれながらに人間が知っている…なんて話、ある筈がない  
+・ヒューム以前は、経験論の哲学者ですら「神は例外」と言っていた  
+・「人間の精神は、生まれた時は白紙」「あ、神は例外ッス」、という具合で  
+・しかしヒュームは、「タブラ・ラサなら神なんて知らないだろ」と言ったのである  
+・神もまた、人間が経験によって生み出したものに過ぎない、と  
+  
+・こうしてヒュームによって、経験の重視とタブラ・ラサを特徴とするイギリス経験論は完成したのである  
+  
+  
+### 〇ジョージ・バークリー  
+・イギリス経験論が生んだもう一人のエースが、ジョージ・［バークリー］である  
+・彼もまた、経験の重視とタブラ・ラサを受け継ぎ、徹底した人物なのだが…  
+・バークリーの哲学が向かった先は、「存在するとはどういう事か」というところである  
+  
+・当時、いや現代でも、人々は存在について以下のように考えている筈である  
+・即ち、林檎なら林檎、机なら机という存在が、この世には確固として存在している  
+・そしてその存在を、我々の五感が捉えて、林檎や机という存在を知覚する…と  
+  
+・しかし、経験を重視し、徹底するバークリーは、そうではないと考えた  
+・もし「この世に確固として存在しているが、我々には知覚できないもの」があったとしたら？  
+・例えば幽霊はこの世に確固として存在しているが、我々の五感では一切、知覚できないとしたら？  
+  
+・「幽霊はいるかもしれないね」「見えないから、証明できないけど」という主張  
+・これに対して人は普通、「それは存在しないって言うんじゃ」と反応するのである  
+  
+・こうして、バークリーは「存在するとはどういう事か」という問いに、経験論的な答えを出した  
+・即ち、「存在するとは、知覚されたという事である」と  
+  
+・デカルトが方法的懐疑でやったように、この世は悪霊が見せている夢かもしれないのだ  
+・この世に確かに存在すると思っているものも、全て幻かもしれない  
+・故にこそ、「確固としてこの世に存在しているものを、我々が知覚している」は適切でない  
+・唯一確かな「私」によって「知覚」される、これこそが、存在するという事なのだ  
