--- a/04_01.md
+++ b/04_01.md
@@ -1,2 +1,145 @@
 # フランス啓蒙主義
 
+  
+|                                                                                                                                                                                                                                                                    |  
+|--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|  
+|本節で扱う思想家一覧                                                                                                                                                                                                                                                |  
+|ラ・ブレード＝モンテスキュー男爵シャルル＝ルイ（1689年1月18日 - 1755年2月10日）<br>“ヴォルテール”フランソワ＝マリー・アルエ（1694年11月21日 - 1778年5月30日）<br>ジャン＝ジャック・ルソー（1712年6月28日 - 1778年7月2日）<br>ドゥニ・ディドロ（1713年10月5日 - 1784年7月31日）|  
+  
+  
+・教科書的には1453年に始まり、フランス革命もしくはナポレオン戦争まで続く、近世という時代  
+・この時代は、1640年代末までとそれ以降で、明確に違う  
+⇒1648年に終わる三十年戦争、そして1649年に終わる清教徒革命。これ以降と以前で、明らかに違う  
+  
+・1640年代末以降、絶対主義の時代がやってくる  
+・王権神授説で見たような、王の命令が隅々にまで行き渡る、中央集権的な国  
+・そういう国が次々と登場するのである  
+  
+・また、思想的には、理性の重視が更に進んだ時代であった  
+・即ち、「迷信深いこの時代を、理性の光で照らそう」という【啓蒙思想】が流行ったのである  
+⇒これに触発されて、「王として、まだまだ迷信の闇に沈んでいる国民を理性で導いてやらねば」という王が次々と登場した時代でもある。代表例はプロイセン王国のフリードリヒ大王  
+  
+・さて、このような啓蒙思想は、主にフランス王国で流行った  
+・と言うのは、1650年代に入った時、欧州最強国家がフランス王国だったのである  
+⇒スペイン王国とポルトガル王国は近世初期に全盛期を迎え、1650年代はその後の衰退中。イタリア地域もルネサンスが終了した後の衰退中。ドイツ地域は三十年戦争で三十年間戦場になり続けて荒廃。ブリテン島は清教徒革命の結果、「軍部の独裁政権」みたいな奴の先駆けが誕生…と、どこもかしこもガタガタだった。フランス王国だけが、強力な国家として存在していた  
+  
+・フランス王国はこの好機を逃してしまい、1710年代にはフランス王国の一強状態は終わるのだが…  
+※当時の王、“太陽王”ルイ十四世が調子に乗り過ぎた結果、他の欧州国家から袋叩きにされた  
+・それでも、この時期以降、フランスは欧州の「先進国」となった  
+・欧州人が憧れる国、文化の都、各国の知識人がこぞって留学する国…  
+・それは、フランスになったのである  
+・そういう場所で啓蒙思想が出てくるのは、自然な流れと言えよう  
+  
+  
+## ●フランスの啓蒙思想家達の特徴  
+・大体、十八世紀に入ると、フランスの啓蒙思想家が次々と登場してくる  
+・彼らには大抵、ある程度の共通点があった  
+１：理性を信頼し、重視する理性主義者、合理主義者である  
+２：イギリスの影響を受けている  
+３：人権（自由）を重視する  
+４：無神論、唯物論的な傾向がある  
+  
+・１に関しては、当然と言えば当然である  
+⇒啓蒙思想というものそのものが、「迷信深いこの時代を、理性の光で照らそう」というものであるから、逆にそうでないとおかしい  
+  
+・３は、２の結果である  
+・この時期には既に、清教徒革命どころか名誉革命も終わっている  
+・だから当然、ジョン・ロックの国民主権の考え方はもうあった  
+・それに1710年代からは、現代のイギリスの民主主義政治の基本が出来上がった  
+⇒1714年に国王となったジョージ一世はドイツ人であり、しかも五十を過ぎてからイギリスに招待され、即位した。それ故、基本的には、議会の有力政治家に内政を任せっきりにした。ここから、国王は「君臨すれども統治せず」、政治は議会の選挙で勝った政治家がやる、という現代の民主主義政治の原形ができたのである  
+  
+・このようなイギリスの影響を、フランスの啓蒙思想家達は多分に受けた  
+・国王の専制、圧政による政治は駄目だとか  
+・人間が人間たる権利、人権が大事だ、とか  
+・そういう事を考え始めるのである  
+※人権という発想が出てきたばかりのこの頃、人権と言えば「自由」であった  
+  
+・４は、１の結果である  
+・つまり、「理性的に考える」「合理的に考える」というのを突き詰めると、宗教の入る余地は減っていく  
+⇒となれば、本人はキリスト教徒のつもりだったとしても、傍から見れば「こいつ無神論者じゃん」、というのは当然起こってくる訳である  
+  
+～ここから雑談～  
+　政経や現代社会でやるように、最初の人権が「自由」だった主な原因は、基本的には「もっと自由に金儲けさせろ」という富裕市民の要求である。実際、この後起こるフランス革命で重視されたのは「国家は国民の商売に口を出すな」「もっと自由に金儲けさせろ」という意味での自由権であり、人権であった。  
+　一方で、この自由という発想は、宗教的なものでもあった。  
+　基本的には、人権という発想はプロテスタントの考え方が元になったものである。フランス人は、プロテスタントが考えた人権とか自由という発想に影響を受けた。そして、これを重視するフランス啓蒙思想家が生まれたのである。では何故、プロテスタントが自由というものを提案し、カトリックはそういう発想に至らなかったのか。これは、互いの宗教に対する態度を見れば何となく分かる。  
+　即ち、現代でもカトリックの学校だと「日曜に教会行け。義務として行け」「行ったら感想文を提出しろ」みたいなところは存在する。カトリックというのはそういう、規則でガチガチにする、という支配的な側面がある。一方プロテスタントというのは、そういう話を聞くと、百人中百人が「えー、それはやりすぎでしょー！」と言うし、何なら「毎週日曜に教会行ってますか？」と聞かれると「いや行かない人もいるんじゃない？」「皆が皆じゃないでしょ！」と答える。その一方で、そう言った全員が（まぁ俺は、日曜は毎週教会行ってるけど）と思っている…プロテスタントというのは、そういう人達である。勤勉で命じられずともすべきことをするが、窮屈な支配を嫌い、自由を重視する。  
+　プロテスタントから人権、その中でも特に自由権が出てきたというのは、プロテスタントの精神性と無関係ではないと言えよう。  
+～ここまで雑談～  
+  
+・ちなみに、社会契約説で出てきたジャン＝ジャック・ルソーもフランス啓蒙思想家の一人である  
+・ただ、ルソーは、先に挙げた四つの特徴にはあまり、当てはまらない  
+⇒社会契約説で見たように、ルソーはむしろ、イギリス社会というものを嫌っている。と言うのは、イギリスのような選挙による民主主義、即ち間接民主主義というを嫌い直接民主主義を掲げたのは、誰あろうルソーなのである  
+※以下に紹介する思想家達は、先に挙げた四つの特徴を持っている。当然イギリスの影響を強く受けており、ルソーとは対立した者が多い  
+  
+  
+  
+  
+  
+## ●百科全書派  
+・フランス啓蒙主義の代表にして典型とされるのが、【ヴォルテール】である  
+⇒ヴォルテールは筆名で、実際の名前はフランソワ＝マリー・アルエ。ヴォルテールという名前の由来そのものは不明  
+  
+・彼はまさに、フランス啓蒙思想家の典型と呼べる存在であった  
+・人間の理性を信じ、自由という人権を重視した  
+・そしてまた、専制的で抑圧的なフランス社会や、教会を批判した  
+⇒フランス王国は最も早く絶対王政を完成させた国であり、またカトリックの国だった。それ故にどうしても、圧政と紙一重の抑圧的な統治体制になりがち。だから批判される  
+※同じ絶対王政でも、プロテスタントの国で国民の人権や自由を尊重するプロイセン王国だとまた話は変わってくる  
+  
+・ヴォルテールのこういった特徴は、その著書によく表れている  
+・［『哲学書簡』］では、科学、自由（例えば信教の自由）といったものを重視し、フランス社会を批判  
+・［『寛容論』］では、プロテスタントが冤罪を着せられたのを契機に、宗教的寛容を主張している  
+  
+・ちなみに、ヴォルテールは一般に、【百科全書】派の一人と紹介される事もある  
+・これは、その名の通り、【『百科全書』】の執筆、編集に参加した者達を指している  
+⇒これの編纂に生涯を捧げた啓蒙思想家が、ドゥニ・【ディドロ】である  
+  
+・百科全書と言うからには当然、思想家、哲学者とは呼べないような者も執筆に参加している  
+・基本的には、当時のフランスの知識人を総動員して書かれたものである  
+・当然、百科全書派と言っても特定の思想的傾向がある訳ではない  
+⇒ただ、「百科全書の編集・執筆に参加している」という事実が、「百科全書派は当時一流の知識人であった」という話を証明している、とは言えるだろう  
+  
+  
+  
+  
+## ●ラ・ブレード＝モンテスキュー男爵シャルル＝ルイ  
+・イギリスの影響を最も強く受け、また発展させた者として、【モンテスキュー】を取り上げよう  
+⇒モンテスキューと通称されるが、この名前は彼の爵位がモンテスキュー男爵（兼ラ・ブレード男爵）だったところから来ている。個人としての名前はシャルル＝ルイさん  
+※ちなみに、wikipediaを含むネットで「本名はシャルル＝ルイ・ド・スゴンダ」と言われているが…まぁ100%の間違いではない。と言うか、欧州の貴族の呼び方には色々あるので、「シャルル＝ルイ・ド・スゴンダも正しいが他の呼び方もある」と思っておけばいい  
+  
+・モンテスキューが最も有名なのは、やはり【権力分立】論を唱えたところにある  
+・権力分立論自体は、既にジョン・ロックが唱えている  
+  
+・即ち、絶対王政のように、たった一人の人間に権力が集中しているのはよくない  
+⇒効率はいいかもしれないが、王が無能だった時全てが終わってしまう。誰も王の暴走を止められない  
+・だからと言って、中世のように、国に無数に存在する貴族に権力が分散しているのもよくない  
+⇒あまりにも効率が悪すぎる  
+  
+・そこで、国の権力を二つ、三つ程度に分ける  
+・そうする事で、各権力は互いが互いに牽制し合い、暴走を抑止できる  
+・また、中世欧州のように大量の権力が並立している訳でもないので、そこまで効率も悪くない  
+  
+・この権力分立論、ロックが唱えたのは議会主権的なものであった  
+⇒国の権力を、外交を担当する「国王」と内政を担当する「議会」に分けて、互いに牽制し合わせる、という発想。また、どちらの主張も平行線で妥協点が見つからない場合は議会が優越する、としている。ここから、「あらゆる国家権力は、議会の承認があって初めて、行使される」「議会の承認がなければ、誰も権力を行使できない」という、現代イギリスの政治体制が出来上がっていった  
+  
+・モンテスキューはこれを発展させて、【三権分立】を提唱した  
+・即ち、国の権力を三つに…立法権、行政権、司法権に分ける、という類の権力分立論である  
+⇒現代日本の小中学生が公民の授業で必ず習う、三権分立。これを最初に言い出したのがモンテスキューであり、その旨を述べた本が【『法の精神』】だったのである  
+  
+  
+  
+  
+## ●その後のフランス  
+・そして、主な啓蒙思想家の最晩年から、死んだ直後にかけて…  
+・絶対主義の時代は終わる  
+・アメリカ独立戦争やフランス革命に代表される、革命の時代が来るのである  
+⇒絶対主義を掲げた王に対して反乱を起こし、王の政府を打ち倒して民主主義的な政府を作り出そうという、いわゆる市民革命が連続する時代である  
+  
+・特にフランス革命に於いては、フランス啓蒙思想家の思想は存分に引用された  
+・自由、平等、博愛といった美しい言葉達は、その一例とも言える  
+⇒フランス啓蒙思想家がこれら三語をセットで使う事はなかったが、これらの言葉自体はよく使われた  
+・また、革命中は「理性の祭典」なる祭が行われたが、これもフランス啓蒙主義の影響が見て取れよう  
+⇒「俺達無神論だけどお祭はやろう」「お祭なら何か神様的なものが必要だな…理性を賛美しよう」みたいな祭。フランス啓蒙思想家の、無神論的側面や理性の信頼という側面が見て取れる  
+  
+・しかし実際には、フランス革命が生み出したものは、戦争と流血だったのである  
+⇒基本的にフランス革命と言うのは、「無策な政府に市民の不満が溜まる」「クーデター発生」「無策な政府に市民の不満が溜まる」「クーデター発生」…とこの繰り返しである。そしてこのループの中から、ナポレオン・ボナパルトというフランス版ヒトラーが出てきて、全欧州を向こうに回した大戦争を始める。いわゆるナポレオン戦争である  
+  
