--- a/04_03.md
+++ b/04_03.md
@@ -1,2 +1,84 @@
 # 社会学の誕生
 
+  
+|                                                                                                                                                                                                                        |  
+|------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|  
+|本節で扱う思想家一覧                                                                                                                                                                                                    |  
+|イジドール・オーギュスト・マリー・フランソワ・グザヴィエ・コント（1798年1月19日 - 1857年9月5日）<br>チャールズ・ロバート・ダーウィン（1809年2月12日 - 1882年4月19日）<br>ハーバート・スペンサー（1820年4月27日 - 1903年12月8日）|  
+  
+  
+  
+・理性の光はまた、社会科学と呼ばれる学問領域を大きく発展させた  
+・社会科学と呼ばれる学問領域には現在、社会学、政治学、経済学、法学、教育学等々が入っている  
+・これらは他の学問と同様、かつては哲学に含まれていた  
+・そして、ドイツ観念論の発展と前後して、これらの学問にも理性の光が当たるのである  
+  
+・まず、イジドール・オーギュスト・マリー・フランソワ・グザヴィエ・【コント】を挙げよう  
+⇒大体、ヘーゲルより二十年ぐらい若い。フランス革命が始まってから生まれ、ナポレオン戦争が終わった頃には二十中盤、という世代のフランス人  
+  
+・コントは、ナポレオン戦争の敗戦によって混乱した時代に二十代を過ごした  
+・その中で、合理主義に基づいて、科学的手法によってフランス社会を復興させようという意志を持った  
+・そういう流れの中から出てくるのが、彼の【実証主義】である  
+  
+・即ち、これまでの哲学者というのは、どうしても「神」「信仰」と切り離せなかった  
+・それこそデカルトは、あれだけしっかり方法的懐疑をやったのに、その後神は実在をするとか言い出した  
+・カントにしても、実は神の存在証明をやって、道徳の基礎に置こうとしている  
+  
+・とは言え、神の実在など本当に証明できるのか？  
+・現代人は感覚的に知っているだろうが、そんな事は不可能である  
+・そういう、証明できないもの、実証できないものは科学として扱うべきではない  
+・超越的なものに対する信仰は教会でだけやっていればよい  
+・そういうものが、いわゆる実証主義である  
+  
+・コントはまた、その考え方から、人類は段階的に考え方を進化させてきた、とした  
+・最初、人類は全ての知識を神によって説明していた。【神学的段階】である  
+・これがデカルトやベーコン以降、だいぶ科学的にはなったが、神からは離れられなかった  
+・そういう段階が、【形而上学的段階】である  
+・そしてこれからは、実証主義によって、証明と反証が可能な、完全に科学的な段階に至るのだ  
+・即ち、【実証的段階】である  
+  
+・一方、本来生物学とかそちらでありながら、社会科学に大きな影響を与えた男も、登場してくる  
+・コントより更に十年ほど若い、チャールズ・ロバート・【ダーウィン】である  
+・そう、あの【進化論】の提唱者が、ついに登場してくるのだ  
+  
+・進化論は最早一般教養と化しているので、細かく説明する必要はないだろうが…  
+・一般的に誤解されている点については、指摘しておこう  
+  
+・と言うのは、進化論とは、猿が猿人とか原人を通して現代の人間になった、みたいな奴である  
+・他によく出る例としては、キリンは元々首が短かったが、進化によって長くなった、がある  
+・【自然淘汰】によって、このような進化が起こるのだ、とダーウィンは言う  
+  
+・ここで問題になるのは、ダーウィンが言ったのは「適者生存」だという事である  
+・キリンを例に採れば、キリンは元々首が短かった  
+・それが突然変異によって、首が長いキリンが生まれた  
+・首が長い方が生存に「適して」いた為、首が短いキリンは減り、首の長いキリンは増えていった  
+※これが自然淘汰  
+・こうして、キリンは首の長い動物になった…と、これがダーウィンの理論である  
+  
+・ところがこの理論は、現代でも当時でも、一般に誤解された  
+・ダーウィンは、「強い者が生き残る」とか「優れた者が生き残る」とは言っていない  
+・あくまで生存に「適した」者が生き残る、と言っただけである  
+  
+・仮に強い者が生き残るのであれば、虎とかライオンのような肉食獣は大繁栄している筈である  
+・しかし実際には、こういう種もしばしば絶滅している  
+・強ければ生存する訳ではないし、「自然界は弱肉強食」だなんて事も当然、ダーウィンは言っていない  
+  
+・ところが当時、「世の中はよりよい社会へ向けて前進する！」という考え方が支配的だった  
+・ヘーゲルなんかまさに典型で、「人類社会は弁証法的に、理想社会へ向けて前進する！」である  
+・「世界はより優れた世界へと、理想社会へと進化する」  
+・「その進化の最先端にいるのが我々欧州人だ！」  
+・こういう意識が、明らかにあった  
+  
+・その意識と進化論の誤解を融合させたのが、ハーバート・【スペンサー】である  
+・かれは社会進化論を唱えた  
+⇒「ダーウィンの進化論が言っているように、生物はより優れた存在へと進化してきた」「社会も同じように、より優れた社会へ進化していくのだ！」というような理論  
+  
+・勿論ダーウィンは、そんな事は言っていない  
+・ダーウィンが言ったのは、あくまで「適者生存」である  
+・たまたま発生した突然変異が、たまたま生存に有利だと生き残る。それだけである  
+・優れた存在へと進化するなんて、ダーウィンは言っていないのである  
+⇒ダーウィン自身「スペンサー君さぁ…誤解なんだよなぁ…」みたいな事を言っている  
+  
+・現代でも、この社会進化論的な事を言う者は多い  
+・そういう事を言っていると、心ある人からは「ああ、学がないんだな」と思われてしまう  
+・恥をかかないように、注意しよう  
