--- a/05_03.md
+++ b/05_03.md
@@ -1,2 +1,166 @@
 # 社会主義
 
+  
+|                                                                                                         |  
+|---------------------------------------------------------------------------------------------------------|  
+|本節で扱う思想家一覧                                                                                     |  
+|カール・マルクス（1818年5月5日 - 1883年3月14日）<br>フリードリヒ・エンゲルス（1820年11月28日 - 1895年8月5日）|  
+  
+  
+  
+  
+## ●二人のドイツ人  
+・一般的に社会主義もしくは共産主義と言うと、空想的社会主義は指さない  
+・普通は、ある二人のドイツ人を祖とする思想を、こう呼ぶ  
+・即ち、カール・【マルクス】、そしてフリードリヒ・【エンゲルス】  
+・空想的社会主義を受け継いだ彼らこそ、一般的な意味での社会主義の祖である  
+※空想的社会主義と区別する為に、彼らの思想を科学的社会主義と呼ぶ場合も無い訳ではない  
+※マルクスとエンゲルスはサン＝シモン伯やローウェンを「空想的」と呼んだ。彼らは「どんな社会が理想的か」は考えたが、「そういう社会を維持するにはどうしたいいか」を考えなかった…と、マルクスとエンゲルスは言う。逆に自分達は、そういう事を考えた、だから「科学的」だ、と  
+  
+・この二人は終生を通した友人であり、協力して社会主義という思想を作り上げていった  
+・実業家で金持ちだったエンゲルスは、生涯を通してマルクスに協力し、応援し続けた  
+⇒エンゲルスはマルクスより長生きだったが、マルクスの死後、マルクスを第一バイオリン、自分を第二バイオリンに喩えている。それほどまでにエンゲルスはマルクスを応援し、資金面でも思想面でも協力し続けた。最早、金持ちのアイドルオタクが、最推しアイドルを自らプロデュースしているかのような次元であった  
+  
+・勿論、近年の研究で、マルクスの思想とエンゲルスの思想の違いがやはり判明してきている  
+・とは言え、高校倫理の次元でそこまで細かくやってもしょうがない  
+・本稿では、二人が作り上げた社会主義という思想を見ていく事にする  
+  
+・ちなみに、二人の共著として有名なのが【『共産党宣言』】と［『ドイツ・イデオロギー』］  
+・マルクス単独の著作として有名なのが【『資本論』】【『経済学・哲学草稿』】［『経済学批判』］  
+・エンゲルス単独の著作として有名なのが［『空想から科学へ』］である  
+  
+※ところで、この二人が始めた思想は、社会主義と呼ばれたり【共産主義】と呼ばれたりします。「共産主義と社会主義って何か違うの？」と言うと、まぁ違うは違うんですが、ぶっちゃけこれは神学論争みたいなもんで、言ったもん勝ちです。「俺は社会主義だ！」と言えばそいつは社会主義、ぐらいの雑な認識で構いません。本稿では、ソ連をはじめとする政治勢力として言う時は共産主義、思想として言う時は社会主義で使い分けます  
+  
+  
+  
+  
+## ●革命論  
+・社会主義の特徴はいくつかある  
+・その中でも中心的なものとして、ここでは［プロレタリア革命］を取り上げよう  
+・即ち、社会主義に於いては、資本主義社会は「よい」ものではない  
+・むしろ、「人々を不幸にする」ものであり、「必ず破綻する」。そして「社会主義に席を譲る」のだ  
+・社会主義には、そういう思想があるのである  
+  
+・では何故、資本主義は「人々を不幸にする」のか？  
+  
+・人間とは本来、孤立して存在できる動物ではない。社会的な動物である  
+⇒かつてアリストテレスが人間をポリス的動物と呼んだように、マルクスは人間を［類的存在］と呼んだ  
+・だから、資本主義であろうがなかろうが、人間は社会に参加し、労働するのである  
+・労働によって対価を得るだけでなく、社会に称賛され、承認され、満足するのだ  
+⇒実際、労働を悪とし暇を貴んだ古代ギリシア人も、結局哲学とか作詩、劇の作成みたいな文化的な労働を自発的にしていた。人間という生物は、「全く完全に、何もしない」というのはあまりないのである  
+  
+・そんな人間にとって、人間の尊厳にとって大事な、労働  
+・この労働が、資本主義下では、ただの苦痛と搾取になってしまっている  
+⇒先の「資本主義というレビヤタン」を見て分かる通り。現代日本の労働者達もまた、劣悪な労働環境に苦しんでいる  
+  
+・本来、機械は、人々を豊かにする為に生まれたモノな筈である  
+・機械によって商品を大量生産できるようになれば、楽をしてカネを稼げるようになる  
+・だからこそ機械は発明され、普及した筈であり、だからこそ産業革命も起きたのである  
+  
+・だがその結果、どうなったか？  
+・人々は一日に十時間以上働かされ、縄に寄りかかって寝なければならなくなった  
+・これならまだ中世の方がまし、とすら言える状況であった  
+⇒同じイギリスで比較してみると、産業革命期以降の工場労働者の労働時間は、中世の農民の2倍から1.5倍もある  
+  
+・最早、「人間の為の機械」ではなく、「機械の為の人間」になってしまった訳である  
+・このような、人間としての本質が、人間の外部に置かれてしまう事を［人間疎外］と呼ぶ  
+⇒この場合は、人間としての本質が「機械の為」になってしまっている  
+・そして資本主義下で起こる疎外を、マルクスは【労働の疎外】と呼んだ  
+  
+・何故、こんな事になってしまったのか？  
+・資本主義の本質である、「自由で開かれた市場での、自由な競争」が原因である  
+・アダム・スミスが理論化したように、資本主義社会では、各人の利己心が正当化される  
+・「もっと金儲けしたい」。即ち、「自己の利益を最大化」したいという心理に基づいて行動する  
+  
+・そうなると例えば、資本家（金持ち。工場長とか社長）は何をするか？  
+・経営者からしてみると、有能な社員とは「タダ同然の給料」で「いくらでも働く」者である  
+⇒長時間働く社員が多ければ、それだけ沢山の商品が生産できる。それを売れば儲かる  
+⇒社員の給料を下げて商品の値段がそのままなら、経営者の懐に入るカネが増える  
+  
+・こうして、資本家が「自己の利益を最大化」しようとすると、労働者の待遇は悪化する  
+・そして労働者（社員）と資本家（経営者）だと、資本家の方が強い  
+⇒当たり前の話で、「もっと給料上げろ」とか言ってくる面倒な社員がいれば、クビにすればいいだけの事である  
+  
+・このように、資本主義は【資本家（ブルジョワジー）】が【労働者（プロレタリアート）】を搾取する構造を生む  
+⇒その方が儲かるのだから、仕方ない。しかも資本主義社会は「自己の利益を最大化」する事を肯定する社会なのだから、尚の事、仕方ない。資本主義は「そういうもの」なのである  
+・市民革命や産業革命は、結局、人々を資本家階級と労働者階級に分けるものに過ぎない  
+・中世の社会が、人々を貴族と農奴（半奴隷の農民）に分けていたように  
+・古代の社会が、人々を市民と奴隷に分けていたように  
+・新しい搾取の構造が誕生したに過ぎないのである  
+・新しい【階級闘争】が始まるに過ぎないのである  
+  
+・だからこそ、労働の疎外が発生する  
+・そしてだからこそ、資本主義は「必ず破綻する」と、社会主義は唱えるのである  
+  
+・確かに、一人一人の労働者は、資本家には敵わないかもしれない  
+・「面倒な社員はクビや」と言われたら終わりな訳だから、確かにそれはそうである  
+・しかし労働者と資本家なら労働者の方が、数は多い  
+・そして資本主義社会に於いては、資本家が労働者を搾取し、労働者は不満を貯めるのである  
+  
+・やがて、この溜まりに溜まった不満は暴発し、革命になるに違いない。社会主義は、そう考える  
+・即ち、労働者による資本主義社会を破壊する革命。［プロレタリア革命］である  
+  
+・この革命によって、資本主義は社会主義に席を譲る  
+・革命によって資本家は打ち倒され、労働者の国になる  
+・社会主義を実現した国は労働者の楽園になる  
+・これは、歴史の必然である  
+・社会主義は、このように考える思想なのである  
+  
+  
+  
+## ●社会主義の定義  
+・では具体的に、社会主義を実現した社会とは、どういうものなのか？  
+・政経や現代社会の経済分野でやるのだが、特徴づけるものが二つある  
+・即ち、【生産手段】の【公有】と【計画経済】である  
+  
+|            |                                            |                |  
+|------------|--------------------------------------------|----------------|  
+|            |資本主義                                    |社会主義        |  
+|生産手段    |私有を認める                                |公有            |  
+|利潤の追求  |認める                                      |認めない        |  
+|経済の計画性|無計画（修正資本主義の場合、経済計画はある）|計画経済        |  
+|景気変動    |起こるもの                                  |理論上は起きない|  
+  
+  
+・資本主義は、土地、機械、工場等といった、生産手段の私有を認める  
+・だからこそ、生産手段を持つ資本家が、持たない労働者を搾取していた訳である  
+・そんな体制を破壊しよう、というのでプロレタリア革命が起きる訳だ  
+・故に、プロレタリア革命後の社会主義が実現された社会では、生産手段は公有のみとするのである  
+⇒社会主義の理論では、「生産手段が社会化される（みんなのものになる）」という言い方。なので公有。ただ、現実の社会主義経済国家は原則、生産手段の【国有化】を行っているので、「【生産手段】の【国有】」という言い方でも別に間違いではない  
+※全ての生産手段が公有である以上、社会主義国家に於ける全ての経済活動は公共事業、とも言える  
+  
+・また、資本主義は利潤の追求を認め、それ故に自由競争に任され無計画な経済だった  
+・一方、社会主義は利潤の追求を認めず、経済は全て計画的に行われる  
+⇒その為、無計画な資本主義と違って、不景気と好景気を繰り返すような事はない。社会主義経済は常に一定の成長を行い、景気の変動は起こらない。理論上は、そういう事になっている  
+  
+  
+  
+  
+## ●史的唯物論  
+・また、マルクスは歴史についても色々書いていて、彼の史観は【唯物史観】と言われる  
+⇒【史的唯物論】とも言う  
+  
+・彼は、物質的な「生産」こそが、あらゆる歴史の【下部構造（土台）】であるとした  
+・そして、政治とか宗教とか文化というものは、その上に乗っかっている【上部構造】だとした  
+⇒あらゆる物質的な、商品の生産。農作物の生産、工業製品の生産…そして、その為に結ばれる人間関係（【生産関係】）や、その社会に於いてどれぐらいの商品が生産できるか（【生産力】）。そういうものが、歴史の土台になっている、とした  
+  
+・ところで、マルクスの書いた事というのは誤解されて後に伝わったものが異様に多い  
+⇒いわゆる共産主義についてすら、マルクスは生前から共産主義者に対し、「あいつらが共産主義者なら俺は共産主義者じゃねーよ」みたいな事を言っている  
+・唯物史観についてもそうで、「下部構造が上部構造を規定する」というものだとして広まった  
+・物質的な生産、言い換えれば経済のありようが政治とか宗教を決める、という論として広まった  
+⇒実際にはマルクスは、「下部構造が上部構造を規定するのと同じぐらい、上部構造から下部構造への影響ってのもあるよ」みたいな事を言っている  
+  
+・他にも、唯物史観とは「人類の歴史は必ず以下のように発展する」という見方だと誤解されてきた  
+原始共産制→古代奴隷制→中世封建制→近代資本主義→共産主義  
+・だから戦後の日本の歴史学者は、以下のような議論を割としていた  
+「日本だと中世封建制は鎌倉時代なんじゃないか？」  
+「いや、鎌倉までは古代奴隷制で室町からが中世封建制では？」  
+・じゃあ実際のところどうか？  
+・実はマルクスは、「この考え方は西欧のみにしか適用できない仮説です」みたいな事を言っている  
+  
+・このように「マルクスの言った事」と「マルクスの言った事として広まったもの」は違うのでややこしい  
+・実際、社会主義も、「マルクス＝エンゲルスの頃」と「マルクス＝エンゲルス以降」では全く違う  
+・マルクスとエンゲルス自身は、結局のところ思想家であった  
+・社会主義革命に向けて動いていはしたが、特筆するような事ができた訳ではなかった  
+  
+・しかしこの二人の思想は、後世、“恐るべき子供達”を生み出す事になるのである  
